二十章之前的部分校对与翻译补充

--- a/OEBPS/Text/c001.xhtml
+++ b/OEBPS/Text/c001.xhtml
@@ -95,7 +95,7 @@
     <p>梅赛德斯认为。现状也算是生活好了。</p>
     <p>好象受到着只有最低限度的生活费，一边承蒙作为唯一的仆人的老婆婆的帮助以母亲和女儿细小地一边生活。</p>
     <p>但这不会永远持续下去。母亲和自己能这样生活，是因为自己有勉强继承家名的权利……不过，没有优先级等于没有的继承权。</p>
-    <p>格鲁内瓦特的名字将由本妻之子继承吧。那倒不错，问题在那之后。</p>
+    <p>格鲁内瓦特的名字将由正妻之子继承吧。那倒不错，问题在那之后。</p>
     <p>如果正式决定了格鲁内瓦特的继承人，以自己为首不知有多少人的侧室的孩子全都不需要。</p>
     <p>看到这种粗鲁的对待，还会有决定继承人之后也会给予照顾的想法，也太过乐观了。</p>
     <p>……母亲都被抛弃了。那种程度的事还是预先预测一下比较好。</p>
