--- a/OEBPS/Text/c003.xhtml
+++ b/OEBPS/Text/c003.xhtml
@@ -96,12 +96,12 @@
     <p>然后变成轻微的无重力状态，用力地踢空中。</p>
     <p>这时，梅赛德斯的身体因反作用而飞起，降落到都城前。</p>
     <p>梅赛德斯等人所居住的房子位于离首都很远的地方。恐怕是因为伯恩哈特卿不太想露在外面，才让他住在那里的吧。</p>
-    <p>当然，伯恩哈特卿本人在东京都建起了城堡般大的宅邸，并在那里生活。</p>
+    <p>当然，伯恩哈特卿本人在都城建起了城堡般大的宅邸，并在那里生活。</p>
     <p>妻子和孩子也一样吧。</p>
     <p>唉，连长相都不知道的父亲怎么样都无所谓。</p>
     <p>虽然梅赛德斯对初次见到的都城很感兴趣，但是不会像上级那样露骨地表现出态度巡视。</p>
     <p>表面上彻底平静，象什么都没有一样地堂堂正正地走在路上，目光闪烁。</p>
-    <p>时间是半夜。这是东京都最活跃的时间段。</p>
+    <p>时间是半夜。这是都城最活跃的时间段。</p>
     <p>在月光照耀下的黑夜里，人们熙熙攘攘地来往着。</p>
     <p>（嗯，虽然在宅邸的时候就预料到了，但是文明水平大概在中世纪吧。不，文明比预想的完成得多吗？）</p>
     <p>街上排列的建筑物都不会夸张其存在，但仔细一看就知道是用高技术建造的。</p>
