--- a/OEBPS/Text/c004.xhtml
+++ b/OEBPS/Text/c004.xhtml
@@ -34,7 +34,7 @@
     <p>柜台前的是美女接待员……那倒是太好了，但却是一个身材瘦长的青白色脸的吸血鬼。当然是男的。</p>
     <p>头发是刮的还是没有头发，脸上有缝痕。</p>
     <p>这是最近在东京流行的打扮。现在，在王都的脸和手腕上这样的缝纫痕迹是流行趋势。</p>
-    <p>正因为有高(贵)的再生力的吸血鬼才有的歪斜的洒落。</p>
+    <p>正因为有更高的再生力的吸血鬼才有的歪斜的洒落。</p>
     <p><span class="character">“注册标签”</span></p>
     <p><span class="character">“嗯……算了，算了。能不能填写这张表格的填写事项呢？”</span></p>
     <p>在交付的纸张上写着，如果成为saker的话，给予这个行会的支援的权利这样的文章。</p>
@@ -45,7 +45,7 @@
     <p>如果对这个条件没有不满的话，好像要写上名字和年龄。</p>
     <p>虽然也有住址栏，但是没有固定住址的人并不稀奇，所以这里不写也可以。</p>
     <p>梅赛德斯首先写了自己的名字，但却犹豫着写格鲁内瓦特的名字。</p>
-    <p>格鲁内瓦特是统治包括东京都在内的土地的领主。即使是侧室的孩子，也肯定是个问题。</p>
+    <p>格鲁内瓦特是统治包括都城在内的土地的领主。即使是侧室的孩子，也肯定是个问题。</p>
     <p>所以梅赛德斯决定在这里写下母亲的旧姓。</p>
     <p><span class="character">“写出来了”</span></p>
     <p><span class="character">“好的，谢谢。……嗯，梅赛德斯·卡尔瓦特。无地址，年龄20。虽然觉得不是外表那样的年龄，但是成长很慢啊。好羡慕啊”</span></p>
