--- a/OEBPS/Text/c005.xhtml
+++ b/OEBPS/Text/c005.xhtml
@@ -11,7 +11,7 @@
 
 <body>
     <h1>5. 最初的工作</h1>
-    <p>进入宠物店半月堂的梅赛德斯，意外地在干净的店内。</p>
+    <p>进入宠物店半月堂的梅赛德斯见到的是，意外得干净的店内。</p>
     <p>玻璃柜里有一只小动物，比想象中还要可爱。</p>
     <p>无论哪个大小，大概都是地球的成猫和成狗吧。最大的也就是大型犬那么大。</p>
     <p>一般认为是婴儿这个吗，要是这个程度全然是可爱的尺寸。</p>
@@ -29,7 +29,7 @@
     <p>虽然觉得有些慢，但如果不是急行马车的话就是这样的。</p>
     <p>但是做那样的事往返花费了6小时以上，就到白天了。</p>
     <p>因此梅赛德斯决定用自己的双脚来缩短距离。</p>
-    <p>去了东京都外的梅赛德斯轻微地做伸展运动放松身体，用地图确认方位。</p>
+    <p>去了都城外的梅赛德斯轻微地做伸展运动放松身体，用地图确认方位。</p>
     <p>然后整理了地图，狠狠地踢着地面跑动。</p>
     <p>在后方卷起一阵暴风从那个地方消失似的加速。</p>
     <p>景色以高速向后流动，时不时地跳跃着出现在道路上的岩石和树木，越过。</p>
