--- a/OEBPS/Text/c006.xhtml
+++ b/OEBPS/Text/c006.xhtml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-
 <head>
     <title>CONTENTS</title>
     <link href="../Styles/Style0001.css" type="text/css" rel="stylesheet" />
     <link href="../Styles/charactersaidtext.css" type="text/css" rel="stylesheet" />
     <link href="../Styles/status.css" type="text/css" rel="stylesheet" />
 </head>
-
 <body>
     <h1>6. 底层2</h1>
     <p>梅赛德斯一边在迷宫内映射一边徘徊，从后方数人的吸血鬼走了过来。</p>
@@ -17,16 +15,16 @@
     <p>但是他们也明白这一点吗，适当的拉开距离，为了不妨碍彼此而走着。</p>
     <p>看来已经相当习惯迷宫了。恐怕是别的saker。</p>
     <p>“恩？为什么在这种地方会有小鬼呢？”</p>
-    <p>走在最前面的男人盯着梅赛德斯，说他傻。</p>
+    <p>走在最前面的男人盯着梅赛德斯，像看傻瓜一样。</p>
     <p>那张脸上充满了侮辱，看不起梅赛德斯。</p>
     <p>吸血鬼是把力量放在最重要的信赖的生物。因此，对弱者是很严厉的。</p>
     <p>“虽然不知道是怎么来到这里的，但是也不知道自己的程度。</p>
     <p>迷宫不是小孩的游乐场。</p>
     <p>看，连火把都没有。</p>
-    <p>在扎哈街的杂货店有卖耐用的蜡烛灯。买得便宜。</p>
-    <p>我要放火把，明白了就赶紧回去”</p>
+    <p>在扎哈街的杂货店有卖耐用的蜡烛灯。卖得便宜。</p>
+    <p>先给你个火把，明白了就赶紧回去”</p>
     <p>粗暴地强加了火把，男子对梅赛德斯说</p>
-    <p>用手“しっし”来支付，感觉不好。</p>
+    <p>用手“しっし”地打发她，感觉不好。</p>
     <p>“初学者中购买避邪的香料，处理简单的委托，存钱。不然以后会很难过。</p>
     <p>说了废话啊。给我辩白身分的小丫头”</p>
     <p>别的男人又贬低了梅赛德斯，毫不回头地走了过去。</p>
@@ -34,7 +32,7 @@
     <p>有兴趣的话去四丁目的施工现场分一下铁管。</p>
     <p>那些家伙对小鬼太天真了，一拜托他们就加工成枪，一开始比起买便宜的武器，他们更喜欢那个。</p>
     <p>这和你没关系。连迷宫的Iroha都不知道的外行别无所事事”</p>
-    <p>只说了几句，空客集团走开了。</p>
+    <p>只说了几句，saker集团走开了。</p>
     <p>今后，一定会以里面为目标的吧。</p>
     <p>因为聚集了那么多人，所以能够看出他的认真程度。</p>
     <p>虽然遭到了他侮辱，但他说的也是正确的言论。</p>
@@ -48,10 +46,10 @@
     <p>瓦拉沃尔夫·布朗和巨大的鼹鼠相比，简直就是个老实的魔物，只是看到梅赛德斯就失去了斗志。</p>
     <p>然后梅赛德斯轻轻地教育了狼男，把他带到了这里。</p>
     <p>“哎呀，你回来得真早啊。会放弃委托吗？”</p>
-    <p>“说点蠢话。看不见后面的人吗？”</p>
+    <p>“说什么蠢话呢。看不见后面的家伙吗？”</p>
     <p>从往返时间来考虑的话，梅赛德斯的回归太早了。</p>
     <p>所以才会被认为是放弃委托吧，那是个大错特错。</p>
-    <p>梅赛德斯把地下城1楼和2楼完全网罗的地图和2楼泉水采集的瓶子，最后捕获的佛拉沃尔夫浏览器交付给了他。</p>
+    <p>梅赛德斯把迷宫一层和二层完全网罗的地图和二层泉水采集的瓶子，以及最后捕获的佛拉沃尔夫浏览器交付给了他。</p>
     <p>“我吓了一跳。这么短时间往返，用了什么魔法啊”</p>
     <p>“不管怎么说，我使用了魔法。”</p>
     <p>“这么说来还真是风属性呢。但是，用『自由』飞行这么快也能移动吗。</p>
@@ -72,7 +70,7 @@
     <p>梅赛德斯暂且把一个灯笼，蜡烛组套装入三个购物篮，向下面的地方出发了。</p>
     <p>接下来是鞋子。saker在那个工作上，不管怎样是荒地还是什么走来走去都是必要的，如果是脆弱的鞋马上就坏掉了。实际上，梅赛德斯的鞋子只是昨天一天过度使用就已经到了极限。</p>
     <p>所以买的鞋子要选择耐久性优秀的龙皮鞋。</p>
-    <p>看商品旁边的说明书，用从小龙这个种子取了的皮，好象炫耀高(贵)的耐久性和防水性。</p>
+    <p>看商品旁边的说明书，用从小龙这个种子取了的皮，好象炫耀更高的耐久性和防水性。</p>
     <p>据说更加在脚尖部分由于同样埋入小龙的骨的事也保护着脚尖。像安全鞋一样的东西吗？</p>
     <p>梅赛德斯把这个也包含预备投入到二个购物篮，面向了下面的地方。</p>
     <p>其次需要的就是衣服。我想要又结实，又脏的衣服。</p>
@@ -131,4 +129,49 @@
     <p>周围的人都没有注意到这棵灿烂的黄金树，就走了。</p>
     <p>如果很好地利用这个，能预料多少收益……。</p>
     <p>好吧。如果谁都不理睬，只自己使用。</p>
+    <p>只把可可豆放进购物篮里。</p>
+    <p>然后是砂糖。很遗憾没有发现牛奶，所以只能去别的店了吧。</p>
+    <p>还买了一个像钵一样的东西。虽然名称不同，但料理所使用的道具无论在哪个国家、哪个地方都会有相似的形状。</p>
+    <p>接着买锅、细棒。这个打算之后使用。</p>
+    <p>有和香草相似的东西是幸运的。不愧是历史悠久的香料。</p>
+    <p>虽说是异世界的人们，但通过香草果然还是没有。</p>
+    <p>还有，还想要一个冰镇的东西。</p>
+    <p>冰箱之类的东西虽然还没有，但是有什么可以代替的东西吗。</p>
+    <p>怀着这样的想法徘徊了一会儿，梅赛德斯终于来到了写着“魔法石”的角落。</p>
+    <p>「请问一下，魔法石是什么？」</p>
+    <p>「啊，是的。小姐第一次看到魔法石吗？</p>
+    <p>这是把魔法封印在封闭魔法的石头上，谁都可以简单地使用魔法的道具呢」</p>
+    <p>听了店员的说明，梅赛德斯很佩服有相当方便的东西。</p>
+    <p>果然在有魔法的世界里，有魔法就会有自己的发展。</p>
+    <p>梅赛德斯寻找被冰的魔法所封印的魔法石发现有几个同样的东西。问了店员，价格越高的东西效果越好。果然主要的使用方法是战斗用的吗。</p>
+    <p>但是梅赛德斯还是买了最便宜的，而且还买了制冰盘和密封性很高的箱子。</p>
+    <p>走出大型杂货店，接下来去的是牛的饲养小屋。</p>
+    <p>在这里买了牛奶，买完东西回家了。</p>
+    <p>没想到变更了预定。其实准备一结束就想再次去地下城，比起那个我能做了。</p>
+    <p>但是如果能做到这一点的话，今后攻占地下城会变得轻松。</p>
+    <p>一想到那个，这也是必要的准备。</p>
+    <p class="divline"></p>
+    <p>【ミルク購入時】</p>
+    <p>米诺陶斯♀「哎呀，小妹妹，你想要牛奶吗？」</p>
+    <p>梅赛德斯「……是」</p>
+    <p>米诺陶斯♀「那稍等一下……モ゛オ゛オ゛オ゛オ゛オ゛オ゛オ゛！（粗野的声音）」ブシャアアアア！</p>
+    <p>米诺陶斯♀「好了、请」　つ【水桶】</p>
+    <p>梅赛德斯「（　゜Д゜）」</p>
+    <p>顺便说一下，米诺托洛斯♀的外表是双足步行的霍尔斯坦因</p>
+    <p>不是cosplay牛的巨乳美女，而是直立的牛。</p>
+    <p>话说回来，读者中有没有自信用可可豆做巧克力呢。</p>
+    <p>如果可以的话，如果能得到在幻想世界制作的话这样不是更好的建议的话，我会非常开心。</p>
+    <p>只能用现代的道具。</p>
+    <p>大体上是按照自己的方式调查的……。</p>
+    <p>1、先用研钵捣碎</p>
+    <p>１、まずすり鉢ですり潰します</p>
+    <p>私「hoho，这样的话幻想世界也能做到吧」</p>
+    <p>２、接下来进行精炼。如果不做这个的话，就不会有光滑的口感。</p>
+    <p>私「唔姆晤姆」</p>
+    <p>３、使用精炼控制机器。</p>
+    <p>私「……不……那样的东西……っ！」</p>
+    <p>４、接下来是模板、最近有不需要模板的巧克力卖，所以用那个也不错吧</p>
+    <p>私「……可以吗……那样的东西……っ！</p>
+    <p>再这样……没有吗……嘿！那些道具连外行都能做……方便的做法……啊！」</p>
+    <p>这样的话，就比较束手无策了。</p>
 </body>
