--- a/OEBPS/Text/c007.xhtml
+++ b/OEBPS/Text/c007.xhtml
@@ -15,11 +15,11 @@
     <p>看了后宫之类的东西，我也有种想试着写一次的感觉。</p>
     <p>但是一旦制定了情节，在开始受女孩子欢迎的时候就会把主人公炸死。</p>
     <p>是怎么了呢。</p>
-    <p>另外谢谢您的建议。</p>
-    <p>根据收到的评论，上半年梅赛德斯为了制作能保存的巧克力而东奔西走。</p>
+    <p>另外感谢各位的建议。</p>
+    <p>根据收到的评论，前半部分是梅赛德斯为了制作能保存的巧克力而东奔西走的故事。</p>
     <p>即使外行人只想用网络知识来做，也做不出真正的东西啊……。</p>
     <p class="divline"></p>
-    <p>多买可可豆的梅赛德斯很快开始着手制作巧克力。</p>
+    <p>大量购入可可豆的梅赛德斯很快开始着手制作巧克力。</p>
     <p>虽然味道很强烈，但这只能习惯了。</p>
     <p>虽然妈妈说“买那么多可可豆怎么办”，但看到做好的巧克力，评价也会改变吧。</p>
     <p>看来这世界上可可豆是一些有核心粉的嗜好品。</p>
