--- a/OEBPS/Text/c008.xhtml
+++ b/OEBPS/Text/c008.xhtml
@@ -130,7 +130,7 @@
     <p>看来您很满意。</p>
     <p>“那个，那个……”</p>
     <p>“我是梅赛德斯”</p>
-    <p>「啊，谢谢。梅赛德斯，这是哪里？”</p>
+    <p>「啊，谢谢。梅赛德斯，这个是哪里···？”</p>
     <p>“我自己做了。店里没有高卡路里又好的应急食品”</p>
     <p>“这个是自作自作！？那太好了。请务必问一下做法……当然不能说是免费的。销售额的五成都是你……”</p>
     <p>“这是个好消息，不过这是出去之后。”</p>
