--- a/OEBPS/Text/c009.xhtml
+++ b/OEBPS/Text/c009.xhtml
@@ -130,6 +130,6 @@
     <p>于是，猫的视线就盯住了那里，扔了它就追了上去，不知跑到哪里去了。</p>
     <p>猫没有事。</p>
     <p class="divline"></p>
-    今度はわんこをゲットしに再びダンジョンへ。
-    こいつクリアする気あるのか……？
+    <p>这次为了得到汪星人再次去地下城。</p>
+    <p>这家伙想通关吗……？</p>
 </body>
