--- a/OEBPS/Text/c011.xhtml
+++ b/OEBPS/Text/c011.xhtml
@@ -72,7 +72,7 @@
     <p>但是在这种情况下，更应该注意死亡的是第一候选人的菲利克斯。</p>
     <p>然后，在公共场合展示自己的优秀，让打架认同并支持舆论。同时体会到差距使之放弃的事。</p>
     <p>梅赛德斯想到这里，不由得露出了笑容。</p>
-    <p>（什么……不是相当考虑着吗，本妻子的孩子也。</p>
+    <p>（什么……不是相当考虑着吗，正妻子的孩子也。</p>
     <p>而且意外地，很正直呢。用极其正经的手段来巩固后继者的地位。)</p>
     <p>波利斯简直把菲利克斯说成是坏人，但那是不同的。</p>
     <p>菲利克斯只能从自己能做的事情中选择正经的手段来巩固地盘。</p>
@@ -84,7 +84,7 @@
     <p>算了，算了。先听听他们的想法。也许有什么想法。</p>
     <p>“但这对我们来说也是机会。如果反过来在公共场合打倒那家伙的话，说不定我会成为接班人”</p>
     <p>喂，现在说实话了。</p>
-    <p>梅赛德斯仍旧没有说出口，但却在内心对老板吐槽。</p>
+    <p>梅赛德斯仍旧没有说出口，但却在内心对波利斯吐槽。</p>
     <p>现在这个男人清清楚楚地说出了『我是继承者』。</p>
     <p>不是“我们”，而是“我”。</p>
     <p>看来他一开始就没有分馅饼的打算。</p>
@@ -106,7 +106,7 @@
     <p>“……当她使用那个的时候成为隐藏的墙壁吧？”</p>
     <p>“理解得真快啊。当然你也有好吃的。</p>
     <p>如果我能成为接班人，我会改善我的生活”</p>
-    <p>梅赛德斯中对老板的评价已定。</p>
+    <p>梅赛德斯中对波利斯的评价已定。</p>
     <p>……小东西。它也是连自己弄脏手的小东西中的小东西。</p>
     <p>非常不是继承领主的器皿。即使一切顺利，也必定会在某处失败……这是那种类型。</p>
     <p>与其让他做接班人，还不如让还没见过的菲利克斯做接班人。</p>
@@ -125,16 +125,16 @@
     <p>“……那就是全力吗？”</p>
     <p>“哈？”</p>
     <p>“真没用。给你示范”</p>
-    <p>梅赛德斯脸色丝毫不变，抓住老板的胸仓，扭转了位置。</p>
+    <p>梅赛德斯脸色丝毫不变，抓住波利斯的胸仓，扭转了位置。</p>
     <p>然后放出拳头，敲入巨木。</p>
     <p>于是巨树从根本上嘎吱嘎吱地折断，发出了轰鸣声。</p>
-    <p>老板像没有力气一样静坐着，其他的兄弟也褪了色。</p>
+    <p>波利斯像没有力气一样静坐着，其他的兄弟也褪了色。</p>
     <p>然后不知为何只有莫尼卡这个纵横卷红着脸。</p>
     <p>……即便如此，梅赛德斯想，冷静思考的话，做了一件很浪费的事情。没有必要折什么。以后回收，作为柴火和木材活用。</p>
-    <p>姑且不论，梅赛德斯俯视垂头丧气的老板，对孩子说让他听。</p>
+    <p>姑且不论，梅赛德斯俯视垂头丧气的波利斯，对孩子说让他听。</p>
     <p>“要这样做”</p>
     <p>“……”</p>
-    <p>背对着发呆的老板，走着说已经没事了。</p>
+    <p>背对着发呆的波利斯，走着说已经没事了。</p>
     <p>其他的兄弟像被梅赛德斯气压了一样退下，取而代之的是一直等待着的本凯和小黑骄傲地走着。</p>
     <p>度过了无用的时间。虽然这么想着，但梅赛德斯却和看上去害怕自己的年幼少女目光相对。</p>
     <p>“来”</p>
