--- a/OEBPS/Text/c012.xhtml
+++ b/OEBPS/Text/c012.xhtml
@@ -122,12 +122,12 @@
     <p>但是历史之类的东西，试着去解读的话，也有像笨蛋一样的事情没有发展的时候。</p>
     <p>那样的话也许有。也有这样的事。</p>
     <p>强迫自己接受、梅赛德斯停止了进一步的思考。</p>
-    <p>メルセデス「…………」←自分でも絵を描いてみた</p>
+    <p>梅赛德斯「…………」←自己也试着画了画</p>
     <p>受付「这是什么」</p>
-    <p>メルセデス「……一応猫……のつもりだ」</p>
-    <p>受付「新種のモンスターにしか見えないわよ」</p>
-    <p>ベンケイ「その……なかなか独創的ですな……」</p>
-    <p>通りすがりの猫「ニャーン」</p>
-    <p>訳：ワイらこんなブッサイクちゃうわ。舐めとんのか。</p>
-    <p>メルセデス「…………」</p>
+    <p>梅赛德斯「……一只猫……吧」</p>
+    <p>受付「只能看到新物种的怪物哦」</p>
+    <p>本凯「那个……很有独创性啊……」</p>
+    <p>路过的猫「ニャーン」</p>
+    <p>译：哇，这么丑啊。。舐めとんのか。</p>
+    <p>梅赛德斯「…………」</p>
 </body>
