--- a/OEBPS/Text/c013.xhtml
+++ b/OEBPS/Text/c013.xhtml
@@ -11,7 +11,7 @@
 
 <body>
     <h1>13. 同样的魔物</h1>
-    <p>梅赛德斯（Mercedes）原本计划瞄准最低层，但这次改变了，决定这次主要进攻浅层。</p>
+    <p>梅赛德斯原本计划瞄准最低层，但这次改变了，决定这次主要进攻浅层。</p>
     <p>如果只是较浅层次的弱小魔物的话，用梅赛德斯和本凯、小黑来凝固前后的话就可以保护得住，但是如果出现了以与小黑相同速度移动的敌人的话就不能说是可以保护的。</p>
     <p>所以这次只想游刃有余地应付各个阶层，以专心于魔物的画。</p>
     <p>「我来清理所有的敌人。小黑陪着玛吉特，本凯在后方警戒」</p>
