--- a/OEBPS/Text/c016.xhtml
+++ b/OEBPS/Text/c016.xhtml
@@ -15,7 +15,8 @@
     <p>其中广阔、广阔——无论到哪里都是广阔的空间。</p>
     <p>虽然不知道到底是怎么在迷宫中形成这样的空间的，但梅赛德斯为了不把动摇表现出来，努力地走进了大门。</p>
     <p>本凯和小黑也跟在后面，只有随身携带行李的克拉伊利亚留在门外。</p>
-    <p>于是门慢慢地关上了，关上了梅赛德斯、本凯、小黑。</p>
+    <p>于是门慢慢地关上了，梅赛德斯、本凯、小黑被关在里面。</p>
+    <br>
     <p>这样不突破考验，就无法生存下去。</p>
     <p>“挑战真实的人啊，好想来了。”</p>
     <p>从空间深处传来声音。</p>
@@ -31,9 +32,9 @@
     <p>而且背负着闪耀的光环，黑色的火焰在全身盘旋。</p>
     <p>（……怎么说呢，一个迷宫的最下层出现了RPG的LASBOSS……）</p>
     <p>「我是永久的光，永恒的黑暗……寻求真实之人啊，赐予你死之安宁吧」</p>
-    <p>（一个只不过是迷宫老板的家伙，在赌上世界命运的战斗中说出了像Lasboss一样的台词……）</p>
+    <p>（一个只不过是迷宫BOSS的家伙，在赌上世界命运的战斗中说出了像Lasboss一样的台词……）</p>
     <p>“我的名字叫舒瓦卢兹·历史……被抹杀的历史。谁都会背过视线，与年轻时的痛苦一起封印的负面记忆”</p>
-    <p>（不，你只是迷宫的老板吧……）</p>
+    <p>（不，你只是迷宫的BOSS吧……）</p>
     <p>看到考验的梅赛德斯的感想是什么，有“啊，嗯”的感觉。</p>
     <p>不，看到强者就明白了。要打倒一定很困难吧。</p>
     <p>但是怎么说呢，除此之外就没有了吗？</p>
