--- a/OEBPS/Text/c017.xhtml
+++ b/OEBPS/Text/c017.xhtml
@@ -19,20 +19,25 @@
     <p>在那里出现的是奇妙的景象。</p>
     <p>可称为大厅的空间里生长着好几棵树，树的中心部分嵌入了圆形的水槽。</p>
     <p>然后，在那之中的是……是魔物。</p>
+    <br>
     <p>鼹鼠的魔物是狼男、格利佩·菲特、果冻……在阿修拉奥加到施瓦尔茨·沃尔夫范。</p>
     <p>无意中看到鼹鼠的魔物，眼睛果然还是受了伤。</p>
     <p>脱离了那个的前方有台座，台座上面有gelipe·feter的剑和本凯最初使用的剑同样的东西。</p>
     <p>台座下面开了一个洞，眺望了一会儿，令人惊讶的是与台座上设置的武器完全一样的武器从洞里被吐了出来。</p>
     <p>发出咕噜咕噜的声音回头一看，从树的根部魔物沸腾着，刚出生的魔物用空虚的眼睛向门外走去。</p>
     <p>没错……被复制了。魔物也好，武器也好。</p>
+    <br>
     <p>“这家伙到底是真相呢。魔物和道具都可以无限复制”</p>
     <p>“好的。而且从现在开始，这里的设施全部都是你的东西……迷宫主人·梅赛德斯》</p>
+    <br>
     <p>虽然并不是对某人的提问，但却有人回答梅赛德斯的话。</p>
     <p>那是最初就听过的那个女性的声音。</p>
     <p>可是声音是听不见的。哪里都看不到重要的声音的主人。</p>
+    <br>
     <p>“你呢？”</p>
     <p>“我是制造编号12，识别码‘ツヴェルフ’。</p>
     <p>你们现在所在的这个迷宫本身”</p>
+    <br>
     <p>听到自称是ツヴェルフ的声音的自我介绍，梅赛德斯不禁为之动摇。</p>
     <p>虽然没有将此表现出来，但因为无法掩饰惊愕而露出若干表情，自己也意识到自己已经抽筋了，自戒自己也还差得很远。</p>
     <p>在那样的她面前出现了一位女性，行了一个礼。</p>
@@ -40,7 +45,7 @@
     <p>虽然是美女，但梅赛德斯吃惊的是它的外表特征。</p>
     <p>耳朵不尖，没有野兽的特征，也没有鸟的特征，也没有吸血鬼特有的瞳孔。</p>
     <p>……是人类。不是犯规。</p>
-    <p>学名同性恋。在前世，梅赛德斯也是如此，被称为人类的生物。</p>
+    <p>学名Homo sapiens。在前世，梅赛德斯也是如此，被称为人类的生物。</p>
     <p>“人、间……？”</p>
     <p>“这既是正确的答案，也是错误的。</p>
     <p>确实这个姿态是人的身姿,不过，象容易跟你们说一样地我放映出了的立体映像。</p>
@@ -49,6 +54,7 @@
     <p>“……我只是在书上读过”</p>
     <p>“这样啊。在旧时代记载了诸神的名字和身姿的文献应该全部被处分了,不过，还现存着。</p>
     <p>或许是Falsh的思考方式的摇滚因世代交替而减弱了吧……法鲁什应该能够在无意识下避免制作记录着外貌的文献……”</p>
+    <br>
     <p>只要梅赛德斯知道，人类就不是神。</p>
     <p>在神话中经常出现人类是模仿神的形态的生物，尽管如此，人类本身也应该只是生物。</p>
     <p>这对她来说是无法忽视的事情。</p>
@@ -56,6 +62,7 @@
     <p>还是自己认识的人自称是神呢……看似相似却完全不同。</p>
     <p>梅赛德斯认为。到现在为止我一直以为这里和原来的世界是无关的异世界。</p>
     <p>但是……也许这里不是异世界什么的吧。</p>
+    <br>
     <p>“你说这里会成为我的东西啊。也就是说，从今往后我将生产魔物和道具无限制吗？”</p>
     <p>“是的，就是那样。但是并不是可以无限的生产。</p>
     <p>复制魔物和道具时需要能量，因此不够的情况下不能复制”</p>
@@ -67,12 +74,14 @@
     <p>魔物和道具都可以随意复制……这个根据使用方法的不同，甚至可以得到可以匹敌一国的军事力量。</p>
     <p>而且，还有一点不好吃的是，既然已经有人到达了迷宫的真实，那么这些人也会抱着这样的想法的。</p>
     <p>虽然不知道为什么不能上台表演，但拥有一国之力的个人确实在这个世界上有多少人。</p>
+    <br>
     <p>“首先请收下万能钥匙。</p>
     <p>万能钥匙是绝对不会损坏的金属制成，也有自我修复功能，所以通常的手段是不会损坏的。</p>
     <p>在众神的战斗中被使用，甚至连一个国家都被灭绝了，有这样的记录。”</p>
     <p>齐夫这样说明的同时，在梅赛德斯面前出现了一块宝石。</p>
     <p>用颤抖的指尖触摸那个的话，宝石很淡地闪耀。</p>
-    <p>“被认证为老板。接下来请确定待机模式和密钥模式的形状”</p>
+    <br>
+    <p>“被认证为主人。接下来请确定待机模式和密钥模式的形状”</p>
     <p>“待机……？密钥，模式？”</p>
     <p>“万能钥匙有携带出色的待机模式，和作为钥匙使用的两种钥匙模式。钥匙模式也可以作为武器使用，推荐使用剑等形状”</p>
     <p>“锁的时候也不能变小吗？”</p>
@@ -96,11 +105,13 @@
     <p>“……做那个的瞬间，难道不连我们一起被封印起来吗？”</p>
     <p>“如果您能联想到不应该封印的东西，那将不属于收纳对象。”</p>
     <p>“那么……压缩</p>
+    <br>
     <p>梅赛德斯在下一个瞬间，很轻易地后悔自己尝试了那件事。</p>
     <p>迷宫就像是被哈尔巴德吸入了一样景色歪斜，留下了梅赛德斯们从那个场合象谎言一样地消失了。</p>
     <p>不仅仅是消失。迷宫的全部，简直象建模的最中的3D映像一样地，以脱离了现实的光景消失了。</p>
     <p>剩下的只是留在草原上的梅赛德斯。</p>
     <p>在门前留下的克利亚不知道发生了什么事，用这样的表情看着梅赛德斯。</p>
+    <br>
     <p>“怎么样呢？您有真实感吗？”</p>
     <p>“那个，出迷宫的时候怎么办？”</p>
     <p>请宣言“解冻”</p>
@@ -108,7 +119,8 @@
     <p>虽然是这样想的梅赛德斯，但是已经晚了。</p>
     <p>附近的标语牌的村落很吵闹。也感到靠近这边的气息。</p>
     <p>对了，如果迷宫突然消失的话谁都会惊讶。</p>
-    <p>“……嗨，快逃！”</p>
+    <br>
+    <p>“……本凯，快逃！”</p>
     <p>“哈，是的！”</p>
     <p>暂且，这个场在被看见身姿之前逃跑。</p>
     <p>梅赛德斯从那个场合全力逃跑，之后本凯他们也继续了。</p>
@@ -146,7 +158,7 @@
     <p>那么，再多走到门前，不是也不奇怪吗？</p>
     <p>岂止如此，越过黑之门得到地牢的人更多地在也好。</p>
     <p>可是那个问题，象tsuveru的若干吃惊一样的声音返回了。</p>
-    <p>“老板好像对自己评价很低。</p>
+    <p>“BOSS好像对自己评价很低。</p>
     <p>我想，身边没有比较的对象吧？”</p>
     <p>“嘛，除了我之外的吸血鬼战斗的样子在附近没见过呢。”</p>
     <p>“主人所服从的阿修拉奥加和修瓦鲁兹·沃尔夫范格被设定为几个锻炼的吸血鬼才能战斗的强度。</p>
