--- a/OEBPS/Text/c018.xhtml
+++ b/OEBPS/Text/c018.xhtml
@@ -11,6 +11,12 @@
 
 <body>
     <h1>18. 令人不开心的帖子</h1>
+    <p>虽然有很多回收标题的感想，但梅赛德斯只是清除了迷宫中的一个。</p>
+    <p>这是我第一次获得所有迷宫后称霸。完全没有回收标题，请放心。</p>
+    <p>还有旧标题出乎意料地受到好评，下次更新时再回复。</p>
+    <p>欠月的梅赛德斯~转生为吸血鬼贵族、因为会被抛弃而制霸迷宫~</p>
+    <p>最终决定是这样了</p>
+    <p class="divline"></p>
     <p>由于攻略了迷宫的事梅赛德斯的装备革新了。</p>
     <p>因为不是买了新的装备，地牢的宝物库强有力的装备滚着，决定了代替被破烂的衣服使用那个。</p>
     <p>那件衣服从以前探索者的打扮一下子变了，是作为日常服装也能使用的贵族风的设计的东西。</p>
@@ -20,13 +26,13 @@
     <p>说到梅赛德斯，比起设计更重视实用性，但也并不是说对时尚没有兴趣。</p>
     <p>如果只是选择实用和虚荣这两个选项的话，只能选择实用。</p>
     <p>可是如果有富余，即使外观稍微也破掉意识。</p>
-    <p>巩固了生活的基础，也得到了财富。那样的话，我认为稍微打扮一下也不错，这样的游玩心在梅赛德斯也有。</p>
+    <p>巩固了生活的基础，也得到了财富。梅赛德斯也有这样一种玩心，觉得稍微打扮一下也可以。</p>
     <p>其结果就是这种打扮。</p>
-    <p>但是当然，不仅仅是虚荣。单纯地这件衣服的防御性能高(贵)也是穿的理由。</p>
+    <p>但是当然，不仅仅是虚荣。单纯地这件衣服的防御性能更高也是穿的理由。</p>
     <p>穿着舒适，而且防刃，防弹，耐热性能出色，冲击也有一定程度的耐性。</p>
     <p>更加不容易破，因为尺寸根据穿着者变化永远能穿。</p>
     <p>作为防具的性能和以前的衣服是天壤之别。</p>
-    <p>图维尔夫说，这是众神的技术的产物。</p>
+    <p>zwölf说，这是众神的技术的产物。</p>
     <p>迷宫钥匙作为装饰品加工为胸针。在明星胸针中央嵌入宝石固定，再用胸针用锁链系住腰带防止盗窃。</p>
     <p>当然不会做炫耀的事，在那种状态下平时会放在口袋里。</p>
     <p>更进一步调查了宝物库的结果，梅赛德斯关注了在那里的魔石。</p>
@@ -38,20 +44,26 @@
     <p>而梅赛德斯也同样如此。不做随波逐流的事情。</p>
     <p>她将重力魔法注入永续魔石，把它作为手镯，平时随身携带。</p>
     <p>这样做可以经常给自己施加负担，锻炼身体。</p>
-    <p>虽然梅赛德斯，但她现在访问了玛吉特的家。理由当然是为了教你读写。</p>
+    <br>
+    <p>这样的梅赛德斯现在访问了玛吉特的家。理由当然是为了教玛吉特读书。</p>
     <p>玛吉特住的房子，比梅赛德斯的家还要贫穷，根本不像是贵族。</p>
-    <p>每次走路的时候地板都嘎吱嘎吱的说，一看墙壁，海豹军曹精神满满地跑来跑去驱除蟑螂。</p>
+    <p>每次走路的时候地板都嘎吱嘎吱响，墙壁上能看到白额高脚蛛精神满满地跑来跑去驱除蟑螂。</p>
+    <span class="comment translator">アシダカ軍曹 白额高脚蛛，一般常见的大号蜘蛛，会吃蟑螂，和博物杂志也有些梗了</span>
+    <span class="comment translator">ゴキブリ-Blattodea，蜚蠊目，一般就是蟑螂和白蚁之类的，也有作为宠物类的土元</span>
     <p>而玛吉特的母亲病弱，几乎无法从床上移动。</p>
-    <p>“我从玛吉特那里听说了。你是梅赛德斯吧？</p>
-    <p>上次听说女儿受您照顾了。今后也要和玛吉特好好相处哦”</p>
+    <span class="character">
+    <p>    <p>“我从玛吉特那里听说了。你是梅赛德斯吧？</p></p>
+    <p>    <p>上次听说女儿受您照顾了。今后也要和玛吉特好好相处哦”</p></p>
+    </span>
     <p>没想到玛吉特的母亲对梅赛德斯没有表现出警戒。</p>
     <p>不，仔细想想也许不是意外。</p>
-    <p>梅赛德斯其实是个十岁的童女，光看就觉得是朋友来玩的。</p>
-    <p>虽然这么想，但梅赛德斯并没有说多余的话，只是简单的寒暄了一下，马上开始着手学习玛吉特。</p>
-    <p>教字，其实很难。</p>
+    <p>梅赛德斯其实是个十岁的小女孩，光看就觉得是朋友来玩的。</p>
+    <p>虽然这么想，但梅赛德斯并没有说多余的话，只是简单的寒暄了一下，马上开始着手教玛吉特。</p>
+    <br>
+    <p>教书写字，意外地很难。</p>
     <p>对于梅赛德斯来说，比起自己记住的东西，告诉别人要困难得多。</p>
     <p>简单易懂地进行说明，易懂地教……虽然只是用语言来说的话，但对于梅赛德斯来说，这是比从现在开始自己学习未知的语言还要困难的事情。</p>
-    <p>梅赛德斯前世缺少教人的能力。</p>
+    <p>梅赛德斯前世就缺少教人的能力。</p>
     <p>自己学会的时候摸索自己有效率的方法实行那个，后边继续就行了。</p>
     <p>但是，前世也常常发生这样的事，一旦让他人去做，他就会失去干劲而无法继续干下去。</p>
     <p>如果不行的话就能理解。但是不做很难理解。</p>
@@ -63,8 +75,9 @@
     <p>于是，越来越多的人离开了，不知不觉，那样的家伙不需要，自己前进孤独了。</p>
     <p>然后回过神来，发现周围没有人。</p>
     <p>那是梅赛德斯的前世。</p>
-    <p>（……冷静点。前世终究是前世，而我……好几次都这样对自己说吧。那个不是我的别人。</p>
-    <p>我是梅赛德斯·格鲁内瓦特。■■■■不是……）</p>
+    <br>
+    <p>（……冷静点。前世终究是前世，我就是我……好几次都这样对自己说吧。那个不是我而是别人。我是梅赛德斯·格鲁内瓦特。不是■■■■……）</p>
+    <br>
     <p>没关系，前世经历了无可奈何的失败，自己也随意地变得孤独了。</p>
     <p>我也知道失败的理由。搞错了继续努力的方法。</p>
     <p>为了达到目的每天勤奋工作，对梅赛德斯来说并不痛苦。能够真实感受到自己正在朝着目标前进，反而很爽快。</p>
@@ -76,80 +89,125 @@
     <p>不知道……我不知道……总之，我理解了这样的心理活动。</p>
     <p>我依然无法理解自己为什么讨厌为了前进而必须的步伐，怎么想都觉得这样更有效率，对自己也有好处……不管怎样，首先事实作为事实接受。</p>
     <p>别人讨厌努力这种行为。继续很难。</p>
+    <br>
     <p>（适当地表扬，适当地训斥，然后对成功进行奖励……。</p>
     <p>首先从干劲十足的地方开始……好，没问题。能行</p>
+    <br>
     <p>梅赛德斯把教材摊在桌子上。</p>
     <p>首先不是那么难的东西，带了稍微学一下就能明白程度的简单的东西。</p>
     <p>走得慢一点也没关系。总之，不要停下脚步，一直绕到目的地，总有一天会到达的。</p>
     <p>不要勉强。梅赛德斯认为这是最重要的。</p>
-    <p>“那么，开始之前首先，到哪里为止记了文字？”</p>
-    <p>“嗯……总算可以写到这一段了”</p>
+    <br>
+    <span class="character">
+    <p>    <p>“那么，开始之前首先，到哪里为止记了文字？”</p></p>
+    </span>
+    <span class="character">
+    <p>    <p>“嗯……总算可以写到这一段了”</p></p>
+    </span>
+    <br>
     <p>对于玛吉特的回答，梅赛德斯虽然没有露出表情，但还是很感叹。</p>
     <p>看来她好好地自主学习了。</p>
     <p>这个世界的语言极其接近于日语，如果用它来比喻的话，那么她的文字的学习程度，甚至连“ta”一行都记住了。</p>
     <p>虽然梅赛德斯觉得这会意外地加快前进，但在这里马上意识到自己错了。</p>
-    <p>（无奈……不是突然让他去下一个地方，而是首先要表扬，并给予奖励）</p>
+    <p>（不对……不是突然让她去下一个地方，而是首先要表扬，并给予奖励）</p>
     <p>有鞭子和糖的说法。</p>
     <p>人要保持干劲，不仅要鞭子，还要给糖果。</p>
     <p>不凑巧没有糖果所以变成了巧克力，但是现在拥有的糖果就只有这些了。</p>
-    <p>“相当先进啊。干得好。</p>
-    <p>我本来打算每次记一个字就给她一块……给你三张吧」</p>
+    <span class="character">
+    <p>    <p>“相当先进啊。干得好。</p></p>
+    <p>    <p>我本来打算每次记一个字就给她一块……给你三张吧」</p></p>
+    </span>
     <p>巧克力现在在有钱人中间很受欢迎。</p>
     <p>那个价格由于受欢迎持续上升，现在一张超过2万Elka。</p>
     <p>对于花了这么多钱买了巧克力的有钱人来说，这个奖励太贵了吧。</p>
     <p>但是，在梅赛德斯本人看来，这只是递给100日元的板状巧克力板以下的东西的感觉。</p>
     <p>但是由于这个奖励，马尔吉特的干劲一下子提高了，结果学习顺利的进行了。</p>
+    <br>
     <p>结束了玛吉特的学习，梅赛德斯回家后，家门前停着一辆带有陌生徽章的马车。</p>
     <p>为了堵住那辆马车的去路，本凯和小黑挡住了去路，衣冠楚楚的男人拼命地说服他。</p>
     <p>周围几个人倒下，能看见争斗的痕迹。</p>
     <p>到底发生了什么……。</p>
     <p>暂且试着听话，梅赛德斯朝着本凯他们前进了。</p>
-    <p>“本凯，这是怎么回事？”</p>
-    <p>「哈。这些人突然来访，并采取了更加威压的态度，判断为敌人后将其击溃”</p>
-    <p>“拜托了”</p>
+    <span class="character">
+    <p>    <p>“本凯，这是怎么回事？”</p></p>
+    </span>
+    <span class="character">
+    <p>    <p>「是。这些人突然来访，而且还采取了威压的态度，判断为敌人后将其击溃”</p></p>
+    </span>
+    <span class="character">
+    <p>    <p>“那么说说详情吧”</p></p>
+    </span>
+    <br>
     <p>本凯所说的事情的始末如下。</p>
-    <p>梅赛德斯不在家的时候，这辆马车突然来到屋子前，单方面要求梅赛德斯和他的母亲有事，让他过去。</p>
+    <p>梅赛德斯不在家的时候，这辆马车突然来到屋子前，单方面要求梅赛德斯和他的母亲过去。</p>
     <p>当然，不知道是什么原因来的，不可能通过。</p>
     <p>因此问了告诉理由理所当然的事,不过，因为随从的士兵一边叫无礼一边拔出了剑判断为敌人交战。</p>
     <p>双手双脚折断，剑和铠甲破坏，无法战斗，等待主人归来……好像是这么回事。</p>
-    <p>“噢，等一下，梅赛德斯！我们不是敌人！</p>
-    <p>我们是格鲁内瓦特家的使者！我这次是来送请柬的」</p>
-    <p>“格鲁内瓦特……？啊，原来是本妻孩子的生日会啊”</p>
-    <p>「し、知っていたですか」</p>
-    <p>“嘛，发生了很多呢。”</p>
+    <br>
+    <span class="character">
+    <p>    <p>“噢，等一下，梅赛德斯！我们不是敌人！</p></p>
+    <p>    <p>我们是格鲁内瓦特家的使者！我这次是来送请柬的」</p></p>
+    </span>
+    <span class="character">
+    <p>    <p>“格鲁内瓦特……？啊，原来是正妻孩子的生日会啊”</p></p>
+    </span>
+    <span class="character">
+    <p>    <p>「知，知道吗」</p></p>
+    </span>
+    <span class="character">
+    <p>    <p>“嘛，发生了很多呢。”</p></p>
+    </span>
     <p>原来如此，好歹在生日会和自己也邀请了生日会。</p>
-    <p>联络晚了，只是因为被轻视了吧。反正那样放着就好了。</p>
+    <p>联络晚了，也就是说被轻视了吧。。反正那样放着就好了。</p>
     <p>我轻轻看了下请帖，确认了基本上和玻利斯的内容一致。</p>
-    <p>日程从今天起五天后。</p>
+    <p>日程从今天起的五天后。</p>
     <p>说真心话虽然想拒绝，但“邀请”只是徒有虚名的强制吧。</p>
     <p>如果只是自己的话，就算勉强自己偷懒也没关系，但这样一来，母亲被看成坏人也不是本意。</p>
-    <p>“知道了。请转告我一定去”</p>
-    <p>「哈，是的。谢谢”</p>
-    <p>“还有，这和生日会完全没有关系……最初拔剑的笨蛋是谁？</p>
+    <span class="character">
+    <p>    <p>“知道了。请转告我一定去”</p></p>
+    </span>
+    <span class="character">
+    <p>    <p>「哈，是的。谢谢”</p></p>
+    </span>
+    <span class="character">
+    <p>    <p>“还有，这和生日会完全没有关系……最初拔剑的笨蛋是谁？</p></p>
+    </span>
     <p>梅赛德斯的眼睛变得冰冷，手指关节发出了声音。</p>
     <p>吸血鬼所拥有的、分辨危险的嗅觉……第六感应该说的东西全力向男人诉说了危险。</p>
     <p>空气很沉重，附近的鸟儿齐振翅膀逃跑。</p>
-    <p>可怕的……男人坦率地这么想。</p>
-    <p>这个侧室的孩子已经裹着强者的空气。</p>
-    <p>“请稍等。因为那人也不是恶意干的……请您原谅」</p>
-    <p>“……不要再靠近那家伙了」</p>
-    <p>“哈，是的！”</p>
+    <p>可怕……男人坦率地这么想。</p>
+    <p>这个幼小的、侧室的孩子已经裹着强者的空气。</p>
+    <span class="character">
+    <p>    <p>“请稍等。因为那人也不是恶意干的……请您原谅」</p></p>
+    </span>
+    <span class="character">
+    <p>    <p>“……不准再接近这里了」</p></p>
+    </span>
+    <span class="character">
+    <p>    <p>“是，是的！”</p></p>
+    </span>
     <p>一边问，梅赛德斯的眼睛已经集中在倒下的士兵中的一人。</p>
     <p>明明没有回答，却看穿了谁最先拔剑。</p>
     <p>发出质问时，比其他人略微反应强烈的士兵。我知道他是个制造事端的傻瓜。</p>
     <p>而且，虽然嘴上不说，但如果说错了，生命就不能保证了……那样说着。</p>
     <p class="divline"></p>
-    <p>“你们受的伤，就让他们在坡道上摔倒吧。”</p>
+    <span class="character">
+    <p>    <p>“你们受的伤，就当作是在坡道上摔了。”</p></p>
+    </span>
     <p>返回本邸的归途。</p>
     <p>在摇晃的马车中，男人命令士兵们这样做。</p>
-    <p>从格鲁内瓦特那里接到请柬的这个男人，是侍奉伯恩哈特爵士的管家。</p>
+    <p>从格鲁内瓦特那里负责送请柬的这个男人，是侍奉伯恩哈特公爵的管家。</p>
     <p>他邀请了这次侧室的孩子们参加的派对……我没想到借这个名字的闹剧。</p>
-    <p>作为本妻的孩子接受了英才教育的菲利克斯·格鲁内瓦特和被放置在隔壁的孩子们……即使这样战斗，菲利克斯也肯定会赢。</p>
+    <p>作为正妻的孩子接受了英才教育的菲利克斯·格鲁内瓦特和被踢开的侧室的孩子们……这种战斗，菲利克斯肯定会赢。</p>
     <p>总之，侧室的孩子们只是作为垫脚石被邀请了。</p>
-    <p>所以菲利克斯获胜是已知的既定路线。我是这样想的。</p>
-    <p>「可是，可是！」</p>
-    <p>“好了就照你说的去做。别再胡闹了。</p>
-    <p>如果轻易地招致他的不快，这次你们可要被杀了”</p>
+    <p>所以菲利克斯获胜是已知的既定路线。原本是这样想的。</p>
+    <span class="character">
+    <p>    <p>「可是，可是！」</p></p>
+    </span>
+    <span class="character">
+    <p>    <p>“好了就照我说的去做。别再胡闹了。</p></p>
+    <p>    <p>如果轻易地招致她的不快，这次你们可要被杀了”</p></p>
+    </span>
     <p>管家认为。</p>
     <p>说不定会发生意外的事态。</p>
     <p>也许菲利克斯以为是把踏板叫来，结果招来了意想不到的怪物。</p>
@@ -158,4 +216,17 @@
     <p>但最让执事感到恐怖的是梅赛德斯的眼睛。</p>
     <p>冷眼相待。这双眼睛宛如除了自己和家人以外，谁都不相信生物。</p>
     <p>……和父亲伯恩哈特卿的眼神一样。</p>
+    <p class="divline"></p>
+    <p>梅赛德斯（……算是表扬吗）</p>
+
+    <p>～以下、梅赛德斯の妄想～</p>
+    <span class="comment translator">底下的请配合《JOJO的奇妙冒险·黄金之风》第30话观看</span>
+    <p>梅赛德斯「『マルギット』！　しっかりと書けただろーな！」</p>
+    <p>玛吉特「ふおっ！？　うおっ！！？　うおっ！」</p>
+    <p>梅赛德斯「良ぉお～しッ！　よしよしよしよしよしよしよしよしよしよしよしよしよしよしよしよし立派に書けたぞ玛吉特！」</p>
+    <p>玛吉特「おおあっ」</p>
+    <p>梅赛德斯「３枚か！？　甘いの３枚欲しいのか！　３枚……イヤしんぼめ！！」</p>
+    <p>玛吉特「うおっ！　うおっ！」</p>
+    <p>～妄想終わり～</p>
+    <p>梅赛德斯（……没有呢）</p>
 </body>
