--- a/OEBPS/Text/c019.xhtml
+++ b/OEBPS/Text/c019.xhtml
@@ -10,40 +10,54 @@
 </head>
 
 <body>
-    <h1>19.  菲利克斯·格鲁内瓦特</h1>
+    <h1>19. 菲利克斯·格鲁内瓦特</h1>
+    <p>标题又变了</p>
+    <p>变来变去的很抱歉，这个就是最终决定版了。</p>
+    <p class="divline"></p>
     <p>吸血鬼之国的报纸是一部分贵族和商人的读物。</p>
     <p>由于活字印刷技术尚未确立，书必须全部手写制作，无法准备足够的数量。</p>
     <p>更进一步说，因为识字率本来就很低，所以即使发行报纸也几乎看不到。</p>
     <p>但是，并不是说因此人们不能得到信息。</p>
     <p>街头每天晚上都有人同时大声朗读报纸，向人们传递信息。</p>
     <p>正因为识字率低才成立的职业。</p>
-    <p>“トライヌ发现了将时间封入容器的技术。</p>
-    <p>使用这种技术的话，不影响季节，春夏秋在容器中造访，农产品可以在有田地的状态下保存。</p>
-    <p>已经宣告了保存食物要熏制和醋腌制的时代结束。</p>
-    <p>好吃的东西可以保持美味。这将对今后的航海产生重大影响”</p>
+    <span class="character">
+        <p>“トライヌ发现了将时间封入容器的技术。</p>
+        <p>使用这种技术的话，不影响季节，春夏秋在容器中造访，农产品可以在有田地的状态下保存。</p>
+        <p>已经宣告了保存食物要熏制和醋腌制的时代结束。</p>
+        <p>好吃的东西可以保持美味。这将对今后的航海产生重大影响”</p>
+    </span>
     <p>在这样充满活力的夜路上走过一辆马车。</p>
     <p>在里面的是梅赛德斯和他的母亲——琉迪亚·格鲁内瓦特。然后是随从的老婆婆三人。</p>
-    <p>本凯和小黑考虑到万一，现在每个地牢都进入了哈尔巴德。</p>
+    <p>本凯和小黑考虑到万一，现在每个都进入了地牢哈尔巴德。</p>
     <p>说点题外话，梅赛德斯想和哈尔巴德长久地交往，所以取名为“蓝izen”。</p>
     <p>永远只是叫哈尔巴德的话会觉得无聊。</p>
-    <p>“话说回来，梅尔，你居然能借这种马车了。”</p>
-    <p>「啊。saker的工作进行得很顺利”</p>
+    <span class="character">
+        <p>“话说回来，梅尔，你居然能借这种马车了。”</p>
+    </span>
+    <span class="character">
+        <p>「啊。saker的工作进行得很顺利”</p>
+    </span>
     <p>琉迪亚大声的询问，梅赛德斯也用平和的声音回答。</p>
     <p>梅赛德斯平时是拔身刀一样的尖锐，不会破坏冰冷的态度，因为他不相信对方。</p>
     <p>反过来说，如果相信对方的话，刀就会收进鞘里，冰也会融化。</p>
     <p>绝不是真心只是冷淡的吸血鬼。</p>
-    <p>“话虽如此，我也没想到你会邀请我们来参加聚会。</p>
-    <p>要是没有不良企图就好了”</p>
-    <p>“不用担心，老婆婆。只是本妻的孩子把自己的优秀展示给参加者们，巩固了继任者的地位。</p>
-    <p>嘛，适当地交往，如果输了对方也会满足的”</p>
+    <span class="character">
+        <p>“话虽如此，我也没想到会邀请我们来参加聚会。</p>
+        <p>要是没有不良企图就好了”</p>
+    </span>
+    <span class="character">
+        <p>“不用担心，老婆婆。只是正妻的孩子把自己的优秀展示给参加者们，巩固继任者的地位。</p>
+        <p>嘛，适当地交手，输了之后对方也会满足的”</p>
+    </span>
     <p>在这次闹剧中，梅赛德斯完全没有要赢的意思。</p>
     <p>被随意妄为反被怨恨，被卷入权力斗争只是麻烦而已。</p>
     <p>比起那个，在一定程度上和对方交往，在适当的地方输给对方才是最轻松的。</p>
-    <p>格林内瓦尔特的遗迹等，没有自原先继承的打算，很好地打算显出自己也不想。</p>
-    <p>如果输了的结果，被交付一点点的赡养费被放逐就万万岁。高兴地舍弃格鲁内瓦特的名字吧。没有最坏的补贴也可以。</p>
+    <p>格林内瓦尔特的财产等，原先就没有继承的打算，很好地打算显出自己也不想。</p>
+    <p>如果输了的结果，被交付一点点的赡养费被放逐就万万岁。高兴地舍弃格鲁内瓦特的名字吧。最坏的没有补贴也可以。</p>
     <p>这并不是父亲非道。</p>
     <p>在中世纪中止的这个世界的贵族社会，用极少量的赡养金驱逐继承人以外的自己的孩子是极其理所当然的事。</p>
     <p>为了减少粮食补贴，把自己的孩子送出战争也是很普通的事情。和前世的价值观完全不同。</p>
+    <br>
     <p>格鲁内瓦特的本邸果然是豪华的东西。</p>
     <p>房子的大小和华丽，对贵族来说有表示自己的力量的意义。</p>
     <p>所以贵族基本上会把房子弄大、华丽。用那样的事炫耀力量。</p>
@@ -54,6 +68,7 @@
     <p>与此形成鲜明对比的是，人山人海的地方好像是被招待的トライヌ。</p>
     <p>代替他的贵族来访，连休息的时间都没有。</p>
     <p>虽然他不是贵族，但是罐头的贩卖等现在已经一举成名。</p>
+    <br>
     <p>大厅的边缘聚集着以前见过的其他侧室的孩子，一看到梅赛德斯就慌忙移开了视线。</p>
     <p>玛吉特也在对面，为了不引人注目地蜷缩着。</p>
     <p>这个大厅平时或许是跳舞用的，中央格外敞开。</p>
@@ -61,17 +76,17 @@
     <p>反正都是故意输的战斗。对我来说无所谓。</p>
     <p>这样想着，梅赛德斯决定暂且亲手做饭。</p>
     <p>菜单上有酒精度数低的啤酒，香肠，土豆，还有白面包。</p>
-    <p>白面包出来的地方是流石贵族,不过，那个以外是快要失望了的菜单。</p>
+    <p>白面包出来的地方也不愧是是贵族,不过，那个以外是快要失望了的菜单。</p>
     <p>但是这也是没办法的事吧。</p>
-    <p>吸血鬼的国家因为大地瘦，几乎不能培育小麦。</p>
-    <p>同时，因为水也贵重怎么也不得到难腐烂保存有效的酒精作为水分补给主要被使用。</p>
+    <p>吸血鬼的国家因为大地贫瘠，几乎不能培育小麦。</p>
+    <p>另外，水也很贵重，很难弄到手，所以主要使用不易腐烂、能保存的酒精来补充水分。</p>
     <p>土豆在贫瘠的大地上也生长良好，在这个国家贫富无差别，非常受重视。</p>
     <p>香肠绝不是从猪的任何地方都想吃好吃的美食精神中产生的。</p>
     <p>这是由内脏和剩余的肉都不能使用的话，就无法度过冬天的切实所产生的料理。</p>
     <p>既然招待了这么多菜，那么菜肴就被这样贫乏的相貌所占据，在某种意义上是理所当然的。</p>
     <p>但是最重要的问题是，吸血鬼只要吸血就能生存下去吧。</p>
     <p>如果混入血大致的东西好吃地觉得，饭菜文化全然不成长，保存饮食也不发展。</p>
-    <p>与其特意做成干肉吃，还不如在冬天从被捉住的saker的强大魔物中抽出血来喝，这样既快又健康。</p>
+    <p>与其特意做成干肉吃，还不如在冬天从被saker捉住的强大魔物中抽出血来喝，这样既快又健康。</p>
     <p>所以只有像香肠那样的料理，这个国家的料理情况惊人的贫穷。</p>
     <p>连香肠都提议的不是吸血鬼。即使没有那样的东西，吸血鬼只要有血就能过冬。</p>
     <p>做完香肠的，是兽人的象征。可以说大部分的料理都是由吸血鬼以外的人做的，没有一个吸血鬼发源于国家的料理。</p>
@@ -79,59 +94,73 @@
     <p>其中吸血鬼喜欢的是使用猪的血液的红肠。</p>
     <p>味道像肝，营养价值也很高。基本上不喜欢饮血的梅赛德斯，如果这样的话，也是可以毫无抵抗地食用的绝品。</p>
     <p>然后边吃菜边等十分钟。不久，这个派对的主角出现了。</p>
-    <p>“欢迎各位光临”</p>
+    <p><span class="character">“欢迎各位光临”</span></p>
     <p>出现的是一个十四岁到十五岁的金发美青年。</p>
     <p>男性的不老期和女性相比有稍微慢的倾向吗，他看起来也还没进入不老期。</p>
     <p>在旁边的是一个25岁到后半的男性。</p>
     <p>因为个子很高，留着胡子，所以根据不同的看法，即使看上去三十多岁也不奇怪。</p>
     <p>头发的颜色是蓝色的，瘦的脸颊和尖的下巴是其特征。</p>
     <p>但最引人注目的却是一双什么都不相信的冰冷的金色瞳孔。</p>
-    <p>（……那是本妻的孩子和我的父亲吗？）</p>
+    <p>（……那是正妻的孩子和我的父亲吗？）</p>
     <p>无意中看着父亲，突然和他对视了。</p>
     <p>初次的父亲和女儿的邂逅，但互相面对的是不相信对方的冰之瞳。</p>
     <p>就好像在路边的石头上看到的一样，金色的眼睛相互观察，不久便失去了兴趣似的，两者移开了视线。</p>
     <p>这期间好像菲利克斯在演讲似的，他一边夸张的举止一边对在生日会上聚集的贵族们表示感谢。</p>
     <p>如果就这样结束就好了，但是很遗憾不能那样。</p>
     <p>菲利克斯的话不久，像以前玻利斯说的那样，变成把其他侧室的孩子卷进来的东西。</p>
-    <p>“正如大家已经知道的那样，这次，会场上还有和我一样与格鲁内瓦特的血脉相连的我们的兄弟们。</p>
-    <p>于是，作为集会，我和他们决定互相竞争力量”</p>
+    <span class="character">
+        <p>“正如大家已经知道的那样，这次，会场上还有和我一样与格鲁内瓦特的血脉相连的我们的兄弟们。</p>
+        <p>于是，作为集会，我和他们决定互相竞争力量”</p>
+    </span>
     <p>不用说，参加者们知道这个活动的目的。</p>
     <p>打倒其他的兄弟的事，让周围的人认为自己才是适合继承人的事。并且让其他的兄弟死心的事。有那样的目的的事等，不是傻瓜简单地明白。</p>
     <p>可是谁也不说那个。因为这个活动可以说是类似仪式的东西。</p>
     <p>一般来说，菲利克斯获胜是理所当然的。所以如果是真的话，连战斗的必要性都没有。</p>
     <p>总之，这是作为『参加者们承认了菲利克斯』行为的仪式。</p>
     <p>所以他们不会说多余的话。对口说那个极好，看起来有趣地伴奏戏剧交往。</p>
-    <p>「来吧，兄弟们。向前！”</p>
-    <p>真麻烦，真麻烦。</p>
+    <span class="character">
+        <p>「来吧，兄弟们。向前！”</p>
+    </span>
+    <p>麻烦，从心底感到麻烦。</p>
     <p>虽然这么想着，梅赛德斯还是从座位上站了起来，向前走去。</p>
-    <p>但是参加者们和菲利克斯仅仅是出乎意料。</p>
+    <p>但是，参加者和菲利克斯对此稍有意外。</p>
     <p>一定是在某种程度上感到紧张，或者是在意周围人的情况下出来的，这样想的话，紧张感之类的微尘都没有，堂堂正正地出来了。</p>
-    <p>之后，老板和弗里特、莫尼卡、玛吉特继续向前迈进。</p>
+    <p>之后，波利斯和弗里特、莫尼卡、玛吉特继续向前迈进。</p>
     <p>他们和梅赛德斯不同，多少有些紧张，脸也绷紧了。</p>
-    <p>玛吉特等快要哭出来了。</p>
-    <p>“这五个勇敢的兄弟姐妹和我比力量。</p>
-    <p>但是，我不想成为对女孩子使用暴力的男人。</p>
-    <p>于是，我和三个妹妹约定不再反击。</p>
-    <p>她们一击一击地向我发起攻击，并且通过我忍耐来显示我的力量”</p>
+    <p>玛吉特都快要哭出来了。</p>
+    <span class="character">
+        <p>“这五个勇敢的兄弟姐妹和我比力量。</p>
+        <p>但是，我不想成为对女孩子使用暴力的男人。</p>
+        <p>于是，我和三个妹妹约定不再反击。</p>
+        <p>她们一击一击地向我发起攻击，并且通过我忍耐来显示我的力量”</p>
+    </span>
     <p>梅赛德斯对这句话感到些许的安心。</p>
     <p>太好了……如果在这里，我是为了自己而在人们面前敲打像马尔吉特一样胆怯的少女的外道的话，就必须改变预定让他出丑。</p>
     <p>但是作为最低限度的绅士的气概好象持(有)着。</p>
     <p>这样的话就可以安心输了。</p>
-    <p>“那么，先从你开始吧。”</p>
+    <span class="character">
+        <p>“那么，先从你开始吧。”</p>
+    </span>
     <p>首先菲利克斯指名的是玛吉特。</p>
     <p>玛吉特提心吊胆地看着周围，最后看到了梅赛德斯。</p>
     <p>梅赛德斯点了点头，犹如下定决心向菲利克斯发出了拳头。</p>
-    <p>不要轻视这只是幼女的打击。作为吸血鬼的她的膂力用人来说综合格斗技世界王者一击使之闷绝的程度能。</p>
+    <p>不要轻视这只是幼女的打击。作为吸血鬼的她的膂力用人来说能到综合格斗技世界王者一击使之闷绝的程度。</p>
     <p>但是菲利克斯面带笑容接受了这件事，就像什么事都没有发生过一样抱起了玛吉特。</p>
-    <p>“好的，谢谢。各位，为小小的勇者鼓掌！”</p>
+    <span class="character">
+        <p>“好的，谢谢。各位，为小小的勇者鼓掌！”</p>
+    </span>
     <p>哎呀，这是理所当然的事。</p>
     <p>虽说是吸血鬼，但幼女一拳就受到了伤害是不可能的。</p>
     <p>菲利克斯没有按照宣言进行反击，而是以温柔的哥哥的身份来表现自己的绅士。</p>
     <p>恐怕对后两个妹妹也打算同样对待吧。</p>
-    <p>接着，第二只莫尼卡比玛吉特还锋利，踢出了落地球。</p>
+    <p>接着，第二位的莫尼卡比玛吉特还锋利，踢出了落地球。</p>
     <p>但是菲利克斯也承受了这一点，同样地抱起她。</p>
-    <p>“那么，接下来就是你了。给我”</p>
-    <p>“……”</p>
+    <span class="character">
+        <p>“那么，接下来是你。来吧”</p>
+    </span>
+    <span class="character">
+        <p>“……”</p>
+    </span>
     <p>梅赛德斯有点为难。</p>
     <p>不知道用多少力量攻击才好。</p>
     <p>仔细想想，对同样吸血鬼进行攻击还是第一次。</p>
@@ -142,15 +171,15 @@
     <p>如果是本凯和小黑的话可以忍耐，甚至连舒瓦兹·史特里耶都没有效果。就是这样的威力攻击。</p>
     <p>梅赛德斯想，这样的话就没问题了。</p>
     <p>（嘛，忍耐吧……大概）</p>
-    <p>梅赛德斯没有太大的气势，自然地缩短了鲣鱼和菲利克斯的距离。</p>
+    <p>梅赛德斯并没有太大的压力，而是自然地缩短了与菲利克斯的距离。</p>
     <p>对于这种过于自然的动作，菲利克斯被意料之外的攻击了——。</p>
     <p>如同连内脏都被击溃一般，可怕的冲击贯穿了腹部。</p>
-    <p>到底发生了什么，不能马上判断。</p>
-    <p>我以为内脏坏了。我以为骨头碎了。</p>
+    <p>到底发生了什么，没能马上判断。</p>
+    <p>像是内脏破了。像是骨头碎了。</p>
     <p>尽管如此，没有跪下来，是因为很多贵族、父亲都看在眼里。</p>
     <p>不然就会屈服于痛苦，倒在原地吧。</p>
-    <p>“……～～哇！</p>
-    <p>看，真是漂亮的一击……各位，为这位勇敢的挑战者鼓掌！”</p>
+    <span class="character"><p>“……～～哇！</p>
+    <p>看，真是漂亮的一击……各位，为这位勇敢的挑战者鼓掌！”</p></span>
     <p>菲利克斯虽然快要倒下了，但还是拼命虚张声势，装作若无其事的样子。</p>
     <p>正因为如此周围的人们不注意到。现在，他是多么的痛苦。</p>
     <p>忍受一下子就呕吐的感觉，不把痛苦表现在脸上，这是多么困难的事啊……从这个意义上来说，菲利克斯的这种虚势是值得赞赏的。</p>
@@ -158,37 +187,46 @@
     <p>虽然该梅赛德斯反省了一下是否有点过分了，但是根本就没有想赢的意思。</p>
     <p>如果再用更多的力量殴打菲利克斯的话，菲利克斯连虚张声势都无从谈起。</p>
     <p>菲利克斯慢慢地看自己的肚子。</p>
-    <p>由于过度的冲击，腹部破裂，内脏会不会零落下来……我是这样不安的。</p>
+    <p>由于过度的冲击，腹部破裂，内脏会不会零落下来……是那样的不安。</p>
     <p>但是肚子没有破，好好地留在那里。没有被撕碎。</p>
     <p>但是，受到如此认真的打击也是不争的事实。</p>
     <p>在那样的他面前梅赛德斯脱口而出。</p>
-    <p>“不愧是本妻之子。一点也不吓人啊。</p>
-    <p>我服了，我投降了。我输了。果然你才是适合接班人的”</p>
+    <span class="character"><p>“不愧是正妻之子。一点也不吓人啊。</p>
+    <p>我服了，我投降了。我输了。果然您才是适合接班人的”</p></span>
     <p>梅赛德斯只说了几句，就擅自承认自己输了，很快就离开了现场。</p>
     <p>看着她的背影，菲利克斯感觉到背部传递着冰冷的东西。</p>
     <p>他明白了。正因为实际受到了拳头才能确信的事。</p>
     <p>（现在的攻击……她不是真心的……）</p>
     <p>……如果她拿出真本事的话，我一定是死了。</p>
     <p>理解了这件事，菲利克斯就不停的开始流冷汗了。</p>
+    <p class="divline"></p>
     <p>吸血鬼国的料理的事</p>
     <p>其他种族：想吃好吃的东西所以开发料理！</p>
     <p>吸血鬼：没有比血更美味的东西了！不需要什么料理！”</p>
+    <br>
     <p>其他种族“我想吃更好吃的面包，我会研究的。面团云云，烤的时间云云，分量云云”</p>
     <p>吸血鬼：赌上血就变得好吃了！下功夫真没用！”</p>
+    <br>
     <p>其他种族“因为农作物没有生长，这样下去就过不了冬天了……勉强不行”</p>
     <p>吸血鬼：耐寒的魔物饲养，让他们吸血不就好了嘛！</p>
+    <br>
     <p>其他种族“小麦不生长……有没有其他的作物！”</p>
     <p>吸血鬼：没有面包不就吸血吗？</p>
+    <br>
     <p>其他种族：水净是寄生虫不能喝……只好喝酒了”</p>
     <p>吸血鬼：没有水的话吸血不是很好吗？</p>
+    <br>
     <p>其他种族：如果不考虑每天的饮食和营养平衡，就会得病。</p>
     <p>吸血鬼：虽说是白血，但喝的话基本上是健康优良儿童。</p>
+    <br>
     <p>其他种族的医生「由于好好地摄取营养的事病也有痊愈的事」。</p>
     <p>吸血鬼医生：“好的，我把坏的地方删掉。再生自己做。不死的话不久就会痊愈的吧」</p>
+    <br>
     <p>这就是这个国家的粮食情况。基本上只要吸血就可以了，所以不考虑做饭。</p>
     <p>面包是精灵的国家，香肠是雪梅雷的国家，葡萄酒是从福格拉国家进口的。连自己做都不行。</p>
     <p>这个种族，因为异怪进入着chito成分反过来办法啦完全不做。</p>
     <p>为了克服其他种族的困难，在新发现和新开发的期间，仅靠血就能解决的吸血鬼是不会前进的。这太过分了。</p>
+    <br>
     <p>Q、如果血里有寄生虫会怎么样呢？</p>
     <p>A、把喝了的血消化为营养。血是主食，血液感染的病和寄生虫等基本上没有效果。</p>
 </body>
