--- a/OEBPS/Text/c020.xhtml
+++ b/OEBPS/Text/c020.xhtml
@@ -11,134 +11,130 @@
 
 <body>
     <h1>20. 暴走</h1>
-在大厅，在贵族们的注视中格鲁内瓦特的兄弟们的战斗被进行。
-与梅赛德斯等女性阵容时不同，这次菲利克斯方面也进行了很好的反击。
-但是是富余，还是为了显示自己的力量，菲利克斯一人与玻利斯和戈特弗里特二人同时挑战的事被允许。
-可是二对一，从梅赛德斯受到了的损坏残留着，菲利克斯的优势也不动摇。
-用也能称作华丽的动作避开攻击，象玩弄一样地作战着。
-在吸血鬼的社会中，力量是比什么都容易理解并且强有力的地位。
-并不是轻视出生和地位的差异。但是在吸血鬼社会中，强大才是宝贵的。
-saker也不例外，如果超过A级别的话，国家会授予其勋章，允许其自称法服贵族。
-从这个意义上来说，可以说这个国家被赋予了人人平等的机会。
-仅仅是有机会，绝不是简单的。
-因为吸血鬼的强度就是血的强度。
-继承了强壮父母血统的孩子容易变强，相反父母弱则比例变弱。
-正因为是重视血液的种族，血液的遗传、才能的继承程度是无法与人类比较的。
-这种素质在后天推翻绝不是不可能的……虽然不是不可能，但也不是容易的事。
-正因为如此，菲利克斯才会把继承了同样血统的兄弟们视为危险，在这里将优劣明确化，从而巩固自己的地位。
-“姐姐，会变成什么样呢？”
-“正如你所见。那两个人赢了菲利克斯。有胜负啊”
-对于玛吉特的问题，梅赛德斯回答说这是残酷的。
-虽然老板和戈特弗里特都很努力，但实力还是差距太大。
-接受了英才教育长大的人和不是英才教育的人之间的差距绝对不小。
-“但是，姐姐不是赢了吗？”
-“……你确实是莫尼卡吗？”
-“您还记得吧。真是光荣啊”
-从旁边插嘴的，是梅赛德斯的腹错的妹妹莫尼卡·格鲁内瓦特。
-金发纵卷的，确实是像大小姐一样的装束的少女。
-无所谓，这个家系金发的比率非常高。
-作为父亲的伯恩哈特的头发和梅赛德斯一样是蓝色的，但是和父亲一样是蓝色的头发的只有梅赛德斯一个人。
-那么其他全部都是母亲方面的血……伯恩哈特卿或许是金发恋物癖吧，梅赛德斯这样想着。
-“和之前的语调不一样吗？”
-“那段时间失礼了。请原谅没能理解姐姐伟大的我”
-梅赛德斯看着哥哥们的战斗，多少对莫尼卡的态度的变化感到困惑。
-以前见面的时候几乎不说话，但是语调确实是在嘴上看着这边。
-那并不是什么不可思议的事情。即使是同一个侧室的孩子，母亲的等级也不一样。
-摩尼卡从一开始就打扮得很帅，在东京都作为高价点心贩卖的巧克力，虽然只是给玛吉特少许，但也富余了。
-恐怕莫尼卡的父亲和母亲在等级上都不一样，但都是贵族。
-从这样的她看来，梅赛德斯应该是从市井女人的腹中诞生的。以自大的态度对待，没有任何不可思议。
-然而，不知为什么，再次见面的她却采取了敬佩梅赛德斯的态度，原本应该有的蔑视的态度也消失了。她到底发生了什么？
-“那时候，我被迷住了。成为姐姐所拥有的力量。
-比什么都，凛然的强者的风格。比起鲍里斯、菲利克斯哥哥，你才是最适合格鲁内瓦特这个名字的”
-“不凑巧和没兴趣。那样的名字就送给长子吧」
-“是吧。所以才故意输给胜利的战斗的吧？”
-梅赛德斯看见了莫尼卡。
-态度的突然变化有点令人毛骨悚然，无法抓住目标。
-是出于吸引别人的目的呢，还是有什么别的目的呢？
-不管怎么说，还是不要大意为好。
-“不知道是怎么回事。话说回来，好像已经决定了”
-勉强中断谈话，将视线返回大厅。
-在那里老板和戈特弗里特倒下了，没有任何伤痕的菲利克斯受到了大家的喝彩。
-梅赛德斯也暂且合起周围拍手，只是表面上现出承认他的样子。
-令人在意的是，尽管儿子好不容易取得了胜利，但表情却丝毫不变，丝毫没有祝福之意的贝尔曼哈特卿……哎呀，是个很难对付的男人吧。这么想着，梅赛德斯停止了对他的思考。
-“这样的话，试腕就结束了。
-各位，给我们勇敢的兄弟们以热烈的掌声！
-作为胜利者的菲利克斯在贵族们面前优雅地行一礼。
-看到这一幕人们纷纷高呼“果然菲利克斯才是后继者”，不露心声地与这个闹剧作对。
-但是，即使是看透了这样的胜负的闹剧，被逼着交往的话也并不有趣。
-从一开始就不想成为继承人的梅赛德斯，对于放弃了的玛吉特来说只是结束了不下流的集会而已，但玻利斯却不是这样。
-他感到屈辱。
-那倒是。作为垫脚石被邀请，就这样在大家面前作为衬托被使用。
-这样一来，不生气的人可有点儿不正常。不恨更难。
-正因为如此，他的暴走是必然的。
-“别开玩笑了……”
-老板把手伸进怀里，取出了紫色闪耀的石头。
-然后将它砸向地面。
-周围的贵族们、菲利克斯、梅赛德斯，对这种奇特的行为，甚至连乱发脾气的东西都破坏了。
-“‘解冻’！”
-但是，梅赛德斯从波利斯嘴里说出的话语让人瞠目结舌。
-解冻的宣言……那是解放迷宫的信号。
-没想到玻利斯攻略了迷宫，自己也像自己一样随身携带着，这样想着就马上否定了自己的想法。
-不对，老板没有那样的实力。
-但是，由于从碎石中出现能到达天花板的巨大躯体的魔物，梅赛德斯不得不认真地考虑那个『难道』。
-“解冻”
-但是，梅赛德斯从波利斯嘴里说出的话语让人瞠目结舌。
-解冻的宣言……那是解放迷宫的信号。
-没想到波利斯攻略了迷宫，自己也像自己一样随身携带着，这样想着就马上否定了自己的想法。
-不对，老板没有那样的实力。
-但是，由于从碎石中出现能到达天花板的巨大躯体的魔物，梅赛德斯不得不认真地考虑那个『难道』。
-“解冻”的咒语可以使魔物出场，也可以用梅赛德斯。
-在“压缩”迷宫时，钥匙持有者可以将自己选择的东西作为压缩对象外。
-相反，“解冻”的时候也选择一部分……根据场合的不同，把想拿出来的东西以外的迷宫的全部作为解冻的对象以外的事选出了的魔物一体解冻叫出的技能也不是不可能。
-（ツヴェルフ，那家伙有迷宫吗？）
-“不，主人。那是利用迷宫技术制造的一次性物品。
-名字叫做封石，和保存玛娜的魔石相反，可以封住物质随身携带”
-（我没见过那种东西。）
-“好的。那是只有地牢才能生产的项目。当然老板也可以做那个”
-（也就是说只有迷宫攻略者才能造出来的道具……？）
-“好的。但是从状况来看，波里斯自身作为攻略者的可能性极低。
-如果他自己有迷宫的话，大概会做出大量的魔物吧」
-梅赛德斯知道了，与图威尔夫小声对话，波里斯使用过的石头是攻略者由来的东西。
-但是，波里斯自身攻占地牢制造出来的可能性极低，齐维尔说。
-那么考虑的可能性不多。
-玻利斯抓住了偶然被其他攻略者流放到市场的封石了吗？
-还是，故意地攻略者把那个交给了老板？
-大厅因突然出现魔物而骚动，士兵们为了镇压场面向魔物挑战。
-但是魔物方面也相当的强大，轻轻地踢散着士兵们。
-实力固然重要，但其外表也相当威压。
-身高超过3米，全身统一为黑色。
-是靠近二足步行的人的人影的魔物，没有体毛。
-让人感觉不到理性的眼睛是真红。让人联想到鬼的强面，从口中看到的尖锐的獠牙。
-头部长着角，背上长着像蝙蝠一样的翅膀。
-形容为恶魔是最合适的姿态。
-《贝赛德兽。是被配置在迷宫的最下层的事多的魔物。
-那个战斗力是能和阿修拉奥加一起战斗的水平”
-梅赛德斯一边听着Zeverufu的说明，一边注意着自己的母亲和玛吉特，还有莫尼卡。
-贵族们虽然兴致勃勃，但毕竟强大是与名誉直接相关的吸血鬼。混乱到出口的愚蠢行为谁也没有跑。
-对突然的魔物的出现一边吵闹，残留冷静努力着状况的把握。
-“老板，住手！你以为这里是哪里！？”
-“你知道吗？我们已经不是格鲁内瓦特了。
-无异于无的赡养费，将尸体交出放逐……你希望的那样。
-那么，以后的事情你知道吗？只有你一个人，我带你去吧！”
-梅赛德斯担任观察状况的期间，场面也变得混沌。
-菲利克斯弄错了做法。他把玻利斯追得太紧了。
-他所采取的手段，并非在这个社会中稀有的，也不是被称为外道的。
-为了安定自己的地位同时进行自我呼吁和，对其他的兄弟的力量的炫耀。那是哪里的家都有的事。
-倒不如说，正如梅赛德斯以前所评论的那样，暗杀之类的手段他多少能说得好些吧。
-但因此被当作垫脚石的一方是否能接受又是另一个问题。如果说结论的话是不会理解的。
-从玻利斯的立场来看，被当作合适的借口马的结果，可以看到之后被放逐的未来。
-并且那个原因以富余的笑容做着绅士面。
-你不喜欢吧，不可能喜欢。
-生气是极自然的感情，一箭左右想报答谁被责备那个吧。
-不过，一般情况下就这样结束了。
-不喜欢、不能原谅、不能接受、想报答一箭……不管怎么想，现实中不可能做到这一点，只能放弃了。
-但是不知为什么，玻利斯的手中有这个手段，而且被逼到了不考虑后果的地步，所以就使用了它。
-这是偶然，以及菲利克斯的浅虑所导致的不可能的事情。
-并且菲利克斯不能逃避导致了这个状况的责任。
-如果在这里争先恐后地逃跑，即使在这种场合幸存下来，这次的评价也会一落千丈。父亲是不会允许在敌前逃走的。
-因此他下定决心，向狂暴的贝赛德兽挑战。
-本应是父亲的伯恩哈特，却用冰冷的金色瞳孔静观着他的身影。
-梅赛德斯（观察一会儿吧）
-伯恩哈特（要静观一会儿吗）
-有关血的强度，父母以高个体值拿红线的一方孩子变得强象同样一样的东西。
+    <p>在大厅，在贵族们的注视中格鲁内瓦特的兄弟们的战斗被进行。</p>
+    <p>与梅赛德斯等女性阵容时不同，这次菲利克斯方面也进行了很好的反击。</p>
+    <p>但是还有余裕吗，还是为了显示自己的力量，菲利克斯一人与玻利斯和戈特弗里特二人同时挑战的事被允许。</p>
+    <p>可是二对一，从梅赛德斯受到了的损坏残留着，菲利克斯的优势也不动摇。</p>
+    <p>用也能称作华丽的动作避开攻击，象玩弄一样地作战着。</p>
+    <p>在吸血鬼的社会中，力量是比什么都容易理解并且强有力的地位。</p>
+    <p>并不是轻视出生和地位的差异。但是在吸血鬼社会中，强大才是宝贵的。</p>
+    <p>saker也不例外，如果超过A级别的话，国家会授予其勋章，允许其自称法服贵族。</p>
+    <p>从这个意义上来说，可以说这个国家被赋予了人人平等的机会。</p>
+    <p>仅仅是有机会，绝不是简单的。</p>
+    <p>因为吸血鬼的强度就是血的强度。</p>
+    <p>继承了强壮父母血统的孩子容易变强，相反父母弱则比例变弱。</p>
+    <p>正因为是重视血液的种族，血液的遗传、才能的继承程度是无法与人类比较的。</p>
+    <p>这种素质在后天推翻绝不是不可能的……虽然不是不可能，但也不是容易的事。</p>
+    <p>正因为如此，菲利克斯才会把继承了同样血统的兄弟们视为危险，在这里将优劣明确化，从而巩固自己的地位。</p>
+    <span class="character"><p>“姐姐，会变成什么样呢？”</p></span>
+    <span class="character"><p>“正如你所见。即使是两个人也会是菲利克斯的胜利啊。”</p></span>
+    <p>对于玛吉特的问题，梅赛德斯回答说这是残酷的。</p>
+    <p>虽然波利斯和戈特弗里特都很努力，但实力还是差距太大。</p>
+    <p>接受了英才教育长大的人和不是英才教育的人之间的差距绝对不小。</p>
+    <span class="character"><p>“但是，姐姐不是赢了吗？”</p></span>
+    <span class="character"><p>“……你确实是莫尼卡吗？”</p></span>
+    <span class="character"><p>“您还记得吧。真是光荣啊”</p></span>
+    <p>从旁边插嘴的，是梅赛德斯的异母的妹妹莫尼卡·格鲁内瓦特。</p>
+    <p>金发纵卷的，确实是像大小姐一样的装束的少女。</p>
+    <p>说起来，这个家系金发的比率非常高。</p>
+    <p>作为父亲的伯恩哈特的头发和梅赛德斯一样是蓝色的，但是和父亲一样是蓝色的头发的只有梅赛德斯一个人。</p>
+    <p>那么其他全部都是母亲方面的血……伯恩哈特卿或许是金发恋物癖吧，梅赛德斯这样想着。</p>
+    <span class="character"><p>“和之前的语调不一样吗？”</p></span>
+    <span class="character"><p>“那段时间失礼了。请原谅没能理解姐姐伟大的我”</p></span>
+    <p>梅赛德斯看着哥哥们的战斗，多少对莫尼卡的态度的变化感到困惑。</p>
+    <p>以前见面的时候几乎不说话，但是语调确实是在嘴上看着这边。</p>
+    <p>那并不是什么不可思议的事情。即使是同一个侧室的孩子，母亲的等级也不一样。</p>
+    <p>摩尼卡从一开始就打扮得很帅，在都城作为高价点心贩卖的巧克力，虽然只是给玛吉特少许，但也很富裕了。</p>
+    <p>恐怕莫尼卡的父亲和母亲在等级上都不一样，但都是贵族。</p>
+    <p>从这样的她看来，梅赛德斯应该是从市井女人的腹中诞生的。以自大的态度对待，没有任何不可思议。</p>
+    <p>然而，不知为什么，再次见面的她却采取了敬佩梅赛德斯的态度，原本应该有的蔑视的态度也消失了。她到底发生了什么？</p>
+    <span class="character"><p>“那时候，我被迷住了。成为姐姐所拥有的力量。</p>
+    <p>比什么都，凛然的强者的风格。比起鲍里斯、菲利克斯哥哥，你才是最适合格鲁内瓦特这个名字的”</p></span>
+    <span class="character"><p>“不凑巧和没兴趣。那样的名字就送给长子吧」</p></span>
+    <span class="character"><p>“是吧。所以才故意输给胜利的战斗的吧？”</p></span>
+    <p>梅赛德斯看向莫尼卡。</p>
+    <p>态度的突然变化有点令人毛骨悚然，不知为何会有这样的转变。</p>
+    <p>是出于吸引别人的目的呢，还是有什么别的目的呢？</p>
+    <p>不管怎么说，还是不要大意为好。</p>
+    <span class="character"><p>“不知道你在说什么呢。话说回来，好像已经决定了”</p></span>
+    <p>勉强中断谈话，将视线返回大厅。</p>
+    <p>在那里波利斯和戈特弗里特倒下了，没有任何伤痕的菲利克斯受到了大家的喝彩。</p>
+    <p>梅赛德斯也暂且合起周围拍手，只是表面上现出承认他的样子。</p>
+    <p>令人在意的是，尽管儿子好不容易取得了胜利，但表情却丝毫不变，丝毫没有祝福之意的伯恩哈特卿……哎呀，是个很难对付的男人吧。这么想着，梅赛德斯停止了对他的思考。</p>
+    <span class="character"><p>“这样的话，试腕就结束了。</p>
+    <p>各位，给我们勇敢的兄弟们以热烈的掌声！</p></span>
+    <p>作为胜利者的菲利克斯在贵族们面前优雅地行一礼。</p>
+    <p>看到这一幕人们纷纷高呼“果然菲利克斯才是后继者”，不露心声地与这个闹剧作对。</p>
+    <p>但是，即使是看透了这样的胜负的闹剧，被逼着交往的话也并不有趣。</p>
+    <p>从一开始就不想成为继承人的梅赛德斯，对于放弃了的玛吉特来说只是结束了不下流的集会而已，但玻利斯却不是这样。</p>
+    <p>他感到屈辱。</p>
+    <p>那倒是。作为垫脚石被邀请，就这样在大家面前作为衬托被使用。</p>
+    <p>这样一来，不生气的人可有点儿不正常。不恨更难。</p>
+    <p>正因为如此，他的暴走是必然的。</p>
+    <span class="character"><p>“别开玩笑了……”</p></span>
+    <p>波利斯把手伸进怀里，取出了紫色闪耀的石头。</p>
+    <p>然后将它砸向地面。</p>
+    <p>对于这一奇行，周围的贵族们、菲利克斯、梅赛德斯也只知道是乱发脾气搞坏了什么。。</p>
+    <span class="character"><p>“‘解冻’！”</p></span>
+    <p>但是，梅赛德斯从波利斯嘴里说出的话语让人瞠目结舌。</p>
+    <p>解冻的宣言……那是解放迷宫的信号。</p>
+    <p>没想到玻利斯攻略了迷宫，自己也像自己一样随身携带着，这样想着就马上否定了自己的想法。</p>
+    <p>不对，波利斯没有那样的实力。</p>
+    <p>但是，由于从碎石中出现能到达天花板的巨大躯体的魔物，梅赛德斯不得不认真地考虑那个『难道』。</p>
+    <p>“解冻”的咒语可以使魔物出场，梅赛德斯也可以用。</p>
+    <p>在“压缩”迷宫时，钥匙持有者可以将自己选择的东西作为压缩对象外。</p>
+    <p>相反，“解冻”的时候也选择一部分……根据场合的不同，把想拿出来的东西以外的迷宫的全部作为解冻的对象以外的事选出了的魔物一体解冻叫出的技能也不是不可能。</p>
+    <span class="character"><p>（ツヴェルフ，那家伙有迷宫吗？）</p></span>
+    <span class="character"><p>“不，主人。那是利用迷宫技术制造的一次性物品。</p>
+    <p>名字叫做封石，和保存玛娜的魔石相反，可以封住物质随身携带”</p></span>
+    <p>（我没见过那种东西。）</p>
+    <span class="character"><p>“是的。那是只有地牢才能生产的项目。当然BOSS也可以做那个”</p></span>
+    <p>（也就是说只有迷宫攻略者才能造出来的道具……？）</p>
+    <span class="character"><p>“是的。但是从状况来看，波里斯自身作为攻略者的可能性极低。</p>
+    <p>如果他自己有迷宫的话，大概会做出大量的魔物吧」</p></span>
+    <p>梅赛德斯知道了，与图威尔夫小声对话，波里斯使用过的石头是攻略者由来的东西。</p>
+    <p>但是，波里斯自身攻占地牢制造出来的可能性极低，齐维尔说。</p>
+    <p>那么考虑的可能性不多。</p>
+    <p>玻利斯抓住了偶然被其他攻略者流放到市场的封石了吗？</p>
+    <p>还是，故意地攻略者把那个交给了波利斯？</p>
+    <p>大厅因突然出现魔物而骚动，士兵们为了镇压场面向魔物挑战。</p>
+    <p>但是魔物方面也相当的强大，轻轻地踢散着士兵们。</p>
+    <p>实力固然重要，但其外表也相当威压。</p>
+    <p>身高超过3米，全身统一为黑色。</p>
+    <p>是靠近二足步行的人的人影的魔物，没有体毛。</p>
+    <p>让人感觉不到理性的真红的眼睛。让人联想到鬼的强面，从口中看到的尖锐的獠牙。</p>
+    <p>头部长着角，背上长着像蝙蝠一样的翅膀。</p>
+    <p>形容为恶魔是最合适的姿态。</p>
+    <span class="character"><p>《贝赛德兽。是被配置在迷宫的最下层的事多的魔物。</p>
+    <p>那个战斗力是能和阿修拉奥加一起战斗的水平”</p></span>
+    <p>梅赛德斯一边听着zwölf的说明，一边注意着自己的母亲和玛吉特，还有莫尼卡。</p>
+    <p>贵族们虽然兴致勃勃，但毕竟强大是与名誉直接相关的吸血鬼。混乱地跑向出口的愚蠢行为谁也没有做。</p>
+    <p>对突然的魔物的出现一边吵闹，残留冷静努力着状况的把握。</p>
+    <br>
+    <span class="character"><p>“波利斯，住手！你以为这里是哪里！？”</p></span>
+    <span class="character"><p>“你知道吗？我们已经不是格鲁内瓦特了。</p>
+    <p>无异于无的赡养费，将尸体交出放逐……你希望的那样。</p>
+    <p>那么，以后的事情你知道吗？让你也体会一下！”</p></span>
+    <p>梅赛德斯担任观察状况的期间，场面开始变混沌。</p>
+    <p>菲利克斯弄错了做法。他把玻利斯追得太紧了。</p>
+    <p>他所采取的手段，并非在这个社会中稀有的，也不是被称为外道的。</p>
+    <p>为了安定自己的地位同时进行自我呼吁和，对其他的兄弟的力量的炫耀。那是哪里的家都有的事。</p>
+    <p>倒不如说，正如梅赛德斯以前所评论的那样，暗杀之类的手段他多少能说得好些吧。</p>
+    <p>但因此被当作垫脚石的一方是否能接受又是另一个问题。如果说结论的话是不会理解的。</p>
+    <p>从玻利斯的立场来看，被当作合适的借口马的结果，可以看到之后被放逐的未来。</p>
+    <p>并且那个原因以富余的笑容做着绅士面。</p>
+    <p>很不喜欢吧，不可能喜欢。</p>
+    <p>生气是极自然的感情，一箭左右想报答谁被责备那个吧。</p>
+    <p>不过，一般情况下就这样结束了。</p>
+    <p>不喜欢、不能原谅、不能接受、想报一箭……不管怎么想，现实中不可能做到这一点，只能放弃了。</p>
+    <p>但是不知为什么，玻利斯的手中有这个手段，而且被逼到了不考虑后果的地步，所以就使用了它。</p>
+    <p>这是偶然，以及菲利克斯的浅虑所导致的不可能的事情。</p>
+    <p>并且菲利克斯不能逃避导致了这个状况的责任。</p>
+    <p>如果在这里争先恐后地逃跑，即使在这种场合幸存下来，这次的评价也会一落千丈。父亲是不会允许在敌前逃走的。</p>
+    <p>因此他下定决心，向狂暴的贝赛德兽挑战。</p>
+    <p>本应是父亲的伯恩哈特，却用冰冷的金色瞳孔静观着他的身影。</p>
+    <p class="divline"></p>
+    <p>梅赛德斯（观察一会儿吧）</p>
+    <p>伯恩哈特（要静观一会儿吗）</p>
+    <p>有关血的强度，父母以高个体值拿红线的一方孩子变得强象同样一样的东西。</p>
 </body>
