--- a/OEBPS/Text/c021.xhtml
+++ b/OEBPS/Text/c021.xhtml
@@ -51,25 +51,25 @@
     <p>但是，现在我不得不意识到，父亲的血确实有影响。</p>
     <p>「好啊！就这样，把那家伙装模作样的一面给毁掉了！”</p>
     <p>玻利斯以胜利自豪，向贝赛德兽下达命令。</p>
-    <p>但是，贝赛德兽却被那声音停止了动作，看起来很不愉快地看到了老板。</p>
+    <p>但是，贝赛德兽却被那声音停止了动作，看起来很不愉快地看到了波利斯。</p>
     <p>然后向玻利斯随便靠近，抓住他的脖子。</p>
     <p>“啊……！？什、什么！？”</p>
     <p>“弱者！像你这样的人不要命令我啊！”</p>
     <p>啊，说了。</p>
-    <p>梅赛德斯一边考虑着这样悠闲的事情，一边被老板吓了一跳。</p>
+    <p>梅赛德斯一边考虑着这样悠闲的事情，一边被波利斯吓了一跳。</p>
     <p>那个男人竟然无法控制自己召唤出的魔物。</p>
-    <p>就这样贝赛德兽把老板扔到墙上，使之昏倒了。</p>
+    <p>就这样贝赛德兽把波利斯扔到墙上，使之昏倒了。</p>
     <p>于是贝赛德兽再次向菲利克斯进发。</p>
     <p>“你在干什么！请快点帮助菲利克斯！”</p>
     <p>伯利斯以胜利自豪，向贝赛德兽下达命令。</p>
-    <p>但是，贝赛德兽却被那声音停止了动作，看起来很不愉快地看到了老板。</p>
+    <p>但是，贝赛德兽却被那声音停止了动作，看起来很不愉快地看到了波利斯。</p>
     <p>然后向玻利斯随便靠近，抓住他的脖子。</p>
     <p>“啊……！？什、什么！？”</p>
     <p>“弱者！像你这样的人不要命令我啊！”</p>
     <p>啊，说了。</p>
-    <p>梅赛德斯一边考虑着这样悠闲的事情，一边被老板吓了一跳。</p>
+    <p>梅赛德斯一边考虑着这样悠闲的事情，一边被波利斯吓了一跳。</p>
     <p>那个男人竟然无法控制自己召唤出的魔物。</p>
-    <p>就这样贝赛德兽把老板扔到墙上，使之昏倒了。</p>
+    <p>就这样贝赛德兽把波利斯扔到墙上，使之昏倒了。</p>
     <p>于是贝赛德兽再次向菲利克斯进发。</p>
     <p>“你在干什么！请快点帮助菲利克斯！”</p>
     <p>突然，从出口中听到了从未有过的某人的声音。</p>
@@ -78,7 +78,7 @@
     <p>既然安详地和柏林哈尔特交谈，那肯定不是单纯的贵族。</p>
     <p>“母亲，这里很危险！请逃走！”</p>
     <p>菲利克斯面向女性呼喊的事明白了她的原形。</p>
-    <p>原来如此，菲利克斯的母亲……也就是说，你是本妻吗？那样的话对伯恩哈特的态度也能理解。</p>
+    <p>原来如此，菲利克斯的母亲……也就是说，你是正妻吗？那样的话对伯恩哈特的态度也能理解。</p>
     <p>但是在这里梅赛德斯感到了一个疑问。</p>
     <p>菲利克斯的发色是金。伯恩哈特是蓝色的。并且菲利克斯的母亲是桃色。</p>
     <p>父母都不是金发。</p>
