--- a/OEBPS/Text/c022.xhtml
+++ b/OEBPS/Text/c022.xhtml
@@ -36,7 +36,7 @@
     <p>他毫不留神地横穿受伤的我的孩子菲利克斯，站在梅赛德斯面前。</p>
     <p>“有什么事吗？”格鲁内瓦特爵士”</p>
     <p>梅赛德斯对亲生父亲，硬要用毫不客气的称呼。</p>
-    <p>自己不是本妻而是侧室的孩子，现在和母亲一起随时可以离开这个城市，所以现在被剥夺了格鲁内瓦特的名字，被赶出也完全不困扰。</p>
+    <p>自己不是正妻而是侧室的孩子，现在和母亲一起随时可以离开这个城市，所以现在被剥夺了格鲁内瓦特的名字，被赶出也完全不困扰。</p>
     <p>因为至今为止有坚固的地基，所以不需要卖媚。</p>
     <p>更何况，我更没有把至今为止初次见面的男人称为父亲的打算。</p>
     <p>因为那些事，梅赛德斯故意制造了墙壁。</p>
@@ -64,7 +64,7 @@
     <p>如果你的哥哥……要是我的孩子，会那样难看吗？</p>
     <p>那叫我的孩子太淡血了”</p>
     <p>伯恩哈特瞥见了菲利克斯和玻利斯，用轻蔑的眼光看向了他。</p>
-    <p>这很明显不是父亲对儿子的，而是足以让人确信包括本妻的女性在内没有任何感情。</p>
+    <p>这很明显不是父亲对儿子的，而是足以让人确信包括正妻的女性在内没有任何感情。</p>
     <p>因为不优秀不是我的孩子。因为长得难看，所以没有继承自己的血统。他是这么说的。</p>
     <p>除了梅赛德斯之外的所有人都对这种扭曲无言以对，他的话还在继续。</p>
     <p>“重视血统。虽然比我逊色，但我期待着如果是有贵血统的女人，能否为我的血留下深色的孩子。</p>
@@ -77,7 +77,7 @@
     <p>比如，在家的外面被陌生人恶语相向，这有什么感觉呢？</p>
     <p>精力充沛，不要说很过分的话，只是觉得很可怜罢了。不会抱着发自内心的愤怒和悲哀。</p>
     <p>如果为了陌生人而真心发怒、哭泣的话，那个人一定是个好人，但梅赛德斯却不同。</p>
-    <p>但是，即使是这样的她，也只能哀叹被伯恩哈特这样说的本妻和菲利克斯。</p>
+    <p>但是，即使是这样的她，也只能哀叹被伯恩哈特这样说的正妻和菲利克斯。</p>
     <p>“但是，在只觉得这无意义的宴会上我发现了。</p>
     <p>继承了我最浓的血液，和我一样的存在。</p>
     <p>啊，我现在很高兴。拥有孩子的父母的喜悦难道就是这样的吗？</p>
