--- a/OEBPS/Text/c023.xhtml
+++ b/OEBPS/Text/c023.xhtml
@@ -107,7 +107,7 @@
     <p>但是，梅赛德斯得知这一消息后，稍微重新审视了伯恩哈特。</p>
     <p>他是个冷血，但至少能履行义务的男人。我是这样想的。</p>
     <p>正因为如此，才能使用。</p>
-    <p>还是那个男人的利用价值···高(贵)。梅赛德斯再次认识到。</p>
+    <p>还是那个男人的利用价值···很高。梅赛德斯再次认识到。</p>
     
     <p>伯恩哈特“今天的菜单是……”</p>
     <p>厨师长：“这么难的菜太勉强了。这里是吸血鬼之国”</p>
