--- a/OEBPS/Text/c024.xhtml
+++ b/OEBPS/Text/c024.xhtml
@@ -47,7 +47,7 @@
     <p>“那么首先，请强烈意识到心脏。接着感受到血液的流动——”</p>
     <p>梅赛德斯一边听老师讲解，一边看了菲利克斯。</p>
     <p>从那件事以来菲利克斯虽然没有特别干涉梅赛德斯，但在内心一定很复杂吧。</p>
-    <p>实际上，本妻对此提出了种种抗议。</p>
+    <p>实际上，正妻对此提出了种种抗议。</p>
     <p>那天的事情菲利克斯也有过错，对他来说是不幸的事情。</p>
     <p>这是从伯恩哈特听来的故事，但波里斯最终没有得到什么情报。</p>
     <p>本人曰，使之沸腾对菲利克斯的愤怒的时候，偶然在黑暗市发现购买了？</p>
