--- a/OEBPS/Text/c025.xhtml
+++ b/OEBPS/Text/c025.xhtml
@@ -73,7 +73,7 @@
     <p>看着父亲的眼睛被惊讶和失望所点缀，年幼时感受到的菲利克斯为了得到父亲的认可而拼命努力。</p>
     <p>历史，算术，文学，还有战斗。总之拼命的塞进脑袋，让身体记住了。</p>
     <p>但是父亲的目光没有去菲利克斯，不仅如此，他还为母亲准备了几个侧室，准备了“预备”。</p>
-    <p>看老板和哥特弗里特的年龄就知道了，但实际上，在放弃之前菲利克斯可能就不行了。</p>
+    <p>看波利斯和哥特弗里特的年龄就知道了，但实际上，在放弃之前菲利克斯可能就不行了。</p>
     <p>懊悔，不甘心。</p>
     <p>你的孩子是我。大儿子是我。继承格鲁内瓦特之名的就是这个菲利克斯。</p>
     <p>如此坚强，强烈地在心中呼喊。我想让父亲那样想。</p>
@@ -92,7 +92,7 @@
     <p>并且比什么都，好象看着谁本质上谁都没看的，那个瞳孔。</p>
     <p>虽然长相完全不同，但初次见到的妹妹却惊讶地寄宿着父亲伯恩哈特的身影。</p>
     <p>更加从草丛隐藏龙到蓑衣蛇出来了。</p>
-    <p>老板失控，将魔物解放到了会场。</p>
+    <p>波利斯失控，将魔物解放到了会场。</p>
     <p>菲利克斯拼命地与对手作战，但是完全无力抵抗，正想着已经不行了的时候，梅赛德斯用压倒性的力量扭倒了魔物。</p>
     <p>最初是玻利斯和梅赛德斯一起展示出来的，我想可能是让魔物演戏吧。</p>
     <p>但是不一样。梅赛德斯单纯地凭借自己的力量打败了那个魔物。</p>
