--- a/OEBPS/Text/c027.xhtml
+++ b/OEBPS/Text/c027.xhtml
@@ -80,7 +80,7 @@
     <p>“啊，那我也去汉娜吧。”</p>
     <p>汉娜对梅赛德斯对新生代表的寒暄「哈—」啦的「厉害」啦不停地佩服。</p>
     <p>站在那样的立场上，是因为地位相当高，一开始就决定了那个职责，或者是考试中获得高分。</p>
-    <p>第五王子的考试结果不明,不过，他不论分数承担那个作用的可能性高(贵)。</p>
+    <p>第五王子的考试结果不明,不过，他不论分数承担那个作用的可能性更高。</p>
     <p>之后两人轻轻地谈论了自己的境遇，聊了一会儿后，从汉娜那里得到了坚固，语调也变成了破碎的东西。</p>
     <p>“话说回来，梅赛德斯的头发很清爽呢。皮肤也很光滑。真羡慕啊”</p>
     <p>“汉娜也十分可爱吧”</p>
