--- a/OEBPS/Text/c028.xhtml
+++ b/OEBPS/Text/c028.xhtml
@@ -29,7 +29,7 @@
     <p>担任A班的古斯塔夫在讲台上讲述这个世界的成立。</p>
     <p>梅赛德斯听了他的话，心里很复杂。</p>
     <p>攻略迷宫时知道的真相的一部分……在这个世界被歌颂的神恐怕是人类的事情。</p>
-    <p>如果是这样，到现在自己认为是月亮的那个伊甸园作为地球的可能性极高(贵)。</p>
+    <p>如果是这样，到现在自己认为是月亮的那个伊甸园作为地球的可能性极更高。</p>
     <p>但是也留下了疑问。如果说那是地球，这里究竟是哪里呢？</p>
     <p>从火星上看到的地球应该没有那么大。</p>
     <p>那么这个世界到底是什么呢……疑问无穷。</p>
