--- a/OEBPS/Text/c033.xhtml
+++ b/OEBPS/Text/c033.xhtml
@@ -58,7 +58,7 @@
     <p>那真的是生物吗？这是机器和……不是叫机器人吗？</p>
     <p>“当然是生物。呼吸，吃饭，进行生命活动，流血，受伤，生病，生子，老死。可以断言这是无可争辩的生命体”</p>
     <p>“但是用纳米机器做出来的”</p>
-    <p>“老板好像误解了纳米机器。的确，纳米机器是人……”</p>
+    <p>“BOSS好像误解了纳米机器。的确，纳米机器是人……”</p>
     <p>正在说话的时候，泽维尔的话突然停了下来。</p>
     <p>而且梅赛德斯感到有些焦躁。</p>
     <p>为什么停止？现在讲的话，才是最重要的，关系到世界的根基的东西。</p>
