--- a/OEBPS/Text/c034.xhtml
+++ b/OEBPS/Text/c034.xhtml
@@ -131,10 +131,10 @@
     <p>那肯定是……是汉娜。</p>
     <p>看来，今后还得注意她的动向。</p>
     <p class="divline"></p>
-    <p>メルセデス「ところでゴブリンヘクサーのフードいらないと思うんだが、それ無しで生産すれば少しはコスト削れないかな」</p>
+    <p>梅赛德斯「ところでゴブリンヘクサーのフードいらないと思うんだが、それ無しで生産すれば少しはコスト削れないかな」</p>
     <p>ツヴェルフ「まあ１Pくらいは節約出来ますね」</p>
-    <p>メルセデス「それと杖がないと魔法は使えないのか？」</p>
+    <p>梅赛德斯「それと杖がないと魔法は使えないのか？」</p>
     <p>ツヴェルフ「使えますが威力は落ちますね」</p>
-    <p>メルセデス「つまり催眠とかの魔法だけを使わせる分には必要ないわけだ。なら杖もいらないな」</p>
+    <p>梅赛德斯「つまり催眠とかの魔法だけを使わせる分には必要ないわけだ。なら杖もいらないな」</p>
     <p>ゴブリンヘクサー（やめて！？　フードと杖ないと俺、個性のないそこらのゴブリンと同じ外見になるから！）</p>
 </body>
