--- a/OEBPS/Text/c039.xhtml
+++ b/OEBPS/Text/c039.xhtml
@@ -120,7 +120,7 @@
     <p>“那么，你能告诉我是怎么回事吗？”</p>
     <p>被士兵所吸引的国王一家似乎失去了兴趣，将视线移开，伯恩哈特对汉娜搭话。</p>
     <p>那个作为梅赛德斯也想问一下。</p>
-    <p>反正，到现在为止一直认为敌人的可能性高(贵)标记着，打开盖子试着这边。</p>
+    <p>反正，到现在为止一直认为敌人的可能性更高标记着，打开盖子试着这边。</p>
     <p>不问情况就不爽快。</p>
     <p>“我也知道我是旧王派。</p>
     <p>11年前王子迎来新妃，突然王子多了吧。</p>
