--- a/OEBPS/Text/c042.xhtml
+++ b/OEBPS/Text/c042.xhtml
@@ -95,7 +95,7 @@
     <p>那就是迷宫的所有者如果死在没有后继者的状态下会怎样。</p>
     <p>那个场合迷宫成为未攻略的状态，在哪里复活。</p>
     <p>但是只要迷宫所有者杀死迷宫所有者时，迷宫就有可能抢劫。</p>
-    <p>再来一个。只不过是攻略者的血缘者的人称作下位权限，攻略者本人为上位权限，下位权限的老板在同意下可以向上位权限的老板转让地牢。</p>
+    <p>再来一个。只不过是攻略者的血缘者的人称作下位权限，攻略者本人为上位权限，下位权限的BOSS在同意下可以向上位权限的BOSS转让地牢。</p>
     <p>伯恩哈特知道那件事。</p>
     <p>话虽如此，当然也没有杀死女儿的打算。伯恩哈特并没有那么愚蠢，他能使那样的人才死去。</p>
     <p>公主如果继续走下去的话，会随意协助梅赛德斯，所以还是没有必要的。</p>
