--- a/OEBPS/Text/c043.xhtml
+++ b/OEBPS/Text/c043.xhtml
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>43. 魔物バトル（バトルするとは言ってない）</h1>
-    <p>王剣を巡る騒動は終わり、メルセデスは学園生活へと戻った。</p>
+    <p>王剣を巡る騒動は終わり、梅赛德斯は学園生活へと戻った。</p>
     <p>しかし、まだ完全に学業の邪魔になる連中を排除出来たわけではない。</p>
     <p>暗殺者連中に襲撃のタイミングを知らせていた内通者は未だ誰だか判明しておらず、不安の種が学園内に残ってしまっている。</p>
     <p>これを見付けだして始末しない限り、本当の平穏は戻って来ないだろう。</p>
@@ -19,7 +19,7 @@
     <p>モニカの同類だろうか？</p>
     <p>また、ジークリンデの正体判明と同時に学園の警備が強化され、常に学園内を兵士が巡回するようになった。</p>
     <p>無論全員、ベルンハルトの息がかかった兵士だ。</p>
-    <p>メルセデスとしては、内通者がまだ残っている上にいつ暗殺者が出るか分からない学園よりも城でジークリンデを守るべきだろうと思うのだが、これに対しベルンハルトはこう答えた。</p>
+    <p>梅赛德斯としては、内通者がまだ残っている上にいつ暗殺者が出るか分からない学園よりも城でジークリンデを守るべきだろうと思うのだが、これに対しベルンハルトはこう答えた。</p>
     <p>「城にはまだ、イザークについて甘い汁を吸っていたカス共が紛れている。他国の間者も何人かいるだろう。</p>
     <p>全て洗い出し、粛清するまでは王女を置くのはかえって危険だ。まだ学園の方がマシだろう」</p>
     <p>要約すると、粛清の嵐を吹かして邪魔な貴族を一掃し、自分が今以上の権力を握るのに王女が邪魔だからしばらく学園に隔離したいという事だ。</p>
@@ -28,7 +28,7 @@
     <p>駄目だこの外道……早く何とかしないと……。</p>
     <p>季節は巡り、夏が訪れる。</p>
     <p>王剣を巡る騒動で暴れたのが原因なのか、最近ではやたら他の生徒が媚を売ってくるのが鬱陶しい。</p>
-    <p>メルセデス自身にその気が無かろうと、彼女はいまや王女を救い、偽の王家を打倒した英雄だ。</p>
+    <p>梅赛德斯自身にその気が無かろうと、彼女はいまや王女を救い、偽の王家を打倒した英雄だ。</p>
     <p>当然生徒達の興味と好奇の視線を勝ち取ってしまい、親の命令なのかそれとも本人の判断なのかは知らないが、やたら擦り寄って来る連中が増えてしまった。</p>
     <p>「ねえメルちゃん、メルちゃんは狩猟祭出る？」</p>
     <p>「まあ、一応参加してみますが……それより何故、貴方がまだ学園にいるかが気になります、伯母様」</p>
@@ -54,11 +54,11 @@
     <p>今はここにいないフェリックスの事を思い浮かべ、ハンナは顔をしかめた。</p>
     <p>通常、貴族の家督というものは長男が継ぐものだ。それがこの国の常識である。</p>
     <p>しかしそこは常識など踏み越えるのが当然のベルンハルト。しきたりになど縛られない。</p>
-    <p>彼は彼自身の判断こそを最上と考えるが故に、周囲の反対も常識も無視してメルセデスを跡目につかせる気でいる。</p>
+    <p>彼は彼自身の判断こそを最上と考えるが故に、周囲の反対も常識も無視して梅赛德斯を跡目につかせる気でいる。</p>
     <p>ハンナはそれが分かっているからこそ、フェリックスを不憫に思ったのだ。</p>
     <p>「何か、ベルンハルトを認めさせるような手柄でも上げれば話は違うんだけどね」</p>
     <p>「手柄、か……」</p>
-    <p>メルセデスとしてもフェリックスがぞんざいに扱われている現状はあまりいいものではない。</p>
+    <p>梅赛德斯としてもフェリックスがぞんざいに扱われている現状はあまりいいものではない。</p>
     <p>可哀想だとかそういう感情は抱かないし、割とどうでもいいのだがフェリックスが評価されないと本当にこちらに跡継ぎが押し付けられてしまう。</p>
     <p>無論逃げるつもりではあるが、一番丸く収まるのはやはりフェリックスに押し付けて行く事だ。</p>
     <p>そういう点で言えばフェリックスがある程度ベルンハルトに認められている方がいい。</p>
@@ -67,7 +67,7 @@
     <p>もっと大きな、無視出来ない手柄をあげさせれば楽なのだが……。</p>
     <p>「考えておこう」</p>
     <p>今は特にこれといって思い付かない。</p>
-    <p>メルセデスは話を打ち切り、机の上に羊皮紙を広げて自習にとりかかった。</p>
+    <p>梅赛德斯は話を打ち切り、机の上に羊皮紙を広げて自習にとりかかった。</p>
     <p>◆</p>
     <p class="divline"></p>
     <p>狩猎节前还有一个活动。</p>
