--- a/OEBPS/Text/c046.xhtml
+++ b/OEBPS/Text/c046.xhtml
@@ -11,27 +11,27 @@
 
 <body>
     <h1>46. 濃霧派</h1>
-    <p>　メルセデスへの勧誘は続いた。</p>
+    <p>　梅赛德斯への勧誘は続いた。</p>
     <p>　『雷鳴』、『螺旋』に続き接触を図ってきたのは『濃霧』派閥だ。</p>
     <p>　授業の合間の休憩時間に復習をしていると上級生から呼び出しを受けたのだ。</p>
     <p>　非常に鬱陶しいし、邪魔しないで欲しいのだが無視すると更に鬱陶しくなるだろう。</p>
-    <p>　なので断る為にメルセデスは一度だけ誘いに応じる事にした。</p>
+    <p>　なので断る為に梅赛德斯は一度だけ誘いに応じる事にした。</p>
     <p>　呼び出された場所は、この時間は誰も使っていない空き教室だ。</p>
     <p>　中に入ると、まず目についたのは大柄な二人の男だ。</p>
     <p>　二人共に青いコートを羽織り、サングラスで素顔を隠している。</p>
-    <p>　そしてその中央にいるのは、メルセデスとそう変わらない年齢に見える少年であった。</p>
+    <p>　そしてその中央にいるのは、梅赛德斯とそう変わらない年齢に見える少年であった。</p>
     <p>　桜色の髪は艶があり、顔立ちも一見すると少女と勘違いしてしまいそうなものだ。</p>
     <p>　身体つきも華奢で、本当に女のような男だ。</p>
     <p>　……というか、本当に女の子なのかもしれない。正直見分けが全くつかないのだ。</p>
-    <p>「よく来たね、メルセデス・グリューネヴァルト」</p>
+    <p>「よく来たね、梅赛德斯・グリューネヴァルト」</p>
     <p>　あ、男だ。</p>
-    <p>　少年の声を聞いた事でメルセデスは彼の性別を確信した。</p>
+    <p>　少年の声を聞いた事で梅赛德斯は彼の性別を確信した。</p>
     <p>　見た目に反して声が低いのだ。</p>
     <p>　彼の服装はこの学園指定の制服であり、これを着れるのは一部の成績上位者のみである。</p>
     <p>　つまりこの時点で、彼の学力はある程度保証されていた。</p>
     <p>　まあ、学力だけが高い馬鹿の可能性もあるわけだが。</p>
     <p>「僕はハルトマン・ハルトマン。『濃霧』派閥の長にして、西方の大都市ネーベルバンクをいずれ統治する者だ」</p>
-    <p>　名前と家名が同じとは、覚えやすいなとメルセデスは場違いな感想を抱いた。</p>
+    <p>　名前と家名が同じとは、覚えやすいなと梅赛德斯は場違いな感想を抱いた。</p>
     <p>　それにしてもネーベルバンクという名前は何処かで聞き覚えがある気がする。</p>
     <p>　はて、どこで聞いた名前だったか。</p>
     <p>「両脇にいるこいつ等は僕の護衛だ。</p>
@@ -39,16 +39,16 @@
     <p>更に彼等の母は王家直属の隠密部隊の隊長でもあり、僕の家庭教師でもある。</p>
     <p>ああ、脅しているわけではないよ。ただ事実を教えているだけさ」</p>
     <p>　随分とお喋りかつ、自慢したがりな性格らしい。</p>
-    <p>　この時点で既に三下感が漂っているが、メルセデスはあえて指摘せず言葉を聞いていた。</p>
+    <p>　この時点で既に三下感が漂っているが、梅赛德斯はあえて指摘せず言葉を聞いていた。</p>
     <p>　本人の能力はさておき、とりあえずコネという点ではかなり優れているらしい。</p>
     <p>「単刀直入に言おう。僕らの派閥に加わるがいい。君にはその資格がある」</p>
     <p>「断る」</p>
     <p>　誘われたので、とりあえず断っておいた。</p>
     <p>　下らない派閥ごっこなど彼等だけでやっていればいい。</p>
-    <p>　そんな事よりメルセデスは学業に打ち込み、知識と技術を磨きたいのだ。</p>
-    <p>　メルセデスの敵は彼等ではない。</p>
+    <p>　そんな事より梅赛德斯は学業に打ち込み、知識と技術を磨きたいのだ。</p>
+    <p>　梅赛德斯の敵は彼等ではない。</p>
     <p>　家を出て行く際にいずれ立ち塞がるだろう父、ベルンハルトだ。</p>
-    <p>　そしてこの世界の真実を探す上で必ず衝突するいくつものダンジョンや、ダンジョン所有者こそがメルセデスの見据える仮想敵である。</p>
+    <p>　そしてこの世界の真実を探す上で必ず衝突するいくつものダンジョンや、ダンジョン所有者こそが梅赛德斯の見据える仮想敵である。</p>
     <p>　派閥だの何だの、そんな小さなものは最初から眼中にないのである。</p>
     <p>「ふ……どうやら君は勘違いしているようだ。</p>
     <p>これはお願いではない。ハルトマン家次期当主たる僕が命令しているんだよ」</p>
@@ -89,7 +89,7 @@
     <p>「実行の有無に関係なく、そうして圧力をかけて従わせようとする行為を脅迫と言います。</p>
     <p>私達貴族は大きな権力を持つからこそ、その力の使い所を考えなくてはなりません。</p>
     <p>自らの為だけに他者を従わせるのでは暴君と変わりません」</p>
-    <p>　余談だが、自らの為だけに他者を従わせて子供まで孕ませた男がメルセデスの父である。</p>
+    <p>　余談だが、自らの為だけに他者を従わせて子供まで孕ませた男が梅赛德斯の父である。</p>
     <p>“看来你们有必要进行再教育呢。”</p>
     <p>“好棒！？饶了我吧！”</p>
     <p>“你的父亲拜托我说‘在学园里如果做个傻瓜的话，就重新训练吧’。做好觉悟了吧？”</p>
