--- a/OEBPS/Text/c047.xhtml
+++ b/OEBPS/Text/c047.xhtml
@@ -14,13 +14,13 @@
     <p>出现在菲利克斯面前的，是身着奇怪的白衣的什么人。</p>
     <p>是学生的化装，还是其他派系的帮凶……不管怎么说，肯定是应该警戒的对象。</p>
     <p>最让人在意的是，对方拥有的石头。</p>
-    <p>菲利克斯看起来很面熟。和那个不吉利的生日老板用的一样。</p>
+    <p>菲利克斯看起来很面熟。和那个不吉利的生日波利斯用的一样。</p>
     <p>这样一来，魔物当然被封印在那之中了。</p>
     <p>不知道那里面放着的魔物是哪个等级,不过，如果是以前出了的贝赛德兽级的魔物菲利克斯的手不能承受吧。</p>
     <p>“好话？”</p>
     <p>「是的。这块石头连菲利克斯先生都看过吧。</p>
     <p>这个叫做封石，是封印魔物可以携带的东西”</p>
-    <p>“……老板用过的石头也是你准备的吗？”</p>
+    <p>“……波利斯用过的石头也是你准备的吗？”</p>
     <p>「是的。就是那样”</p>
     <p>对于菲利克斯的提问，白装束坦白了。</p>
     <p>没必要隐瞒吧。</p>
@@ -31,7 +31,7 @@
     <p>“……所以我收到了什么？你认为我愚蠢到如此地步了吗？”</p>
     <p>不可能接受。</p>
     <p>那是谁都知道的事。用不着考虑。</p>
-    <p>不明白对方的真面目和目的，而且菲利克斯的立场变得危险了的原因最初那个男人交付了老板的封石就有。</p>
+    <p>不明白对方的真面目和目的，而且菲利克斯的立场变得危险了的原因最初那个男人交付了波利斯的封石就有。</p>
     <p>所以这次你要我给你，你为什么要接受呢？</p>
     <p>可是白装束好象预期那个回答一样地笑。</p>
     <p>「但若不是愚蠢的人，你就无法继承家业」</p>
@@ -73,7 +73,7 @@
     <p>雷属性的魔法有那样的东西。</p>
     <p>被认为是禁咒，使用的事就那样与极刑相连这样的被禁止的魔法。</p>
     <p>菲利克斯知道由于干涉对方的脑的事到(连)认识和考虑改变了这样的危险的魔法确实存在这样的事。</p>
-    <p>但因为极难易度高(贵)，对方不是无抵抗首先也不成功，在战斗的实用性低。</p>
+    <p>但因为难易度极高，对方不是无抵抗首先也不成功，在战斗的实用性低。</p>
     <p>但是，即使使用这种魔法突然操纵菲利克斯使其暴走，那么伯恩哈特的名字也不会落下。</p>
     <p>因为过于不自然的暴走会让周围的人觉得“发生了什么”。</p>
     <p>因此首先使用玻利斯这个笨蛋危险菲利克斯的立场，制作了暴走也不可笑的状况。</p>
