--- a/OEBPS/Text/c048.xhtml
+++ b/OEBPS/Text/c048.xhtml
@@ -28,7 +28,7 @@
     <p>因此，我以为它有重要信息，伯恩哈特也期待它以菲利克斯为诱饵。</p>
     <p>但是，结果没有发挥，出来的只有旧的信息。</p>
     <p>“应该看成被抛弃了吗？”</p>
-    <p>「是的。本次击落贝尔曼哈特影响力的作战原本应该是和殿下的绑架组合进行的。</p>
+    <p>「是的。本次击落伯恩哈特影响力的作战原本应该是和殿下的绑架组合进行的。</p>
     <p>掠夺殿下，使之丢落国内最麻烦的伯恩哈特的发言力的事伊扎克很长地在宝座里(上)坐的那样准备，并且看桌子让殿下渡过王剑从宝座丢落伊扎克。</p>
     <p>于是，殿下和贝亚特里克斯帝国友好地打败了坏蛋，向殿下卖恩，不战而胜，实质上将奥克斯作为属国。这是敌人的目标”</p>
     <p>汉娜对吉克林德的话加以说明。</p>
