--- a/OEBPS/Text/c054.xhtml
+++ b/OEBPS/Text/c054.xhtml
@@ -29,13 +29,13 @@
     <p>“不，主人。像我们这样的迷宫管理者在预先配置的魔物和设备丢失的时候补充那个，积分的话重新量产魔物,不过，不重新设置没有的东西。我们进行补充……只是维持现状”</p>
     <p>“反过来说，如果从一开始就有陷阱来补充？”</p>
     <p>“好的。有的话就那么办”</p>
-    <p>“也就是说，在这个迷宫里设置了陷阱的老板……或者，在吗？”</p>
+    <p>“也就是说，在这个迷宫里设置了陷阱的BOSS……或者，在吗？”</p>
     <p>“变成那样”</p>
     <p>在Plactis迷宫里有在斯塔克迷宫里没有的东西。那才是陷阱。</p>
     <p>斯塔克迷宫是任何人都无法触及到的迷宫吧。所以没有准备陷阱什么的。也就是说，在得到梅赛德斯的状态下保持了初始设定。</p>
     <p>另一方面，这个实用地牢不是初始设定。</p>
     <p>很明显，是被其他主人加工过的迷宫。</p>
-    <p>问题是，那个主人已经是过去的人物，死后迷宫就被解放了吗……还是说还有老板呢？</p>
+    <p>问题是，那个主人已经是过去的人物，死后迷宫就被解放了吗……还是说还有BOSS呢？</p>
     <p>（而且，太简单了……已经超过了十层的魔物，但出来的魔物都是果冻以下的……。</p>
     <p>虽然也有结成徒党出来的魔物，但单体的强度还是没什么了不起的）</p>
     <p>绝不是只靠果冻就能取胜的。</p>
@@ -72,7 +72,7 @@
     <p>到这里来，不由得读出这个地牢里被放入了的意图。</p>
     <p>明明是故意配置的都是弱方便的魔物。</p>
     <p>简直像要说“打倒他使用”一样。</p>
-    <p>果然这个迷宫里有老板。这里是已经攻略过的迷宫。</p>
+    <p>果然这个迷宫里有BOSS。这里是已经攻略过的迷宫。</p>
     <p>（王家所有吗……？不，那样的话应该已经公布了。</p>
     <p>这个迷宫在这里最赚钱的是……虽然是那个男人……如果那样的话，比我的预想还要麻烦啊。）</p>
     <p>在梅赛德斯脑海中浮现出父亲早晚要战斗的样子。</p>
