--- a/OEBPS/Text/c059.xhtml
+++ b/OEBPS/Text/c059.xhtml
@@ -32,7 +32,7 @@
     <p>体力也溢出，如果3小时左右持续跑也没有问题。</p>
     <p>价格竟是五千只简便的Elka。用孩子的零花钱买到了。</p>
     <p>有在脸颊袋里储存东西的习性,不过，不能吃的东西不吞下，在特殊的袋子里装入保存食品和工具放入脸颊袋使之搬运的事也是可能的。</p>
-    <p>但是问题点也很多。因为智力不那么高(贵)正确不明白说的事多，胆怯马上引起恐慌向奇怪的方向逃跑了。</p>
+    <p>但是问题点也很多。因为智力不那么高正确不明白说的事多，胆怯马上引起恐慌向奇怪的方向逃跑了。</p>
     <p>经常听说因为兴趣而把饲主塞进面袋里的事件。</p>
     <p>嘛，本来就是爱玩用的魔物。因为不是移动用和战斗用没办法。</p>
     <p>吉克林德也购买了这个魔物，为了让她听到这些话很辛苦。</p>
