--- a/OEBPS/Text/c060.xhtml
+++ b/OEBPS/Text/c060.xhtml
@@ -54,7 +54,7 @@
     <p>但是他是个秀才。</p>
     <p>在这个年龄段里，不习惯使用派生属性，正是因为他每天的锻炼。</p>
     <p>魔法属性是火和水，特别擅长水。</p>
-    <p>不是父亲使用的地方和风遗憾,不过，水魔法通用性高(贵)。</p>
+    <p>不是父亲使用的地方和风遗憾,不过，水魔法通用性更高。</p>
     <p>可以说灵巧的贫穷型菲利克斯无论好坏都适合。</p>
     <p class="divline"></p>
     <p>想办法撒了追手的菲利克斯平安地到达了出发点。</p>
