--- a/OEBPS/Text/c061.xhtml
+++ b/OEBPS/Text/c061.xhtml
@@ -98,7 +98,7 @@
     <p>　すると中に手紙があったので読むと、そこには敵襲を受けて救助を要請する旨が書かれていた。</p>
     <p>　勿論あの場でフェリックスが書いたわけではなく、あらかじめ『そういう事態』が起きた時の為に監督生に配られていたものだ。なのでこの手紙からは襲撃者の正体までは分からない。</p>
     <p>　しかしジークリンデはすぐに、自分を狙う白装束の仕業だと答えに行き着いてしまった。</p>
-    <p>　つまり……自分の身代わりでハンナと、メルセデスの兄が捕まってしまったのだ。</p>
+    <p>　つまり……自分の身代わりでハンナと、梅赛德斯の兄が捕まってしまったのだ。</p>
     <p>「いかん！　こうしてはいられない！」</p>
     <p>　ジークリンデは責任感が強く、それ以上に正義感が強い。</p>
     <p>　そんな彼女が自らの身替わりになってしまった者を放置するかといえば勿論否であり、ハム助に飛び乗ると逆走を開始してしまった。</p>
@@ -108,10 +108,10 @@
     <p>　名をゲーロ・バーガーという。酷い名前もあったものだ。オエー。</p>
     <p>　彼はジークリンデのまさかの逆走に面食らい、慌ててその後を追った。　</p>
     <p>「……む」</p>
-    <p>　そして現在トップ独走中のメルセデスは山頂に到達していた。</p>
+    <p>　そして現在トップ独走中の梅赛德斯は山頂に到達していた。</p>
     <p>　右手にはぐったりしたハルトマンが猫のように掴まれており、泡を吹いていた。</p>
     <p>　そこから下の景色を眺めると、白装束が先導する馬車が目に入る。</p>
-    <p>　メルセデスはハンナとジークリンデのすり替わりを知らない。</p>
+    <p>　梅赛德斯はハンナとジークリンデのすり替わりを知らない。</p>
     <p>　だが、白装束の目的が何であろうと好き勝手にさせていい事になるとは思えなかった。</p>
     <p>　なので、とりあえず白装束達を潰す為に行動を開始した。</p>
     <p>これから攫われたヒロインを助けに向かう救出編に入ります。</p>
