--- a/OEBPS/Text/c063.xhtml
+++ b/OEBPS/Text/c063.xhtml
@@ -133,7 +133,7 @@
     <p>　ベアトリクスは獲物を品定めするように舌なめずりをし、フェリックスを凝視している。</p>
     <p>　悲しい事にフェリックスは彼女のお眼鏡に適ってしまったらしい。</p>
     <p>（うわあガチだあ……この人ガチだよう）</p>
-    <p>　ハンナは、メルセデスが早くウサちゃんと合流して救助隊がこちらに来る事を強く願った。</p>
+    <p>　ハンナは、梅赛德斯が早くウサちゃんと合流して救助隊がこちらに来る事を強く願った。</p>
     <p>　これは思っていたよりも時間がないかもしれない。</p>
     <p>　具体的にはフェリックスの貞操的な意味で。</p>
     <p>　とにかく今は、フェリックスが【くっ殺せ！】されてしまう前に助けが来るのを願うばかりだ。</p>
