--- a/OEBPS/Text/c065.xhtml
+++ b/OEBPS/Text/c065.xhtml
@@ -11,7 +11,7 @@
 
 <body>
     <h1>65. 本能的恐怖</h1>
-    <p>　ハンナとフェリックスが誘拐された事を知ったメルセデスは、すぐには行動を起こさなかった。</p>
+    <p>　ハンナとフェリックスが誘拐された事を知った梅赛德斯は、すぐには行動を起こさなかった。</p>
     <p>　まず最初にハルトマンに事の詳細を伝え、それをグスタフへと伝えるメッセンジャーとして彼をブルートに向かわせた。</p>
     <p>　そうしなければ、いつまで経っても隣町へ到着しない自分を探して捜索が始まってしまうからだ。</p>
     <p>　それから学園へと戻りジークリンデと合流したが、ここですぐにフレデリックのいる学園長室へ乗り込むような真似はしない。</p>
@@ -30,7 +30,7 @@
     <p>　権力に物を言わせて無理矢理捕まえる事も確かに可能ではあるだろう。</p>
     <p>　だがそれではただの暴君……ただでさえ少ないジークリンデへの信用がガタ落ちしてしまう。最悪暴動も有り得る。</p>
     <p>　それでは駄目だ。あくまでこちらが『正義』であって向こうが『悪』にならなくてはならない。</p>
-    <p>　本質的な意味でどちらが善かなどメルセデスには知った事ではないし、自分が正義の味方だなどと思った事もない。思いたくもない。</p>
+    <p>　本質的な意味でどちらが善かなど梅赛德斯には知った事ではないし、自分が正義の味方だなどと思った事もない。思いたくもない。</p>
     <p>　だがそれはそれとして、大衆的な正義というものは無視出来ないものなのだ。</p>
     <p>　人は群れる生き物であり、より多数派の意見に流されやすい。</p>
     <p>　少数派も無論いるだろうが、そうした者の九割九分はマイノリティーな己に酔っているだけの、ただの馬鹿でしかない。</p>
@@ -38,31 +38,31 @@
     <p>　こんなのは全く考慮に値しないし、この手の輩は自分の身が危うくなればすぐに多数派に乗り換えてしまう。</p>
     <p>　本当の意味で本質を捉え、周囲に流されずに己を保てる者など極少数だろう。</p>
     <p>　別にそれを責めるわけではない。人とは群れる生き物なのだから、多数派に属したがるのは本能のようなものなのだ。</p>
-    <p>　そしてそれは吸血鬼も同じだろうとメルセデスは考える。</p>
+    <p>　そしてそれは吸血鬼も同じだろうと梅赛德斯は考える。</p>
     <p>　大半の者は多数派の言葉を信じる。そして少数派を切り捨てる。</p>
     <p>　つまりフレデリックを捕獲するにあたって、切り捨てられるような少数派になってはいけないのだ。</p>
     <p>　でなければフレデリックのみならず、余計な者まで相手にしなくてはいけなくなる。</p>
-    <p>「だが……どうするんだ、メルセデス。</p>
+    <p>「だが……どうするんだ、梅赛德斯。</p>
     <p>学園長がまさか、皆の前で自白するなんて事はありえないだろう」</p>
     <p>「……そうだな。確かにあり得ない」</p>
     <p>　大勢の前で『儂が売国奴です』などと、そんな自白をするわけがない。それはジークリンデに言われずとも分かっている事だ。</p>
     <p>　ならば証拠を出せばいいのだろうが、そんなものは何処にもない。</p>
     <p>　あの抉れた地面だって、あそこで何かがあった事は分かっても誰が何をしたのかまでは分からない。</p>
-    <p>　実際メルセデスも、あれが何の跡なのかは分かっていない。</p>
+    <p>　実際梅赛德斯も、あれが何の跡なのかは分かっていない。</p>
     <p>　証拠はない。大勢の前での自白もするはずがない。</p>
     <p>　ならばどうするべきか。何が最善手か。</p>
     <p>　時間はそれほど多くはないだろう。ハンナならば自力で逃げ遂せる事も可能だと思うがフェリックスは分からない。</p>
     <p>　フェリックスが死ぬのは……困る。</p>
     <p>　何故なら彼がいないと、グリューネヴァルト家を継いでくれる生贄がいない。</p>
-    <p>　ベルンハルトは恐らく気にしないのだろうが、メルセデスにとっては大問題だ。</p>
+    <p>　ベルンハルトは恐らく気にしないのだろうが、梅赛德斯にとっては大問題だ。</p>
     <p>「少しだけ考える。時間をくれ」</p>
     <p>　ジークリンデにそう言い、ついでに彼女が独断専行しないようにピーコとウサちゃんを見張りに残した。</p>
-    <p>　そして彼女達を空き教室に残し、メルセデスは外へと出て行った。</p>
+    <p>　そして彼女達を空き教室に残し、梅赛德斯は外へと出て行った。</p>
     <p>　それから数分後。</p>
-    <p>　ジークリンデと別れたメルセデスは自らが所有するダンジョンの中を訪れていた。</p>
+    <p>　ジークリンデと別れた梅赛德斯は自らが所有するダンジョンの中を訪れていた。</p>
     <p>　向かう先は金の扉……宝物庫だ。</p>
-    <p>　ここには多くの宝が置いてある。だから、もしかしたら何か便利なものでもないかと思ってメルセデスはここへ来ていた。</p>
-    <p>　メルセデスはこの宝物庫の全てを把握しているわけではない。</p>
+    <p>　ここには多くの宝が置いてある。だから、もしかしたら何か便利なものでもないかと思って梅赛德斯はここへ来ていた。</p>
+    <p>　梅赛德斯はこの宝物庫の全てを把握しているわけではない。</p>
     <p>　というより、多すぎてとても把握し切れないというべきか。</p>
     <p>　だから確実にここに状況を好転させ得る物があると思ったわけではないし、無ければ無いで別の手を打つつもりでいた。</p>
     <p>　ここから打てる手はパッと思いつく限りでは大きく分けて二つ。</p>
@@ -75,11 +75,11 @@
     <p>　ただしこれは言うまでもなく外道の一手だ。</p>
     <p>　通常、証拠というのは犯人である事を証明する為に必要とする。</p>
     <p>　だがこれでは目的と手段が逆……まず犯人を特定して、それを捕まえる為だけに証拠を用意する。</p>
-    <p>　無論バレればただでは済まない。メルセデスとしても渡りたくない橋だ。</p>
-    <p>　だからこそ、メルセデスとしてはここで何か……決定打にならぬにしても何か使える道具の一つでも出てくれば、と思っている。</p>
-    <p>　そして運は……メルセデスの味方であり、フレデリックの敵だった。</p>
+    <p>　無論バレればただでは済まない。梅赛德斯としても渡りたくない橋だ。</p>
+    <p>　だからこそ、梅赛德斯としてはここで何か……決定打にならぬにしても何か使える道具の一つでも出てくれば、と思っている。</p>
+    <p>　そして運は……梅赛德斯の味方であり、フレデリックの敵だった。</p>
     <p>「これは……」</p>
-    <p>　果たして、そこにはメルセデスが望む物が……いや、望んだ以上の物が置いてあった。</p>
+    <p>　果たして、そこには梅赛德斯が望む物が……いや、望んだ以上の物が置いてあった。</p>
     <p>　それは控えめに言って、オーパーツである。</p>
     <p>　明らかにこの世界の文明レベルと一致していない、恐らくは神ひとが遺した道具。</p>
     <p>　これを神器などと呼ぶのは可笑しな話だが、しかしこの世界ならばそう呼ばれるに値する。</p>
@@ -96,7 +96,7 @@
     <p>还是假设像我这样的人会出现呢？）</p>
     <p>能考虑的是两个。</p>
     <p>一个是，期待有一天能够解析这个的人出现，向未来的遗产。</p>
-    <p>如果普通地考虑这边的可能性高(贵)吧。</p>
+    <p>如果普通地考虑这边的可能性更高吧。</p>
     <p>转生者等，本来是不可能存在的存在。</p>
     <p>但是梅赛德斯感到一种难以理解的东西。</p>
     <p>这个世界文明在中世纪持续停止。</p>
