--- a/OEBPS/Text/c071.xhtml
+++ b/OEBPS/Text/c071.xhtml
@@ -46,7 +46,7 @@
     <p>果然不会有像是提出格林涅瓦特这个名字的傻子。</p>
     <p>就这样，从口袋里拿出saker给你看。</p>
     <p>真不愧是格鲁内瓦特的**。</p>
-    <p>「メルセデス・カルヴァート……ランクはＣか」</p>
+    <p>「梅赛德斯・カルヴァート……ランクはＣか」</p>
     <p>「ふむ。念の為身体調査をさせてもらう。そちらの小屋に入れ」</p>
     <p>　門の近くには兵の詰め所らしき小屋があり、そこに入るよう促される。</p>
     <p>　まあ都市として当然の対応か。</p>
@@ -57,7 +57,7 @@
     <p>「それは問題ない。検査対象になるのはもっと別の物だ。</p>
     <p>例えば爆弾だとか、取引を禁止されている薬物だとか……そういうのを持っているような輩は通す事は出来ん」</p>
     <p>　大都市を守る上では当然の措置か。</p>
-    <p>　そう思い、メルセデスはその場で下着姿になって軽い調査を受けた。</p>
+    <p>　そう思い、梅赛德斯はその場で下着姿になって軽い調査を受けた。</p>
     <p>　その結果、引っかかったのは所有していた火の魔石だ。</p>
     <p>　これもどうやら爆弾扱いになるらしい。</p>
     <p>　勿論マスターキーはただのアクセサリーにしか見えないので余裕でスルーされた。</p>
@@ -70,14 +70,14 @@
     <p>「ようこそ帝都へ。問題を起こさぬ限り、わが都市は貴方を歓迎しよう」</p>
     <p>　何とか第一の関門である検査をパスし、門へと向かう。</p>
     <p>　その途中、何故か門前で裸にされている男が見えた。</p>
-    <p>　どうやらメルセデス同様に荷物検査らしいが、男の場合はその場でひん剥かれるらしい。</p>
+    <p>　どうやら梅赛德斯同様に荷物検査らしいが、男の場合はその場でひん剥かれるらしい。</p>
     <p>　酷い検査もあったものだ。あれでは寒いだろうに。</p>
-    <p>　メルセデスに続いて女性兵が詰め所から出て、門番達に声をかける。</p>
+    <p>　梅赛德斯に続いて女性兵が詰め所から出て、門番達に声をかける。</p>
     <p>「何か怪しい物を持っていたか？」</p>
     <p>「はっ、長剣と火の魔石を所持しておりました」</p>
     <p>「没収しろ。危険な物を持った輩を都市に入れるわけにはいかん」</p>
     <p>　何か様子がおかしい。</p>
-    <p>　メルセデスは先ほどの自分への対応と、男への対応に差がある気がしてしばらくその場で見物する事にした。</p>
+    <p>　梅赛德斯は先ほどの自分への対応と、男への対応に差がある気がしてしばらくその場で見物する事にした。</p>
     <p>　もしやあの男は前科持ちか何かなのだろうか。</p>
     <p>「ま、待ってくれ！　それは護身用だ！　それに俺はシーカーだ、武器がなきゃ話にならん！」</p>
     <p>「これも規則だ。嫌ならば都市に入るのを諦めろ」</p>
@@ -93,16 +93,16 @@
     <p>問題なんか起こすわけねえだろう！」</p>
     <p>「そう言う奴に限って問題を起こすのだ」</p>
     <p>「そ、そんな……待てよ！　そいつ！　そいつ武器持ってるじゃねーか！」</p>
-    <p>　男はどうやらこちらに気付いたようで、メルセデスが腰に差した剣を指差して叫んだ。</p>
+    <p>　男はどうやらこちらに気付いたようで、梅赛德斯が腰に差した剣を指差して叫んだ。</p>
     <p>　この剣は言うまでもなく、本当の武器であるマスターキーを隠すためのフェイクである。</p>
-    <p>　なので没収されても問題はなかったのだが、メルセデスは特にお咎めなく帯剣を許されてしまっていた。</p>
+    <p>　なので没収されても問題はなかったのだが、梅赛德斯は特にお咎めなく帯剣を許されてしまっていた。</p>
     <p>「女性なのだ。護身用の武器くらい必要だろう」</p>
     <p>「はあ！？　それおかしいだろ！」</p>
     <p>「黙れ。都市に入るか去るか、どちらなのだ。私も暇ではないのだぞ」</p>
     <p>「ちくしょう！」</p>
     <p>　これは酷い。</p>
     <p>　明らかな性差別だ。あの女性兵の装備といい、門番として男の兵が立たされている事といい、どうもこの都市は女の方が立場が強いようだ。</p>
-    <p>　これはいよいよもって、フェリックスの身が危険だ……そう思いながらメルセデスは門を通過して都市へと足を踏み入れた。</p>
+    <p>　これはいよいよもって、フェリックスの身が危険だ……そう思いながら梅赛德斯は門を通過して都市へと足を踏み入れた。</p>
     <p>　立ち並ぶ建築物は割と高い建築技術で造られているようで、大半が煉瓦製だ。</p>
     <p>　四角に固めたブロックを積み上げて造るタイプだな。</p>
     <p>　窓は豪華にも硝子が張られていて、中世文化という事を考えればどこも裕福層であると見ていい。</p>
@@ -110,16 +110,16 @@
     <p>　月明かりに照らされた夜道を人々が行き交い、談笑している。それだけでここがかなり賑わっている都市であると分かった。</p>
     <p>　しかし一方で気になる点もある。それは先ほどから全く男を見ないという事だ。</p>
     <p>　どれだけ歩いても見かけるのは女性ばかりだ。男がどこにもいない。</p>
-    <p>　やがて、歩き続けたメルセデスは明らかに空気の違う場所へ迷い込んでいた。</p>
+    <p>　やがて、歩き続けた梅赛德斯は明らかに空気の違う場所へ迷い込んでいた。</p>
     <p>　先ほどまでの裕福層ばかりが住んでいるような街並みから一転し、建築物の質が一気に落ちている。</p>
     <p>　家はどこも木材で造られ、窓にはガラスなどなく木の板で塞がれている。</p>
     <p>　貧民街だろうか？　どこの都市でもさほど珍しい場所ではないが……それより気になるのは、ようやく男を発見出来た事か。</p>
     <p>　服装は女性と比べて明らかに質で劣り、薄汚い。</p>
     <p>　体も清潔にしていないのか、汚れが目立っている。</p>
-    <p>　そんな男達が数人行き来しており、メルセデスと目が合うと逃げるようにそそくさと立ち去って行く。</p>
+    <p>　そんな男達が数人行き来しており、梅赛德斯と目が合うと逃げるようにそそくさと立ち去って行く。</p>
     <p>（門の前でもそうだったが、これは……）</p>
     <p>　どうやら、この国は完全な女性社会というわけだ。</p>
-    <p>　メルセデスは呆れたように溜息を吐き、とりあえずどうやって城に忍び込んでフェリックス達を助けるかを考え始めた。</p>
+    <p>　梅赛德斯は呆れたように溜息を吐き、とりあえずどうやって城に忍び込んでフェリックス達を助けるかを考え始めた。</p>
     <p>Ｃランクシーカー「男は何もつけるなという事だな……了解した！　これより全裸で帝都に入る！」</p>
     <p>女性兵「ファッ！？　ま、まて！　何故そうなる！」</p>
     <p class="divline"></p>
