--- a/OEBPS/Text/c074.xhtml
+++ b/OEBPS/Text/c074.xhtml
@@ -58,7 +58,7 @@
     <p>「く、ふふ……多么粗暴啊。特订的防具一击就变成这样了”</p>
     <p>这个，被说在礼服的内侧，成为怎样的不明白。</p>
     <p>但是由于有破碎的反应，可以认为现在的腹部已经坏掉了吧。</p>
-    <p>由于武器的差稍微不利,不过，身体这边高(贵)。</p>
+    <p>由于武器的差稍微不利,不过，身体这边更高。</p>
     <p>这样压下去也不是不可能的。</p>
     <p>在这样想的梅赛德斯面前，贝阿列克斯露出了无敌的笑容。</p>
     <p>然后不知在想些什么，当场一边扇着扇子一边旋转……把地板打成圆形。</p>
