--- a/OEBPS/Text/c076.xhtml
+++ b/OEBPS/Text/c076.xhtml
@@ -128,7 +128,7 @@
     <p>如果其中一方不是继承者而是攻略者的话，故事就会改变。</p>
     <p>因为攻略者可以进行新的注册。也就是说，要成为对手魔物的主人。</p>
     <p>然后现在，梅赛德斯登录了出场的贝亚特里克斯全部的魔物。这时候会发生什么？</p>
-    <p>比如，假设木偶人新出了贝阿列克斯。当然，这个老板是贝阿朵列克斯,不过，登记了的梅赛德斯也存在着主人权限。</p>
+    <p>比如，假设木偶人新出了贝阿列克斯。当然，这个BOSS是贝阿朵列克斯,不过，登记了的梅赛德斯也存在着主人权限。</p>
     <p>因为和迷宫中产生的魔物是克隆的，没有个体差异。</p>
     <p>如果魔物双方同时用『压缩』返回到迷宫···变成怎样？</p>
     <p>答案很简单。回到权限更强的『攻略者』的迷宫··。</p>
