--- a/OEBPS/Text/c081.xhtml
+++ b/OEBPS/Text/c081.xhtml
@@ -65,13 +65,13 @@
     <p>于是，女白衣出现在眼前，行一礼。</p>
     <p>那个身姿变得比秃顶的ZIVEN更像了。</p>
     <p>话说ziven为什么选择了那样的姿态呢？</p>
-    <p>“这样我就成了两个迷宫的老板。</p>
+    <p>“这样我就成了两个迷宫的BOSS。</p>
     <p>也就是说，以前所说的‘权限’也增加了，你应该也能说很多了吧？”</p>
     <p>《YES，主人。但是在这里不能说话”</p>
     <p>以前，梅赛德斯从茨维尔夫那里听说过构成这个世界的东西。</p>
     <p>在这个世界上，纳米机器存在于大气中，甚至连自己和魔物都能用纳米机器做出来。</p>
     <p>但是，在想问纳米机器是什么的时候，泽维尔的话被中断了。</p>
-    <p>对一个迷宫的老板能说的内容就是界限……好像是这么回事。</p>
+    <p>对一个迷宫的BOSS能说的内容就是界限……好像是这么回事。</p>
     <p>那么现在迷宫增多了，应该能听的内容也增加了。</p>
     <p>可是能听那个彻底只有主人。</p>
     <p>完全忘记了,不过，在压缩了迷宫的现在，这里也有贝阿朵克列斯。</p>
@@ -112,7 +112,7 @@
     <p>但是必须知道。梅赛德斯下定决心，催促他先跟图威尔夫说话。</p>
     <p>“怎么了？”</p>
     <p>“只有持续使用的头部异常发达，不用的手脚退化收缩了。</p>
-    <p>眼睛、鼻子、嘴巴，不使用的部分全部恶化，失去了意义……其身姿是巨大的头部，老板们看到后就变成了魔物”</p>
+    <p>眼睛、鼻子、嘴巴，不使用的部分全部恶化，失去了意义……其身姿是巨大的头部，BOSS们看到后就变成了魔物”</p>
     <p>“……那是生物吗？”</p>
     <p>“……”不。那不是生物”</p>
     <p>面对梅赛德斯的质问，茨维尔断言在微弱的沉默之后绝不是生物。</p>
