--- a/OEBPS/Text/c082.xhtml
+++ b/OEBPS/Text/c082.xhtml
@@ -41,7 +41,7 @@
     <p>梅赛德斯认为那是地狱。</p>
     <p>带着作为人的感觉变成妖怪等，常人会发狂。</p>
     <p>“于是，众神开始尝试创造自己子孙的新人类。</p>
-    <p>但是普通地用克隆再现和增加只是踏自己的二辙的可能性高(贵)，同样的进化没有意义。</p>
+    <p>但是普通地用克隆再现和增加只是踏自己的二辙的可能性更高，同样的进化没有意义。</p>
     <p>所以神从一开始……这才是原子自己加工、永不退化的、寿命长、健康美丽……我打算造出那样的人类。</p>
     <p>然后做出来的，就是纳米机器”</p>
     <p>“……然后用纳米机器制造出来的，就是这个世界的生物吗？”</p>
@@ -61,7 +61,7 @@
     <p>与其这么说，不如说已经近乎确信。</p>
     <p>从最初说不需要原子说明的时候开始……我们以对过去的地球有所了解为前提进行了说明。</p>
     <p>“茨瓦尔夫。你对我过去的地球的事……你知道在那儿活着的人的记忆吗？”</p>
-    <p>“我确信的是刚才。老板说不需要原子的说明时，我理解为他有记忆”</p>
+    <p>“我确信的是刚才。BOSS说不需要原子的说明时，我理解为他有记忆”</p>
     <p>“但是你并没有感到惊讶。也就是说……记忆力是能够预测到的事态吧？”</p>
     <p>“好的。是被预测的事态，数虽然少但是几个人现在也应该存在。然后从今以后也会出生的吧」</p>
     <p>转生者……不是不规则的。</p>
@@ -74,7 +74,7 @@
     <p>“现在做不了”</p>
     <p>“我们的思考是不是被锁定了一部分呢？”</p>
     <p>“好的。达到特定的思考的时候变得感到恐怖。</p>
-    <p>但是老板得到了两个迷宫，解除了那个锁”</p>
+    <p>但是BOSS得到了两个迷宫，解除了那个锁”</p>
     <p>“为什么会有那样的东西？”</p>
     <p>“无法回答”</p>
     <p>“……我，其实实体与那个神，被那个神动了的偶人吗？</p>
