--- a/OEBPS/Text/c084.xhtml
+++ b/OEBPS/Text/c084.xhtml
@@ -23,7 +23,7 @@
     <p>但是对方好像没有把握那个。这暂且不提，攻略者的血统还是很吸引人的。</p>
     <p>因为还看不到对方的目标和思想，所以只能看情况……如果是个不三不四的家伙倒是方便。</p>
     <p>那时毫不客气地就可以夺取迷宫。</p>
-    <p>话虽如此，但还不能确定那是否是真的。只是自报姓名攻略者的血脉hatari的可能性高(贵)。</p>
+    <p>话虽如此，但还不能确定那是否是真的。只是自报姓名攻略者的血脉hatari的可能性更高。</p>
     <p>因此，梅赛德斯并没有插嘴，而是催促他继续说明。</p>
     <p>“虽然几乎没有人知道，但所谓迷宫并不仅仅是把宝物带回去就叫做攻略。要想真正得到，就必须克服考验”</p>
     <p>“……真是第一次听到啊”</p>
