--- a/OEBPS/Text/c085.xhtml
+++ b/OEBPS/Text/c085.xhtml
@@ -78,7 +78,7 @@
     <p>“妥善处理”</p>
     <p>听到梅赛德斯的回信，巴吉尔打开了门。</p>
     <p>房间里铺满了红色的地毯，天花板上吊着枝形吊灯。</p>
-    <p>地板从途中稍微变得高(贵)，在离开了入口的地方有使人想到宝座的豪华的椅子。</p>
+    <p>地板从途中稍微变得高，在离开了入口的地方有使人想到宝座的豪华的椅子。</p>
     <p>恐怕是城的宝座之间的构造吧。</p>
     <p>然后宝座和梅赛德斯差不多……也就是说，外表年龄12岁左右的少年稳稳地坐着。</p>
     <p>难道那才是真正的王吗……？</p>
