--- a/OEBPS/Text/c087.xhtml
+++ b/OEBPS/Text/c087.xhtml
@@ -11,7 +11,7 @@
 
 <body>
     <h1>87. トライヌの失敗</h1>
-    <p>　トライヌとまさかの再会を果たしたメルセデスは、彼に案内されて大型の雑貨店を訪れていた。</p>
+    <p>　トライヌとまさかの再会を果たした梅赛德斯は、彼に案内されて大型の雑貨店を訪れていた。</p>
     <p>　様々な商品を取り扱う店舗で、雑貨店というよりは現代のスーパーに近い。</p>
     <p>　大勢の客で賑わう店内を歩き、やがて奥の『関係者以外立ち入り禁止』と書かれたドアの中へと入る。</p>
     <p>　中は通路になっており、いくつかの部屋が見えるがトライヌは止まる事なく奥へと歩いていく。</p>
@@ -20,21 +20,21 @@
     <p>　そう言いながら一番奥まで到着し、そこにあったドアを開いた。</p>
     <p>　その中はそれなりに広い部屋で、簡易ではあるがベッドもある。</p>
     <p>　立派な机と椅子があり、棚には本が並んでいた。</p>
-    <p>　壁際には来客用と思われる装飾過剰な肘掛け椅子があり、彼はそれをメルセデスの前へ運んだ。</p>
+    <p>　壁際には来客用と思われる装飾過剰な肘掛け椅子があり、彼はそれを梅赛德斯の前へ運んだ。</p>
     <p>「私の私室です。店に泊まり込みで働く時もありますので、そういう時に使っているのですよ。さ、どうぞおかけ下され」</p>
     <p>　言われるまま椅子に座り、トライヌも自分の椅子へと座った。</p>
     <p>　それから彼はコホン、と咳払いをする。</p>
     <p>「さて……話してもらえるか？　何故貴方があんな場所にいたのか」</p>
     <p>「はい、お話しましょう。</p>
     <p>まず結論を先に言うならば私もあの一派の一員……というより、出資者の一人なのですよ」</p>
-    <p>　メルセデスは思わず出しそうになった溜息を噛み殺し、努めて表情に出さないようにする。</p>
+    <p>　梅赛德斯は思わず出しそうになった溜息を噛み殺し、努めて表情に出さないようにする。</p>
     <p>　予想はしていたが、いきなり嬉しくない情報だ。</p>
-    <p>　メルセデスとトライヌ商会は持ちつ持たれつの関係であり、手を組む事によって互いに美味しい思いをしている。</p>
-    <p>　コネの少ないメルセデスにとっては貴重な取引の相手で、出来ればこの関係は継続しておきたい。</p>
+    <p>　梅赛德斯とトライヌ商会は持ちつ持たれつの関係であり、手を組む事によって互いに美味しい思いをしている。</p>
+    <p>　コネの少ない梅赛德斯にとっては貴重な取引の相手で、出来ればこの関係は継続しておきたい。</p>
     <p>　しかしそうなると、迂闊にあの派閥を潰すわけにもいかなくなる。</p>
     <p>　その考えを読んだのだろう。トライヌは少し早口で続きを口にした。</p>
     <p>「といっても、今でも彼等の全面的な味方というわけではありません。昔の過ちというか……。</p>
-    <p>メルセデス殿は、前の王の事はご存知ですな？」</p>
+    <p>梅赛德斯殿は、前の王の事はご存知ですな？」</p>
     <p>「ああ、イザークだな」</p>
     <p>「はい。皆、反逆者の烙印を押される事を恐れて大きな声では言えませんでしたが、奴が王家を乗っ取った愚者である事は有権者達の間では噂になっておりました」</p>
     <p>　これは既知の情報だ。</p>
@@ -66,7 +66,7 @@
     <p>出資者と先程言いましたが、実態は何の見返りもなく一方的に搾取されているようなものですので……」</p>
     <p>「貴方と同じような者は他にもいるのか？」</p>
     <p>「ええ、何人かいます。しかし全てがそうというわけではなく、中にはジークリンデ殿下とマックス君をくっつけて早急に王を用意するべきだと考える者もいます」</p>
-    <p>　トライヌの言葉を聞き、メルセデスはそれも当然か、と考えた。</p>
+    <p>　トライヌの言葉を聞き、梅赛德斯はそれも当然か、と考えた。</p>
     <p>　その者達の考えを責める事は出来ない。</p>
     <p>　むしろ真っ当だ。国の事を真剣に考えている。</p>
     <p>　何故なら今、この国には……オルクスには、王がいないのだ。</p>
@@ -81,7 +81,7 @@
     <p>「女王制度は……まあ隣国を見れば貴族達の反対を受けるか」</p>
     <p>「はい。帝国のように女尊男卑社会にされてはたまったものではありません。貴族達もそれを恐れてジークリンデ殿下の即位には反対するでしょう。</p>
     <p>私自身も、どちらかと言えば殿下は国王になるには向いてないかと……」</p>
-    <p>　トライヌの言葉にメルセデスは特に何も言わない。</p>
+    <p>　トライヌの言葉に梅赛德斯は特に何も言わない。</p>
     <p>　ジークリンデがトップに不向きな事には同意しているからだ。</p>
     <p>她的确是个好人，很温柔的人物。</p>
     <p>但是好人不能等于下正确的判断。</p>
@@ -125,7 +125,7 @@
     <p>～大分前～</p>
     <p>トライヌ「マックス君とバジルさんもアレだけど、イザークとかいう無能オブ無能が玉座にいるよりはマシになるかもしれない。てか今より悪くはならんやろ！　この際一か八かで賭けてみるか！」</p>
     <p>～少し前～</p>
-    <p>トライヌ「あっ、メルセデス殿がイザーク倒した。もうこれで分の悪い賭けをせずにすむ！」</p>
+    <p>トライヌ「あっ、梅赛德斯殿がイザーク倒した。もうこれで分の悪い賭けをせずにすむ！」</p>
     <p>～今～</p>
     <p>トライヌ「もう協力するメリットないのに秘密知りすぎて抜けるに抜けれない……。</p>
     <p>しかも出資者だから金だけ見返りなしで取られてく……もう派閥潰れてくれんかな……」</p>
