--- a/OEBPS/Text/c088.xhtml
+++ b/OEBPS/Text/c088.xhtml
@@ -112,7 +112,7 @@
     <p>而令人困扰的是，吉克林德正是奥尔克斯二大无能王的孙子，女儿。</p>
     <p>确实对将来不感到不安，贵族们不安视把她做为首位的事也能理解。</p>
     <p>吉克林德自己绝对不坏,不过，对父亲和祖父的二人双重无能只有不安。</p>
-    <p>因为她自身的超凡魅力性高(贵)，只是祈愿想办法与聪明的丈夫贴紧的事。</p>
+    <p>因为她自身的超凡魅力性更高，只是祈愿想办法与聪明的丈夫贴紧的事。</p>
     <p>“这倒不错。现在找的是两个女儿中的一个被抓到的追捕者。</p>
     <p>你知道些什么吗？</p>
     <p>“就算你知道，那也是刚才说的副官。</p>
