--- a/OEBPS/Text/c095.xhtml
+++ b/OEBPS/Text/c095.xhtml
@@ -101,7 +101,7 @@
     <p>无论怎么想都觉得这边比较好。</p>
     <p>为了避免这一点，只有杀死菲利克斯和瓦尔堡加，如果它公开的话，我们的正当性就会消失。</p>
     <p>虽然说继承了被非法暗杀的克里斯托夫的意愿，但是如果亲手杀害了那个孩子和孙子的话，就只能是奥古斯特·艺术活动的同类了。</p>
-    <p>话虽如此，却没有暴露，穿过格鲁内瓦特邸的警备，等同于不可能杀害其本妻和孩子。</p>
+    <p>话虽如此，却没有暴露，穿过格鲁内瓦特邸的警备，等同于不可能杀害其正妻和孩子。</p>
     <p>索性，从现在开始也应该向对方转让地牢吗？</p>
     <p>……不，不行。已经放出了暗杀者。</p>
     <p>不管成败与否，在瞄准贵族生命的时刻已经无法后退了。</p>
