--- a/OEBPS/Text/c103.xhtml
+++ b/OEBPS/Text/c103.xhtml
@@ -132,7 +132,7 @@
     <p>・克里斯托夫死亡</p>
     <p>↓</p>
     <p>真正的王派发生。</p>
-    <p>那样作为那样，汉娜的会话部分的出演率最近感到高(贵)的心情。</p>
+    <p>那样作为那样，汉娜的会话部分的出演率最近感到更高的心情。</p>
     <p>因为总觉得对大致的事件咬了一张(件)，不管怎样是突出。</p>
     <p>为什么这个合法萝莉阿姨会站在主人公搭档的立场上呢？</p>
 </body>
