--- a/OEBPS/Text/c111.xhtml
+++ b/OEBPS/Text/c111.xhtml
@@ -115,7 +115,7 @@
     <p>无疑是过去谁曾攻略过的迷宫。</p>
     <p>如果不是那样的话，怎么可能建造得如此精致呢。</p>
     <p>但是让人在意的是，为什么它会出现在吸血鬼和精灵的国境呢？</p>
-    <p>这个迷宫的老板为了什么目的在这里出迷宫了……还是，死亡了……。</p>
+    <p>这个迷宫的BOSS为了什么目的在这里出迷宫了……还是，死亡了……。</p>
     <p>不管怎么说，只担心麻烦的事。</p>
     <p>“那么，到了传送点还有余地。</p>
     <p>我想先走，怎么办？”</p>
