--- a/OEBPS/Text/c121.xhtml
+++ b/OEBPS/Text/c121.xhtml
@@ -30,7 +30,7 @@
 
 
 
-    <p>　メルセデスがレスリーを伴ってエルフェの集落へ行くと、既に火は消火された後であった。</p>
+    <p>　梅赛德斯がレスリーを伴ってエルフェの集落へ行くと、既に火は消火された後であった。</p>
     <p>　流石は魔法に長けたエルフェといったところか。水の魔法や氷の魔法で見事に鎮火に成功している。</p>
     <p>　煙一つ残っていない焼け跡には、レスリーの造った道具の成れの果てが、焦げた鉄屑として転がっていた。</p>
     <p>　レスリーは流石にショックを受けているようだが、一番大事な本は無事だったので（正確には無事ではなかったのだが）一応僅かなりとも心の余裕はあるようだ。</p>
@@ -43,15 +43,15 @@
     <p>　レスリーの発明はほぼ燃えてしまったが、彼女が普段から身に付けているものだけは不幸を免れたようだ。</p>
     <p>　だが、他の道具も決して悪かったわけではない。</p>
     <p>　今の世の中では評価されにくいだろうし、的を外していたがどれも間違いなく価値のある道具だったのだ。</p>
-    <p>　少なくとも、火を点けた阿呆よりは間違いなく価値があったとメルセデスは断じる事が出来る。</p>
+    <p>　少なくとも、火を点けた阿呆よりは間違いなく価値があったと梅赛德斯は断じる事が出来る。</p>
     <p>「おやおやあ？　これは何の集まりだ？」</p>
     <p>　おっと、火を点けた阿呆（仮）のご登場だ。</p>
     <p>　グラシアンはニヤニヤと笑いながら、毎度の如く取り巻きを引き連れてやってきた。</p>
     <p>　その後ろにいる取り巻きは、気のせいか疲れたような顔をしている。</p>
-    <p>　間抜けな主を持つと苦労するという事か。メルセデスは少しだけ彼等に同情した。</p>
+    <p>　間抜けな主を持つと苦労するという事か。梅赛德斯は少しだけ彼等に同情した。</p>
     <p>「ユリア、あいつか？」</p>
     <p>「はっ。間違い………………間違いございません」</p>
-    <p>　メルセデスが名前を呼ぶと、影のようにユリアがメルセデスの背後に立ち、主の問いに肯定を返した。</p>
+    <p>　梅赛德斯が名前を呼ぶと、影のようにユリアが梅赛德斯の背後に立ち、主の問いに肯定を返した。</p>
     <p>　しかし返事をするまでにかなり間があったので、思い出すのに苦心したのだろう。</p>
     <p>　まあ思い出せただけユリアにしては上出来と思うしかない。</p>
     <p>　そして答えた後は霞のように消え去り、痕跡も残さない。</p>
@@ -68,7 +68,7 @@
     <p>「ゴミですって！？」</p>
     <p>「おお、ゴミだろうよ。何に使うのかも分からん鉄屑ばっか造りやがって。燃えちまった方が世の中の為だ」</p>
     <p>　グラシアンはレスリーを嘲るように言い、彼女の怒りを煽る。</p>
-    <p>　だがメルセデスは彼を無視して焼け跡に行き、まだ使える物が残っていないかを確認する事にした。</p>
+    <p>　だが梅赛德斯は彼を無視して焼け跡に行き、まだ使える物が残っていないかを確認する事にした。</p>
     <p>　アレは後で処分するが、今は人の目があるから放置しておいた方がいい。</p>
     <p>　それならばまだ、グラシアンの話などを聞いているよりは焼け跡からサルベージする方が時間の無駄ではないと思ったのだ。</p>
     <p>　レスリーもそれに続き、二人はグラシアンを放置したまま焼け跡を漁る。</p>
@@ -134,6 +134,6 @@
     <p>事后才注意到这件事，莱斯利脸色发青。</p>
     <p>“怎、怎么办……”</p>
     <p class="divline"></p>
-    <p>メルセデス「まあ、マスケット銃があるなら開幕ヘッドショットでいけるな」</p>
+    <p>梅赛德斯「まあ、マスケット銃があるなら開幕ヘッドショットでいけるな」</p>
     <p>レスリー「！？」</p>
 </body>
