--- a/OEBPS/Text/c014.xhtml
+++ b/OEBPS/Text/c014.xhtml
@@ -31,13 +31,13 @@
     <p>被提问的话就回答，但只要不被提问，并不一定要说那个好。</p>
     <p>玛吉特好像也知道这一点，虽然笨手笨脚，但还是拼命挑选哪种食材比较好，最后买完了东西。</p>
     <p>结束之后，梅赛德斯又让玛吉特买了一本书。</p>
-    <p>名字是《简单易懂的红叶的读法作者·大猩猩》。只有冲锋。</p>
+    <p>名字是《猴子也能懂的简单的文字读写方法 作者·大猩猩》。只有冲锋。</p>
     <p>虽然名字很糟糕，但是是关于字的读法被详细写了的学习用书。</p>
     <p>以前，梅赛德斯认为这个世界的书没有插图，但也许这是唯一带插图的书。</p>
     <p>当然画什么的完全没有,不过，能说因为易懂地画着图等某种意义插图。</p>
     <p>梅赛德斯也在家里用同样的书记住了文字。真想和这位作者见一面。</p>
     <p>“这样就能读写文字了。那样的话就能从事代书人的工作。</p>
-    <p>代书人除了做saker、等级雇佣兵、士兵等赌上性命的工作以外，都是能稳定赚钱的工作之一”</p>
+    <p>代书人除了做saker、雇佣兵、士兵等赌上性命的工作以外，都是能稳定赚钱的工作之一”</p>
     <p>梅赛德斯推荐玛吉特赚钱的工作被称作代书人。</p>
     <p>这是代写各种文件、情书、请愿书等的工作，识字率并不是很高，在这个世界上可以挣很多钱。</p>
     <p>在现代社会，不像日本那样谁都能读写文字，而写文字的工作是非常有必要的。</p>
@@ -47,8 +47,8 @@
     <p>如果顺利的话，她可以安定地赚钱，即使被父亲抛弃也能活下去吧。</p>
     <p>“我也偶尔会去那里教你，但并不是随时都能去。</p>
     <p>一开始要尝试到自己能做的地方去……能做到吗？</p>
-    <p>“嗯，嗯。我会努力的”</p>
-    <p>“好吧，好消息。”</p>
+    <p>“唔，嗯。我会努力的”</p>
+    <p>“好吧，回答得很好。”</p>
     <p>之后，梅赛德斯把她送到家里，那天如宣言的那样，没有任何帮助就踏上了归途。</p>
     <p>首先自己试着做。在此基础上了解她的记忆速度，制定计划。</p>
     <p>突然帮助她的事是破坏她自身成长的行为。首先应该让自己做到自己能做到的地方。</p>
@@ -86,7 +86,9 @@
     <p>不把钱放在眼线上就能优先购买性能。</p>
     <p>虽说如此，但也并不是只买贵的东西就行。譬如无意义安上了宝石的装饰用的剑等论外中的论外。浪费钱。</p>
     <p>看起来很朴素也没关系。不管怎样追求性能和机能美的装备拘泥。</p>
+    <br>
     <p>“上街了，本凯，小黑。也改变你们的装备吧」</p>
+    <br>
     <p>带着本凯和小黑在城市里巡回，巡视着各种各样的武器。</p>
     <p>首先，到目前为止使用的武器没有一个例外全部卖掉。已经不需要这些了。</p>
     <p>然后首先梅赛德斯买了自己用的哈尔巴德。</p>
@@ -123,6 +125,7 @@
     <p>先把武器全装上去买了很多。</p>
     <p>今后，可以根据委托的内容改变他的装备。</p>
     <p>小黑的装备是……大大的狼用铠甲也有的事,不过，因为反过来快要阻碍运动了预先留下。</p>
+    <br>
     <p>装备结束后接下来就是消耗品。</p>
     <p>因为已经有食物，所以要扔掉，寻找恢复用的道具。</p>
     <p>如果这个世界使用方便HP用快攻象恢复一样的药和药草等没有。</p>
@@ -131,21 +134,35 @@
     <p>也就是说，当然也有关闭了恢复魔法的魔石，这样的东西在saker里很受欢迎。</p>
     <p>梅赛德斯先购买二十个，再买齐各种各样的魔石。</p>
     <p>强力的冻结魔法的魔石、炎之魔石、水之魔石等，主要以自己不能使用的东西为主。</p>
-    <p>因为行李增加了，再买一个大型背包，这边让时钟拿。</p>
+    <p>因为行李增加了，再买一个大型背包，这边让小黑拿。</p>
+    <br>
     <p>“主，我有建议”</p>
     <p>“什么？”</p>
     <p>“我们有时也会成为主人的剑而战斗。但是如果一直拿着这样的东西就无法全力以赴了。</p>
     <p>于是，是不是应该重新加入只负责托运行李的成员呢？”</p>
     <p>“嗯。的确”</p>
+    <br>
     <p>原来梅赛德斯一个人拿不完行李，不能和武器并存，所以作为行李员把本凯拉了进去。</p>
     <p>可是本凯总觉得是战斗力。可以正常使用。</p>
     <p>小黑的速度很快，是能载着梅赛德斯战斗的战力。让别人拿行李不是明智的事情。</p>
+    <br>
     <p>“确实想要不参加战斗而专心拿着行李的成员。</p>
     <p>知道了。去宠物店吧”</p>
+    <br>
     <p>梅赛德斯到以前增加伙伴的时候潜入到迷宫自己捕获着。</p>
     <p>但那是因为没有钱。</p>
     <p>如果有钱的话，就不会特意花费那样的工夫了。</p>
     <p>如果想要战斗力的话，可以自己潜入深层去捕获，但如果只是随身携带行李的程度的话，宠物店的魔物就足够了。</p>
     <p>一行人这样判断，然后就去了宠物店。</p>
     <p>另外，当然化身为步行铠甲的本凯非常引人注目。</p>
+    <p class="divline"></p>
+    <p>トライヌ「不……不……敲诈什么的……哪里的话……嘿！</p>
+
+    <p>价格很合理……良心大大的……！</p>
+
+    <p>这个价格也能卖……像飞一样……！停不下来……笑……！</p>
+
+    <p>コココ……カカカ……！」</p>
+
+    <p>梅赛德斯（这家伙，这是本性吗？）</p>
 </body>
