--- a/OEBPS/Text/c015.xhtml
+++ b/OEBPS/Text/c015.xhtml
@@ -11,7 +11,7 @@
 
 <body>
     <h1>15. 二选一</h1>
-    <p>在选择托运行李的魔物时，最先想到的是梅赛德斯。</p>
+    <p>在选择托运行李的魔物时，梅赛德斯最先想到的是马。</p>
     <p>马自古以来就被移动和搬运所宝贝的家畜，其发达的脚便适合背着沉重的行李在长距离移动。</p>
     <p>用来搬运的动物是驮兽。马被用作驮兽的马称为驮马。</p>
     <p>当然，这并不是不可以骑的马的意思，但因为经常被用在驮马身上，比矮马低的马等个体较差的马身上，所以才转变为现在的“没用的马”的意思吧。</p>
@@ -19,12 +19,16 @@
     <p>在封闭的空间里，马的力量无法完全发挥出来，说不定还有狭窄无法通过的地方。</p>
     <p>之后驴子，牛，鹿，骆驼，ryama等作为驮兽有名吗？总之，最好是脚结实，能够承受负荷的长距离移动的动物。</p>
     <p>但是要说哪个都适合迷宫的话微妙。</p>
+    <br>
     <p>“店主，有没有适合搬运货物的魔物？</p>
     <p>如果可能的话，在像迷宫一样的封闭空间里也能不感到压力地进行活动就好了”</p>
+    <br>
     <p>梅赛德斯看着关在笼子里的魔物，向店主询问。</p>
     <p>于是店主心领神会，马上给我们出示了一个笼子。</p>
+    <br>
     <p>“这样的话，我推荐‘克拉伊利亚’。</p>
     <p>这是迷宫内最适合搬运货物的魔物”</p>
+    <br>
     <p>果然，这种时候的回答最快的应该是专业人士吧。</p>
     <p>到现在为止，肯定也有很多客人和梅赛德斯一样来这家店。</p>
     <p>对了，行李搬运也是重要的作用之一。</p>
@@ -32,14 +36,16 @@
     <p>被店主引导的牢笼中的是和梅赛德斯身高一样高的奇妙魔物。</p>
     <p>整体的形状像犀牛吗？岩石般的皮肤和结实的四条腿引人注目。</p>
     <p>嘴像鸟嘴一样尖，鼻尖有一根，头部有两根角。</p>
-    <p>脖子上有保护要害的围巾，外表看起来就像是把前世图鉴中看到的Trikeratopusu缩小了一样。</p>
+    <p>脖子上有保护要害的围巾，外表看起来就像是把前世图鉴中看到的三角龙缩小了一样。</p>
     <p>眼睛很平静，在笼子里咯吱咯吱地嚼着草。</p>
+    <br>
     <p>“这家伙是克拉伊利亚。</p>
     <p>性情温和，容易养熟，说的事也会听。</p>
     <p>持久力出色，使之拿重的行李也不颤动。</p>
     <p>另外，平时虽然很老实，但认真奔跑时的速度却轻易地超过了马”</p>
     <p>“好啊。买这个吧，多少钱？”</p>
     <p>“变成三十万Elka”</p>
+    <br>
     <p>作为随身行李的小型触发器……原来，立即购买了攀岩。这样行李就保管好了。</p>
     <p>在这里，梅赛德斯没有马上潜入迷宫，当天就回去一次，花了数天时间对克莱利亚进行教育。</p>
     <p>在训练的同时，通过多次进行让哈尔巴德熟识的训练，与本凯和小黑交织的模拟战来提高战斗力。</p>
@@ -50,34 +56,40 @@
     <p>如果看到现在为止由于潜水好多次制作了的地图清楚地明白应该通过哪里。至今为止的行动都不是徒劳的。</p>
     <p>消耗最小限度，战斗也最小限度。</p>
     <p>只有必须打倒的对手，梅赛德斯他们以惊人的速度冲破地牢。</p>
-    <p>“普鲁普尔，是我不好的果冻。”</p>
+    <br>
+    <p>“噗噜噗噜，是我不好的果冻。”</p>
     <p>“又是你啊。这次来攻略迷宫了。也许再也不会见面了”</p>
-    <p>“加油！”</p>
+    <p>“噗噜噗噜，加油啊！”</p>
     <p>“谢谢”</p>
+    <br>
     <p>这个果冻在必须通过的位置，所以即使不愿意也要见面。</p>
     <p>梅赛德斯用哈尔巴德斩杀他的核心，向前迈进。</p>
     <p>向下、向下、一味向下。</p>
     <p>虽然不知道是什么样的结构，但越往里走，阶层的宽度就会发生变化，变得像迷宫一样。</p>
-    <p>原来如此，原来是トライヌ把食物吃光了。经常在最短的道路上前进的梅赛德斯，一日也不能攻略。</p>
+    <p>原来如此，原来是トライヌ把食物吃光了。一直以最短路线前进的梅赛德斯，也不能一日攻略。</p>
     <p>本凯知道路，所以即使没有地图的地方也能很容易地发现通往下一个阶层的楼梯，真是值得庆幸的事。</p>
     <p>但即便如此，难易度还是越往里走，迷宫也越复杂。</p>
     <p>梅赛德斯通过事先预先预习、映射、本凯等伙伴，进展顺利，否则攻略将极为困难。</p>
     <p>初次见面就突然能攻略这个的家伙可以断言是怪物。</p>
     <p>但是，梅赛德斯的步伐也是从saker的常识来看，是十分出类拔萃的速度。</p>
     <p>潜入迷宫五日。仅仅如此而已，一行人就已经到达了最底层。</p>
+    <br>
     <p>「主。下一个二十五层是最下层。</p>
     <p>在那之前应该休息一下吗？”</p>
     <p>“知道了。那么今天在这里休息，明天称霸最下层”</p>
+    <br>
     <p>不使用任何物品，食物也还有足够的富余。</p>
     <p>这样的话，再往返三次也没问题吧。</p>
     <p>梅赛德斯把罐头打开，用叉子吃里面的魔鬼肉。</p>
     <p>然后吃了一块板状巧克力，决定那天睡觉。</p>
     <p>看守是交替制，一个人睡四个小时。</p>
     <p>第二天——梅赛德斯他们在作为目的的门前，与被命名为本凯之前的阿修拉奥加对峙着。</p>
-    <p>“你来了，求宝者。但是今后只要有我在就不会前进”</p>
-    <p>“原来如此，你真的在啊，本凯”</p>
+    <br>
+    <p>“你来了，求宝者。但是在这之前只要有我在就不可能前进”</p>
+    <p>“原来如此，真的有个你啊，本凯”</p>
     <p>“主”</p>
     <p>“我知道。交给你了”</p>
+    <br>
     <p>本凯走到阿修拉奥加前面。</p>
     <p>虽然是相同的存在，但是二者却有着一目了然的差异。</p>
     <p>阿修拉奥加是梅赛德斯遇见时那样的外表，武器也只有六把剑。</p>
@@ -87,8 +99,10 @@
     <p>二人展开互相挥舞武器的剑戟，武器的性能也不同。</p>
     <p>阿修拉奥加不断地被击落武器，如果打开距离受到枪和十字弓的远距离攻击。</p>
     <p>不久，本凯一次也没有表现出危险的场面，将过去的自己的头砍飞了。</p>
+    <br>
     <p>“很漂亮。我看到了你的成长”</p>
     <p>“这也是因为和主人相遇的缘故。”</p>
+    <br>
     <p>武器有差别。但是比这更大的差距就是能力的差距。</p>
     <p>是的，单纯的本凯比阿修拉奥加要强。</p>
     <p>梅赛德斯确信。可以。我们很强。</p>
@@ -100,18 +114,23 @@
     <p>所以虽然知道梅赛德斯是与骄傲相近的感情，但还是坦率地认为自己变强了。</p>
     <p>抬头仰望，大小只有10米左右的门。前方有什么。</p>
     <p>有啥子不试着去不明白，只有困难的事确实吧。</p>
+    <br>
     <p>「那么，走吧。不管前面发生什么事，我都不想回去了。</p>
     <p>跟到地狱底下吧」</p>
-    <p>“御意”</p>
+    <p>“遵命”</p>
     <p>“汪！”</p>
+    <br>
     <p>一把手搭在门上，门就轻易地打开了。</p>
     <p>里面有一条用黄金涂饰的绚烂的一条道路。正如本凯所说的那样，前面还有一扇门，梅赛德斯毫不畏惧地打开了。</p>
     <p>然后在那前面的——大厅，还有那里的两扇门。</p>
     <p>右边的门是黄金。左边的门是漆黑。</p>
     <p>那简直就像是表示着前方的分歧点，梅赛德斯也不知不觉地紧张地鸣响着喉咙。</p>
-    <p>“很好地到这里来了。探索者哟」</p>
+    <br>
+    <p>“终于到这里来了啊。探索者哟」</p>
+    <br>
     <p>声音在广场中回响。</p>
     <p>令人意外的是那个是女人的声音。说不定是少年的声音,不过，梅赛德斯用第一印象暂且，想这个声音的主人是女人。</p>
+    <br>
     <p>“在你面前有两扇门。打开的只有一次。</p>
     <p>如果要追求名誉和宝物的话，请打开黄金之门。那里有光荣的约定。</p>
     <p>没有困难。你完成了。</p>
@@ -120,11 +139,13 @@
     <p>但是，选择这扇门的人再也无法打开黑色的门。黑之门不再出现在他面前。</p>
     <p>将黑之门的存在从记忆中抹去，你将永远无法进入通往真实的道路。</p>
     <p>这不仅仅是这个迷宫的故事，进入任何迷宫都是一样的事情。通往真实的门扉只有一次”</p>
+    <br>
     <p>“要寻求真实的话，请打开黑之门。那里有困难和考验。</p>
     <p>赌上性命，如果能战胜考验，你就能接触到世界的真实的一面。</p>
     <p>但是这个考验没有出息。如果输了，你就会丧命，失去一切。</p>
     <p>来挑选吧。得到真实还是失去一切？还是要得到荣耀？</p>
     <p>只能选择一次。从这里返回的话，两扇门都不会再打开”</p>
+    <br>
     <p>梅赛德斯听完声音，然后想。</p>
     <p>真是坏心眼的两种选择。</p>
     <p>一般来说，连烦恼的必要都没有……黄金之门只有一扇。</p>
@@ -140,9 +161,18 @@
     <p>所以迷宫至今仍有七成没有被攻占，留在了世界，或者说现在又在什么地方出现了。</p>
     <p>相反，被完全攻略，复活的事也没有了的三成……选择了黑色的门，战胜了困难？</p>
     <p>这样想的话，有一定程度的说明。</p>
-    <p>“……本凯，小黑。觉悟真好”</p>
-    <p>“哈”</p>
-    <p>“妈！”</p>
-    <p>梅赛德斯跟后面的一个人一只地确认了一下，然后向前看。</p>
+    <br>
+    <p>“……本凯，小黑。做好觉悟了吗”</p>
+    <p>“是”</p>
+    <p>“汪呜！”</p>
+    <br>
+    <p>梅赛德斯向后面的一人一狗地确认了一下，然后向前看。</p>
+    <br>
     <p>“——请打开黑色的门。挑战一下考验什么的吧”</p>
+    <p class="divline"></p>
+    <p>クライリア（饶了我吧……）</p>
+
+    <p>梅赛德斯「你在门前待机」</p>
+
+    <p>クライリア（好耶耶耶耶耶耶！）</p>
 </body>
