--- a/OEBPS/Text/c032.xhtml
+++ b/OEBPS/Text/c032.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>32.  主人的特权</h1>
+    <h1>32. 主人的特权</h1>
     <p>“继承……是吗？”</p>
     <p>梅赛德斯反复回味父亲的话语，伯恩哈特静静地点了点头。</p>
     <p>迷宫是攻略者的所有物，据说也可以用来继承这血统的人。</p>
@@ -72,7 +72,7 @@
     <p>“嗯”</p>
     <p>梅赛德斯想，这个暂且保留可以吗？</p>
     <p>能增加本凯在战斗力上是魅力,不过，增加只服从自己的本凯后世的吸血鬼也只是困扰吧。</p>
-    <p>“接下来，更新形状。老板可以随时改变主人钥匙的形状，但是子孙们做不到”</p>
+    <p>“接下来，更新形状。BOSS可以随时改变主人钥匙的形状，但是子孙们做不到”</p>
     <p>梅赛德斯现在把万能钥匙的形状做成哈尔巴德。</p>
     <p>这个随时可以变更,不过，如果梅赛德斯的子孙继承了主人钥匙好象不能从哈尔巴德变更。</p>
     <p>可以说是质朴严厉的束缚。</p>
@@ -87,7 +87,7 @@
     <p>《YES。但，如果守护者万一被破坏了，地牢的功能24小时左右停止了。呼叫时请注意”</p>
     <p>曾经使梅赛德斯们痛苦的舒瓦兹·希特里埃现在仍然是一对一无法战胜的强敌。</p>
     <p>虽然说那个带有风险，但是能站在我方上是相当大的。</p>
-    <p>“话说回来，老板。玛娜剩了很多，怎么样？”</p>
+    <p>“话说回来，BOSS。玛娜剩了很多，怎么样？”</p>
     <p>“多少？”</p>
     <p>“数值化以便于理解”</p>
     <p>【迷宫点：600】</p>
