--- a/OEBPS/Text/c055.xhtml
+++ b/OEBPS/Text/c055.xhtml
@@ -25,7 +25,7 @@
     <p>但是仔细想想，小龙这个名字不是奥尔克斯的语言。</p>
     <p>名称在各国都不同。比如，猫在英语中是猫，在意大利语中是Gatt或者Gatta。</p>
     <p>但是，总觉得这个世界上的名称是……至少生物的名字一旦决定下来，基本上就会被固定下来。</p>
-    <p>椅子和桌子等根据各国名称也不同吧,不过，如果只限于魔物统一的可能性高(贵)。</p>
+    <p>椅子和桌子等根据各国名称也不同吧,不过，如果只限于魔物统一的可能性更高。</p>
     <p>回想起来，华尔街·果冻等明显是别的国家的语言。</p>
     <p>在这种无关紧要的杂学和Zeverfu说话的时候，战斗已经开始了。</p>
     <p>果冻和小龙互相殴打，稍显劣势。</p>
@@ -33,7 +33,7 @@
     <p>史莱姆系不耐火焰。幻想的常识。</p>
     <p>「喵—！我是燃烧的果冻哦！”</p>
     <p>“算了，回去吧。”</p>
-    <p>如果就这样放任不管的话，果冻会死，所以回到了蓝天蓼蓝老板的钥匙，小黑替换着飞了出去。</p>
+    <p>如果就这样放任不管的话，果冻会死，所以回到了蓝天蓼蓝BOSS的钥匙，小黑替换着飞了出去。</p>
     <p>用眼睛也止不住的敏捷咬小龙的脚，使之下降。</p>
     <p>接着，本凯挥下大剑，斩断了尾巴。</p>
     <p>小龙也马上站起来,不过，此次在那里梅赛德斯自己跳入了。</p>
@@ -52,7 +52,7 @@
     <p>“主人。这个龙，装备着奇怪的手镯”</p>
     <p>我们回去吧。这样想着，施厚拿来了手镯。</p>
     <p>明明是龙却装备了什么。</p>
-    <p>这么说来，接待处好像也说这里的老板有一些豪华的装备。</p>
+    <p>这么说来，接待处好像也说这里的BOSS有一些豪华的装备。</p>
     <p>《嗯。看来使用火焰的时候有提高火力的效果”</p>
     <p>“是火属性的支持吗？对我来说不会用啊”</p>
     <p>此次的宝物是火属性用的辅助器具,不过，梅赛德斯的属性是风和地。用不着。</p>
