--- a/OEBPS/Text/c079.xhtml
+++ b/OEBPS/Text/c079.xhtml
@@ -11,29 +11,29 @@
 
 <body>
     <h1>79. 譲渡の儀</h1>
-    <p>　女帝ベアトリクスを捕獲して去年からの一連の事件を終わらせたメルセデスは無事に日常へと戻っていた。</p>
+    <p>　女帝ベアトリクスを捕獲して去年からの一連の事件を終わらせた梅赛德斯は無事に日常へと戻っていた。</p>
     <p>　ベアトリクスをダンジョン内に閉じ込めている事はハンナにすら教えていない。どう考えても騒ぎにしかならない特大の爆弾だからだ。</p>
     <p>　ましてや実質的に帝国の支配者になってしまったなどと、言えるわけがない。</p>
     <p>　なので表向きは普段と変わらず、しかし裏では確実に状況は変わっていた。</p>
     <p>　まず帝国は、オルクスから全面的に手を引いて今までと１８０度変わった和平路線で対談を進めているという。</p>
     <p>　偽ベアトリクスとは魔物を使った手紙でやりとりをしているが、バレる事なく帝国を統治してくれているようだ。</p>
     <p>　毎回手紙の文末に添えられた求愛の文章が鬱陶しい。</p>
-    <p>　また、偽ベアトリクスの計らいでメルセデスは彼女の友人という扱いになり、自由に帝国を出入り出来るようになった。</p>
+    <p>　また、偽ベアトリクスの計らいで梅赛德斯は彼女の友人という扱いになり、自由に帝国を出入り出来るようになった。</p>
     <p>　これについて疑問を抱く者は意外にもなく、普段からベアトリクスがどれだけ自分の欲に忠実に振舞っているのかが分かる。</p>
-    <p>　急な路線変更もメルセデスやジークリンデ、そしてフェリックス（女装）を気に入ったからで納得されてしまったらしい。もう駄目だあの国。</p>
+    <p>　急な路線変更も梅赛德斯やジークリンデ、そしてフェリックス（女装）を気に入ったからで納得されてしまったらしい。もう駄目だあの国。</p>
     <p>　また、偽ベアトリクスに鉄扇を持たせてみたが魔物を出す事は出来なかった。</p>
     <p>　血縁以上にベアトリクスに近いはずなのだが、クローンでは王剣は使えないらしい。</p>
     <p>　どういう見分け方をしているのかは分からないが、神の技術か何かで本物とクローンを見分けているのだろう。</p>
     <p>　つまりベアトリクスを増やす事は可能だが、ダンジョンを使えるのはあくまで継承したオリジナルのみ、という事になるらしい。</p>
-    <p>　また、メルセデス本人をクローンで増やす事は不可能だった。</p>
+    <p>　また、梅赛德斯本人をクローンで増やす事は不可能だった。</p>
     <p>　ツヴェルフ曰く、攻略者は増やせないらしい。</p>
     <p>　何故なのかは残念ながら答えてくれなかった。</p>
     <p>　理由は、ナノマシンの説明の時にも言われた『情報規制』……つまり、ダンジョン一つの所有権だけで語られる情報の限界だ。</p>
     <p>　ダンジョンを持たない者では辿り着ける限界があり、ダンジョンを持っていても継承者には語られぬ事実がある。</p>
     <p>　そしてダンジョンを攻略しても尚、真実には至らない。</p>
-    <p>　だからメルセデスは、まずツヴェルフにかかっている情報規制を解く事を考えた。</p>
+    <p>　だから梅赛德斯は、まずツヴェルフにかかっている情報規制を解く事を考えた。</p>
     <p>　つまりは……手持ちのダンジョンを増やす。それこそが自分のするべき事だと考えたのだ。</p>
-    <p>　故にメルセデスは今、学園から離れた平原にベアトリクスと一緒に立っていた。</p>
+    <p>　故に梅赛德斯は今、学園から離れた平原にベアトリクスと一緒に立っていた。</p>
     <p>『では、これよりダンジョン譲渡の儀を行います。よろしいですね？』</p>
     <p>「ああ」</p>
     <p>　ダンジョンは、その所有権を移動させる事が出来る。</p>
@@ -51,7 +51,7 @@
     <p>　故に自分の力以外を使う事は許されない。</p>
     <p>　例外となるのは、ダンジョンの所有権とは無関係に自力で捕獲した魔物くらいだ。</p>
     <p>　一応、ダンジョンで手に入れた財宝くらいは使用が認められているので完全にダンジョンの恩恵がないわけではない。</p>
-    <p>　つまり今回メルセデスが使えるのは、ダンジョンの機能を制限されたブルートアイゼンと、ベンケイ、クロ、シュフ、ピーコの四体。</p>
+    <p>　つまり今回梅赛德斯が使えるのは、ダンジョンの機能を制限されたブルートアイゼンと、ベンケイ、クロ、シュフ、ピーコの四体。</p>
     <p>　それから防具と、魔石などのアイテム類も勝敗を分ける重要な要素だろう。</p>
     <p>　それと一つ……隠し玉として五体目の魔物もいるにはいるが、これは切り札なので出番は出来れば無い方がいい。</p>
     <p>『それではマスター、ダンジョン譲渡の儀に挑みますか？』</p>
@@ -59,22 +59,22 @@
     <p>　ダンジョン譲渡は出来れば早急に済ませておきたい事だった。</p>
     <p>　制覇の為にもダンジョンを手に入れたいというのもあるが、それ以上にベアトリクスの事を信用していないのだ。</p>
     <p>　だから何か企んでいたとしてもいいように、先にダンジョンという力を剥奪する事こそが今回の目的である。</p>
-    <p>「メルセデスよ。私も手伝おうか？」</p>
+    <p>「梅赛德斯よ。私も手伝おうか？」</p>
     <p>「要らん。ダンジョンの中で大人しくしていろ」</p>
     <p>「ふふ、警戒されたものだな」</p>
     <p>　後ろから撃たれては面倒なので、ダンジョンの所有権を手放した後にベアトリクスはブルートアイゼン内に閉じ込める予定だ。</p>
     <p>　これが、ダンジョンのシステムで絶対に裏切らない事が保証されている偽ベアトリクスの方ならば参戦させてもよかったのだが、オリジナルは駄目だ。</p>
-    <p>　なので今回はあくまで、メルセデス自身と魔物達だけで挑む事に決めていた。</p>
+    <p>　なので今回はあくまで、梅赛德斯自身と魔物達だけで挑む事に決めていた。</p>
     <p>『では、守護者の間に転送します。</p>
     <p>儀が終わるまで私は一切のサポートを行えません。</p>
     <p>マスター……ご武運を』</p>
-    <p>　その言葉を最後に、メルセデスの視界に広がる景色が一変した。</p>
+    <p>　その言葉を最後に、梅赛德斯の視界に広がる景色が一変した。</p>
     <p>　まるで密林の奥のような、木々と花に埋め尽くされた奇妙な空間に放り込まれたのだ。</p>
     <p>　恐らくはここがベアトリクスの所有していたダンジョンの最奥……試練の部屋だ。</p>
     <p>　今回は黒の扉か金の扉かの選択はない。</p>
     <p>　試練に挑むと決めているのだから、最初から黒一択だ。</p>
     <p>「真実に挑む者よ。よくぞ来た」</p>
-    <p>　メルセデスを出迎えたのは、全長２０ｍほどの巨大な女性であった。</p>
+    <p>　梅赛德斯を出迎えたのは、全長２０ｍほどの巨大な女性であった。</p>
     <p>　全体的なフォルムは人間の美女だが、所々に違いがある。</p>
     <p>　まず肌の色は緑色で、頭の上にはラフレシアのような巨大な花が帽子のように乗っている。</p>
     <p>　服と呼べるものはなく、裸体だが不思議と嫌らしさはない。</p>
@@ -84,7 +84,7 @@
     <p>「ここまで来た者に余計な言葉は最早不要。真実を求めるならば力を示すがよい。</p>
     <p>ただし……出来るのならば」</p>
     <p>　声色こそ違うが、台詞そのものはヒストリエとよく似ている。</p>
-    <p>　もしかして、守護者は全員この名乗りをしなければいけないのだろうか、とメルセデスは考えた。</p>
+    <p>　もしかして、守護者は全員この名乗りをしなければいけないのだろうか、と梅赛德斯は考えた。</p>
     <p>「我が名はパラディース。人が夢想し、逃げ込む幻想。</p>
     <p>真実に挑む者よ。お前もまた、私の幻想で包み込んでやろう」</p>
     
@@ -97,7 +97,7 @@
     <p>“我走了！”</p>
     <p>梅赛德斯踢地跳跃，与此相应的本凯他们也散开了。</p>
     <p>梅赛德斯的实力比上次的历史战有所提高，加上这次史蒂夫和皮可。</p>
-    <p>而且这次是突如其来的地牢攻击，与老板对战。</p>
+    <p>而且这次是突如其来的地牢攻击，与BOSS对战。</p>
     <p>也就是说，比起上次的挑战，以压倒性的有利条件开始了战斗。</p>
     <p>活用这个优势，一口气干完……帕拉迪斯若无其事地用胳膊防住了由于那个气势被放出了的梅赛德斯的斩击。</p>
     <p>“……！”</p>
@@ -125,9 +125,9 @@
     <p class="divline"></p>
     <p>ヒストリエ：精神攻撃がクッソえげつない分、戦闘力そのものは守護者の中では控えめ。</p>
     <p>実は下から数えた方が早いくらいの弱さ。</p>
-    <p>ただし、精神攻撃も含めた総合性能では決して他守護者に劣っていない。てゆーかまともな精神の持ち主相手ならば一番やばいが、メルセデスにとっては相性の問題で守護者最弱だった。</p>
+    <p>ただし、精神攻撃も含めた総合性能では決して他守護者に劣っていない。てゆーかまともな精神の持ち主相手ならば一番やばいが、梅赛德斯にとっては相性の問題で守護者最弱だった。</p>
     <p>パラディース：ヒストリエのような精神攻撃がない分、単純に強い上に再生もする。</p>
-    <p>対メルセデスならばヒストリエよりも遥かに強力。</p>
+    <p>対梅赛德斯ならばヒストリエよりも遥かに強力。</p>
     <p>発している香りには睡眠、混乱、幻覚、毒、沈黙など様々な状態異常を起こす効果がある。</p>
     <p>ぶっちゃけると臭い息。</p>
     <p>キス〇ィス先生にバンバン使わせていたのは私だけではないはず。</p>
