--- a/OEBPS/Text/c080.xhtml
+++ b/OEBPS/Text/c080.xhtml
@@ -11,13 +11,13 @@
 
 <body>
     <h1>80. 新的魔法</h1>
-    <p>　メルセデス達が幾度となくパラディースへ攻撃を加える。</p>
+    <p>　梅赛德斯達が幾度となくパラディースへ攻撃を加える。</p>
     <p>　腕を斬り、胴を突き、首を噛み、頭を貫いて背中を焼く。</p>
     <p>　だがどんなにダメージを与えても、即座に再生しては反撃に転じてくる。</p>
     <p>　こういう再生し続ける輩はどこかに急所があるのが定番のはずだが、それも見当たらない。</p>
     <p>　頭も首も、心臓も、急所と思える場所は全て攻撃した。</p>
     <p>　だが頭を貫かれようと、首を斬られようと再生し、心臓に至ってはそもそも存在していない。</p>
-    <p>　一方メルセデス達は確実にダメージが蓄積され、疲労も溜まる。</p>
+    <p>　一方梅赛德斯達は確実にダメージが蓄積され、疲労も溜まる。</p>
     <p>　このまま続ければどちらが勝つかは明らかであった。</p>
     <p>「おおォ！」</p>
     <p>　ハルバードに重力を乗せて薙ぎ払う。</p>
@@ -25,7 +25,7 @@
     <p>　そして生えたばかりの頭は大きく息を吸うと、圧縮した空気を弾丸のように吐き出す。</p>
     <p>　咄嗟にガードするも吹き飛ばされて壁に衝突し、地面に膝を突いた。</p>
     <p>「くそ……っ」</p>
-    <p>　メルセデスはハルバードを支えに立ち、パラディースを見上げる。</p>
+    <p>　梅赛德斯はハルバードを支えに立ち、パラディースを見上げる。</p>
     <p>　手強い……素直にそう思った。</p>
     <p>　決して慢心していたつもりはない。しかし以前にも守護者に勝ったのだからと、何処か心に余裕のようなものがあったのは確かだ。</p>
     <p>　加えて以前より武器も防具も、己の技量も味方の数も増えている。</p>
@@ -37,17 +37,17 @@
     <p>　冒険心に溢れた者、最初から命を捨てる気で来ている者、あるいは自分のような者……そうした者達が黒の扉を選んだ事は何度もあるはずだ。</p>
     <p>　だがそれでも攻略者はほとんど現れていない。何故か？</p>
     <p>　――それだけ、打倒守護者が困難だという事だ。</p>
-    <p>　メルセデスのパーティーは、過剰戦力と言っていいレベルで強い。</p>
+    <p>　梅赛德斯のパーティーは、過剰戦力と言っていいレベルで強い。</p>
     <p>　ベンケイはかつてBランクのシーカー十二人で構成されたトライヌの護衛を壊滅させているし、シュフはベルンハルト邸の私兵を全滅させた上でフェリックスにも難なく勝利している。</p>
     <p>　クロとピーコも十分に強力な魔物だ。</p>
-    <p>　そして彼等は捕獲した当時よりも力を増しており、メルセデス自身もまたそれらに勝利して捕獲するだけの実力がある。</p>
+    <p>　そして彼等は捕獲した当時よりも力を増しており、梅赛德斯自身もまたそれらに勝利して捕獲するだけの実力がある。</p>
     <p>　だがそれらを纏めて相手にしても圧倒するのが守護者だ。</p>
-    <p>　メルセデスの認識が甘かった……守護者は決して簡単な相手ではない。</p>
+    <p>　梅赛德斯の認識が甘かった……守護者は決して簡単な相手ではない。</p>
     <p>　以前はたまたま、相性のいい相手とぶつかったに過ぎなかったのだ。</p>
     <p>「ギャン！」</p>
-    <p>　クロが触手で殴られてメルセデスの近くまで吹き飛ばされた。</p>
+    <p>　クロが触手で殴られて梅赛德斯の近くまで吹き飛ばされた。</p>
     <p>　そのすぐ後にピーコも叩き落され、地面で目を回している。</p>
-    <p>　メルセデスはすぐに、彼等がこれ以上の追撃を受けないように重力で吸い寄せてパラディースから離れた場所に避難させた。</p>
+    <p>　梅赛德斯はすぐに、彼等がこれ以上の追撃を受けないように重力で吸い寄せてパラディースから離れた場所に避難させた。</p>
     <p>　それから、ベンケイ達とパラディースの戦いを観察する。</p>
     <p>　このまま闇雲に攻撃を繰り返しても突破口は開けない。</p>
     <p>　思考を停止しての脳筋戦法にも限界はあるのだ。</p>
@@ -60,11 +60,11 @@
     <p>　もしかしたら、そちらが弱点の可能性はあるが……しかしだからといってすぐに攻撃出来るものではない。</p>
     <p>　まず、地面から生えているパラディースが邪魔だし、これを排除しようとしてもすぐに再生されてしまう。</p>
     <p>「ならば引き抜くまで！　『ベフライエン』！」</p>
-    <p>　メルセデスが一番最初に編み出した創作魔法の『ベフライエン』は、今でも飛行の際に使っている魔法だ。</p>
+    <p>　梅赛德斯が一番最初に編み出した創作魔法の『ベフライエン』は、今でも飛行の際に使っている魔法だ。</p>
     <p>　しかしこの魔法の正体は飛行魔法ではなく、重力遮断魔法である。</p>
     <p>　重力を遮断する事で無重力になり、結果的に飛んでいるような状態を作り出しているのだ。</p>
     <p>　そしてこの魔法を使う際の注意点が、完全な無重力にしてしまうと大気圏外にすっ飛んで自滅してしまうという事である。</p>
-    <p>　今回メルセデスはその魔法をパラディースに使った。</p>
+    <p>　今回梅赛德斯はその魔法をパラディースに使った。</p>
     <p>　しかも自分が使う時のように僅かな重力を残すといったものではない。</p>
     <p>　完全に、重力の束縛から解放してやったのだ。</p>
     <p>「……っ！？　お、おおお！？」</p>
@@ -123,14 +123,14 @@
     <p class="divline"></p>
     <p>パパン「よっしゃああああ！</p>
     <p>娘が私の魔法を使ってくれたあああ！」</p>
-    <p>マルギット「…………」じー</p>
+    <p>玛吉特「…………」じー</p>
     <p>パパン「はっ！？」</p>
     <p>パパン「……ふっ。所詮はぶっつけ本番。まだまだ未熟よ」キリッ</p>
     <p>貫咲 賢希様より有り難い事にイラストを頂けました。</p>
     <p>この場を借りて感謝を。（　´∀`）人</p>
     <p>挿絵(By みてみん)</p>
     <p>パパン「（゜∀゜三゜∀゜）」</p>
-    <p>マルギット「…………」じー</p>
+    <p>玛吉特「…………」じー</p>
     <p>パパン「はっ！？」</p>
     <p>それと、明日と来週の更新は申し訳ないのですが休みとさせて頂きます。</p>
     <p>この時期は確定申告やら何やらで色々時間を取られてしまって時間が取れぬのです。</p>
