--- a/OEBPS/Text/c089.xhtml
+++ b/OEBPS/Text/c089.xhtml
@@ -15,7 +15,7 @@
     <p>吸血鬼の行動時間帯が夜なのを失念してました。</p>
     <p class="divline"></p>
     <p>　フェリックスとマックス・ファイトの嫌な繋がりが見えてしまった翌日。</p>
-    <p>　メルセデスとハンナは早速、裏を取る為にとある場所を目指していた。</p>
+    <p>　梅赛德斯とハンナは早速、裏を取る為にとある場所を目指していた。</p>
     <p>　王都アーベントロートから馬車で七日ほど、ピーコならば一日で着く距離にあるシュピラーレという都市が今回の目的地だ。</p>
     <p>　ここら一帯はシェーンベルク侯爵家が治める土地であり、海に面している為に豊富な海産物が名物となっている。</p>
     <p>　シェーンベルグは侯爵家の一つであり、公爵を除けば貴族の位としては最上位と言っていい。</p>
@@ -29,11 +29,11 @@
     <p>　その次の公爵は一応グリューネヴァルト家が該当するが、これも基本的にはいない。</p>
     <p>　公爵は貴族の中でも別格で、王族に限りなく近い発言力と影響力を持つ。</p>
     <p>　その次に位置するのが侯爵家だ。</p>
-    <p>　そしてメルセデスとハンナは、その侯爵家に用があってここまで来ていた。</p>
+    <p>　そして梅赛德斯とハンナは、その侯爵家に用があってここまで来ていた。</p>
     <p>　ピーコから降りて門を潜り、都市の中に入る。</p>
     <p>　シュピラーレはオルクスに比べれば劣るもののかなり賑わった都市だ。</p>
     <p>　その中でも一際目立つ大きな屋敷が今回の目的地であった。</p>
-    <p>　そこへ向かう道を歩きながら、メルセデスは気になった事をハンナへ尋ねる。</p>
+    <p>　そこへ向かう道を歩きながら、梅赛德斯は気になった事をハンナへ尋ねる。</p>
     <p>「件の人物はニクラス・ユンカースだったか。これから向かう屋敷とは家名が違うようだが？」</p>
     <p>「ニクラスは元々は子爵家なんだよ。けどシェーンベルク家に婿入りして家名が変わったの。</p>
     <p>だから今はニクラス・ユンカース・フォン・シュピラーレ・シェーンベルクっていう長ったらしい名前になってるよ」</p>
@@ -56,7 +56,7 @@
     <p>　まず祖父の世代に該当するのは今言ったニクラスに、それからアウグスト・アーベントロート。</p>
     <p>　次に親世代。ここに入るのはベルンハルトとハンナ、ヴァルブルガにイザーク、それから見た目は完全にジジイだったがフレデリックもここか。改めて考えると哀しい男である。</p>
     <p>　そして子世代が自分達だ。</p>
-    <p>　……もしかしてハンナは親世代の中ではかなり年長の部類なのでは？　メルセデスは訝しんだ。</p>
+    <p>　……もしかしてハンナは親世代の中ではかなり年長の部類なのでは？　梅赛德斯は訝しんだ。</p>
     <p>「あ、着いたよ」</p>
     <p>　ハンナの声で意識が現実に引き戻される。</p>
     <p>　到着したそこは立派な屋敷で、屋根には……何だろう？</p>
@@ -64,14 +64,14 @@
     <p>　金色のソフトクリームだろうか？</p>
     <p>　茶色にすると少しやばい気がする。</p>
     <p>「ちょっと待っててね。門番の人に話を通して来るから」</p>
-    <p>　ハンナがそう言いながら歩いていくのを見送り、メルセデスは改めて屋敷を見る。</p>
+    <p>　ハンナがそう言いながら歩いていくのを見送り、梅赛德斯は改めて屋敷を見る。</p>
     <p>　貴族は親戚だらけ……なるほど。</p>
     <p>　何かこの特徴的なグルグルはどこかで見たような気がしないでもない。</p>
     <p>　覚えていないと言う事は影の薄い、どうでもいい奴だったという事なのだろうが……きっとこの家も、自分が知る誰かの親戚か、あるいは実家なのだろう。</p>
     <p>◆</p>
-    <p>　それからしばらくして、メルセデス達は応接室へと通された。</p>
+    <p>　それからしばらくして、梅赛德斯達は応接室へと通された。</p>
     <p>　アポなし突撃であったが、かつての上司の訪問ともなれば通さないわけにはいかないのだろう。</p>
-    <p>　やや目に眩しい装飾で飾られた豪華な応接室でメルセデスとハンナを出迎えたのは一組の夫婦だ。</p>
+    <p>　やや目に眩しい装飾で飾られた豪華な応接室で梅赛德斯とハンナを出迎えたのは一組の夫婦だ。</p>
     <p>　男の方は黒髪の、何だかパッとしない顔立ちの男だ。</p>
     <p>　不細工ではないが美形でもない。</p>
     <p>　外見年齢は三十代前半くらいだろうか。少し頬が痩せこけている。</p>
@@ -96,12 +96,12 @@
     <p>　彼女は特に動揺も見せずに、静かに言う。</p>
     <p>「真の王とやらを掲げる一団ですか」</p>
     <p>「多分ね。私達が来なかったら貴方達、今日の朝にでも殺られてたよ」</p>
-    <p>　大したものだな、とメルセデスは素直に感心した。</p>
+    <p>　大したものだな、と梅赛德斯は素直に感心した。</p>
     <p>　気配の探知……言葉にすれば簡単だが、そんな漫画のような技能が実際に出来るかと言えば難しいだろう。</p>
     <p>　フィクションではよく、『木の陰に一人、後ろの壁に二人、向かいの建物の裏に二人……合計五人か』とか恰好よく言ってたりするし、更に飛躍した表現では遥か遠くのビルにいる敵に気付くような描写もあったりする。</p>
     <p>　だが、普通に考えてそんな事が分かるわけがない。</p>
     <p>　背後から僅かな物音などがすれば分かるかもしれないが、視覚、聴覚、触覚のどれにも接触しなければ気付く事など出来ないだろう。</p>
-    <p>　恐らくは空気中のナノマシンが何か影響して、それでハンナは感知出来ているのだろうが、今度やり方を教えてもらいたいな、などとメルセデスは呑気に考えていた。</p>
+    <p>　恐らくは空気中のナノマシンが何か影響して、それでハンナは感知出来ているのだろうが、今度やり方を教えてもらいたいな、などと梅赛德斯は呑気に考えていた。</p>
     <p>　そして少しややこしいが、吸血鬼にとっては夜が一日の始まりで朝が終わりだ。</p>
     <p>　なので『今日の朝』という少しおかしな表現になってしまう。</p>
     <p>「詳しい話は明日にでも聞くとして、今日、泊まっていっていいかな？」</p>
@@ -117,7 +117,7 @@
     <p>「分かりました。では何としても今日中にネズミを全て駆除してみせます」</p>
     <p>「頼りにしています。何か必要なものはありますか？」</p>
     <p>「んー……では、いくつか」</p>
-    <p>　夫人とハンナが話すのを聞きながら、メルセデスは何となく天井に意識を向けてみた。</p>
+    <p>　夫人とハンナが話すのを聞きながら、梅赛德斯は何となく天井に意識を向けてみた。</p>
     <p>　やはり何も分からない。</p>
     <p>　だがまあ、ハンナがいると言った以上はいるのだろう。</p>
     <p>　ならば自分はただ、目の前に現れた敵を潰せばいい。</p>
@@ -125,14 +125,14 @@
     <p>「勿論メルちゃんにも働いてもらうよ。こっち側の最大戦力だしね」</p>
     <p>「分かった。指示に従おう」</p>
     <p>　自分が下手に動いてもネズミを逃がしてしまうだけだ。</p>
-    <p>　極論から言えばメルセデスが夫妻の近くで待機していれば暗殺を防ぐ事は出来る。</p>
-    <p>　だが逃げるネズミを捕まえるのはメルセデスには難しい。</p>
-    <p>　ここはハンナのお手並み拝見だな。そう思いながらメルセデスは静かに戦意を高めていた。</p>
+    <p>　極論から言えば梅赛德斯が夫妻の近くで待機していれば暗殺を防ぐ事は出来る。</p>
+    <p>　だが逃げるネズミを捕まえるのは梅赛德斯には難しい。</p>
+    <p>　ここはハンナのお手並み拝見だな。そう思いながら梅赛德斯は静かに戦意を高めていた。</p>
     <p>　そして、事態についていけてないニクラスは、やけに頼もしい女性三人を見ながら呆けていた。</p>
     <p class="divline"></p>
     <p>※ニクラスさんの髪の色を間違えて金髪にしていたので黒に修正しました。</p>
     <p>夫人「余談ですが、実は頭のこれ、回転します」ギュイイイイン</p>
-    <p>メルセデス（本当に髪か、それ……？）</p>
+    <p>梅赛德斯（本当に髪か、それ……？）</p>
     <p>【頭にウンコ乗せた夫人】</p>
     <p>ヴァルブルガの母であり、フェリックスの祖母。</p>
     <p>不老期が遅かったが、それがマイナスではなくプラスに働いた希少なタイプ。</p>
