--- a/OEBPS/Text/illustration.xhtml
+++ b/OEBPS/Text/illustration.xhtml
@@ -13,7 +13,7 @@
     <p>转生为吸血鬼的主人公。</p>
     <p>可是出生的家是贵族,不过，母亲是侧室一人待遇恭维也不能说。</p>
     <p>与母亲一起被破烂的房子隔离，就这样不知不觉被扔掉的事明白。</p>
-    <p>现在因为有继承权勉强能生活着,不过，总有一天家本妻的孩子继承吧。</p>
+    <p>现在因为有继承权勉强能生活着,不过，总有一天家正妻的孩子继承吧。</p>
     <p>尽管这样也无所谓，但是不管怎样，被抛弃的时候必须要做好能够靠自己的力量生存的准备。</p>
     <p>幸运的是，这个世界有迷宫，有潜伏在那里的寻人这样的工作。</p>
     <p>那么目标是称霸迷宫。</p>
